--- a/gnews/12.md
+++ b/gnews/12.md
@@ -1,23 +1,28 @@
 ---
-title: 樱花FM&#124;从2008的“北京欢迎你”到2022的“北京整死你”
+title: 有声｜要求彻查八孩母事件 中共国高校学子接力联署
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013286/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013394/)
 
-音频：东京樱花团/战友520
-![](https://lh6.googleusercontent.com/NRRTnyfmnDjoCf3q-PCoTqGbnpxgXtAgdU86we90daGZd8eyXshftRhkUpLxMgGiL7KGbnaahVDd2SDTTXrPNWSrqXPGXVfwEEkPSGYMFBfMHqA19WIWoe2tkyEChB6LxCGW9sx4)
-2月9日共同社北京消息：国际奥委会发言人亚当斯在例行新闻发布会上说，由于 “法律问题”，原定8日晚的北京冬奥会花样滑冰队的颁奖仪式被取消。由于这是个新问题，已经与国际滑冰联盟进行了必要的法律磋商。待确认结果明确后，我们将提供信息。
+**By:秘翻新闻**
 
-奥运专题媒体报道，获得金牌的ROC涉嫌使用兴奋剂。同时，一家俄罗斯报纸的电子版报道说，有关8日的男子SP比赛中，日本选手羽生结弦因卡在冰窟窿里而失跳，ROC在表演前就收到羽生结弦粉丝的死亡威胁，颁奖仪式被取消。
+***2022-02-16***
+![](https://assets.gnews.org/wp-content/uploads/2022/02/99999.png)
+[新唐人](https://m.ntdtv.com/gb/2022/02/15/a103348706.html)北京时间02月16日消息。中共徐州官方关于“八孩母”事件的所谓“调查结果”出台后，网络上开始大面积消声。但中共国多个高校学子开始接力联合署名，要求彻查真相。但联署信遭遇封杀。
 
-新中国联邦把北京冬奥会打成了冬眠会，中共自己还添把火，把北京冬奥会直接打成了要命会！
+2月15日，微博上出现题为“100位北大学子呼吁彻查徐州被拐女子事件”的联署公开信。信中直言徐州官方的“调查结果”前后不一，漏洞百出，要求北京当局彻查“八孩母”真相，严厉打击拐卖妇女儿童犯罪。参与联署的多为已经毕业的北大校友。
 
-不由得想起了当年：２００８年北京奥运唱响了“北京欢迎你”，那一年的国庆，笔者受邀人民大会堂的 “国庆宴会”，代表们还被专用大巴拉去水立方和鸟巢参观。闲暇之余，海外归来的代表们调侃唱起了“北京整死你”……
+除北大外，清华、人大、浙大等几个名校校友都成立了“拐卖关注群”。北大联名信发出后，网友呼吁其它高校跟进。
 
-文字版原文：[从2008的“北京欢迎你”到2022的“北京整死你”](https://gnews.org/zh-hans/1978664/)
+徐州官方几次三番发出“八孩母”事件的不同“调查结果”后，网络开始大举删贴封号，据传四川公安也拒绝再追查“八孩母”是否是南充失踪女孩李莹。但网民的愤怒不息，关注度不减。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+“八孩母”被指未成年时就被拐卖到徐州，其容貌与当年被拐卖的四川南充未成年女孩李莹非常相似。出身徐州丰县的作家王圣强指出，当地人都知道“八孩母”就是李莹，但中共官方“不能让她是李莹”，因为李莹的父亲是军人，如果确认“八孩母”是李莹，会动摇军心。目前王圣强的相关帖文已经删除，据他说是遭遇了来自老家的压力。
+
+(秘翻新闻 二丫 编译报导)
+
+发布:星星
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
