--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,21 +1,46 @@
 ---
-title: 樱花FM&#124;东京大学副教授预测中共病毒的次生灾难：人荒将至
+title: 经济封锁者现因卡车司机的“经济影响”欲对其进行制裁
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013283/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013351/)
 
-音频：东京樱花团/战友520
-![](https://lh4.googleusercontent.com/tqRGmgMYFyPcmbi_bhZLeyC0O9rgriLNVZtWi319burlplVZiWoOoQp86onJ9GMhqS3n1B3g1iqm9e4eW5nQwhfuOmFfdrIGTDIhKjR4t6YSJBpFI0Pgj3Y2XivtR49y3iX00729)
-2月9日朝日电视报道：东京大学副教授仲田泰祐研究团队发表了他们的估计数字，由于经济不安感的增加和中共病毒（新冠病毒）带来的邂逅减少，2020年和2021两年失去的婚姻数量总计大约为11万。
+编译： Jenny Ball
 
-如果没有结婚人数增加作为填补，这将导致未来几年的出生人口数下降约21万。多年来，婚姻和出生率一直在下降，如果中共病毒的影响长期存在，可能会加速这一趋势。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1561.png)图片来源：newstarget.com
 
-笔者能想到的是，除此之外，中共病毒造成的大量死亡，也会成为人荒的到来的加速器。
+除了行使威权主义之外，民主党及其支持者唯一擅长的另一件事，就是虚伪，对正在进行的涉及加拿大卡车司机的自由车队抗议活动，大量传播虚伪的信息。
 
-文字版原文：[东京大学副教授预测中共病毒的次生灾难：人荒将至](https://gnews.org/zh-hans/1978653/)
+在过去的两年里，民主党人和他们的左翼马克思主义盟友，推动并实施了对他们的城市和州的封锁，理由是需要“阻止 COVID-19 的传播”，这破坏了他们的经济，并摧毁数百万美国人的生活和生计。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+更重要的是，他们毫不掩饰地宣扬要持久的封锁，并且对封锁造成的灾难毫无同情心——因为作为民选领导人，他们从来不用担心薪水或一顿饭。与此同时，人民则因试图谋生成了“罪行”而被捕、罚款或入狱，普通美国人被告知，经济远没有“拯救生命”重要。
+
+快进到今天。
+
+数以千计的加拿大卡车司机厌倦了毫无意义的 COVID-19 疫苗要求，特别是在持续的供应链危机中，民主党的大流行封锁的推动者首先制造这场危机，卡车司机们正在抗议让他们的政府放弃要求。他们通过封锁加拿大和美国之间最繁忙的国际桥梁之一来实现目标。
+
+他们知道这是商业交叉点之一；他们知道，每天约有 350 万美元的贸易额过桥。这正是他们选择这里抗议的原因。
+
+但现在，作为这场大流行病中最大的民主党伪君子之一，密歇根州州长格雷琴·惠特默（Gretchen Whitmer）要求对加拿大卡车司机采取行动，因为他们的抗议正在损害密歇根州的经济。
+
+**（点评：中国俗语：贼喊捉贼。）**
+
+所以，政府封锁摧毁了当地经济并伤害家庭两年是可以的，但是当卡车司机封锁道路四天，这就是恐怖主义？对经济造成“不可接受”的伤害？
+
+我们都不是孩子，我们知道民主社会对政府不满时，抗议可以解决问题（因为和平抗议之外的另一条路——暴力袭击和内战要糟糕得多）。
+
+**评论：荒唐，本末倒置。正是这些个威权主义决策级人物，剥夺了宪法赋予人民的权力所采取的长达两年之久的封锁和mRNA刺突蛋白毒药的强制注射，才让各国经济走向崩溃，让人民苏醒奋起抗议。加拿大卡车司机是最勇敢的人们，他们用行动在向那些独裁者们警告：人民捍卫自由的力量！**
+
+素材链接：[newstarget.com][Democrats who gleefully locked down economies for TWO years during pandemic now demand action against protesting Canadian truckers over “the economy”](https://www.newstarget.com/2022-02-13-democrats-shut-economies-now-concerned-about-economy.html)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
+
+
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
