--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,23 +1,32 @@
 ---
-title: 樱花FM&#124;五选手因服装被取消成绩 中共北京冬奥已毫无底线
+title: 有声｜网络爆料中共极端“清零”防疫的暴利黑幕
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013278/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013322/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/YNS0RWjKYffrrQJRSTS-J1SpriLUXo_vUfkGVaR4s5lGg6el-ewDjYvlIYiRlRGYKu74T-Md3_C1qk7ImaaDPHcwcLGeUEYrFY7eRV93ojxs2gcqcLRCwbDocbiWzalRf4fX_BQJ)
-周一（2月7日）的跳台滑雪混合团体项目中，有61冠纪录的夺金大热日本选手高梨沙罗，为日本队打头阵，跳出103米的好成绩。然而，她随后被判大腿的紧身衣“宽松2公分”属违规，第一跳成绩被取消。高梨沙罗因此失去获奖机会，失去这一跳成绩的日本最后也只拿下第4名。高梨沙罗当场哭成泪人。
+**By:秘翻新闻**
 
-不止是她，同场共有5名来自德国、奥地利、挪威等国的顶尖女选手，都因判“服装不合格”遭取消成绩。各国媒体纷纷报导此事，怒斥“这简直是场闹剧！”
+**2022-02-16**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/8-14.png)图片来源 新唐人
+新唐人北京时间2月15日消息。最近，网络热传一段疑似哈佛学者黄万盛的录音，披露了中共的防疫敛财黑幕，引发关注。
 
-其中一名挪威选手奥普塞特（Silje Opseth）告诉挪威媒体，导致她被判“服装不合格”的原因，是评审在测量服装时没有遵循正常程序。她说：“他们用完全不同的方式测量服装，我们被告知要用与以往不同的方式站立。”
+在录音中，黄万盛爆料称，2020年7月疫情爆发半年后，中共最高层花17万元为他购买单程机票紧急召他回国，领导一个科技防疫项目。
 
-在中共疫情肆虐世界人民的时刻，一些国家的运动员为人权和正义而战。拒绝了参加北京冬奥会。在中共经济和政治体制摇摇欲坠的时刻，中共已经没有了底线和遮羞布。明晃晃地做自己想做的事情。没有人权人性之说，相信共产党走进火葬场！
+据黄万盛透露，中共高层的白手套和家属们染指核酸试剂领域，多地的多轮全员核酸检测皆因此而起。因为只有采购量才有利润。
 
-文字版原文：[五选手因服装被取消成绩 中共北京冬奥已毫无底线](https://gnews.org/zh-hans/1978649/)
+他说：全世界没有一个国家用这种方式进行免疫，这实际上是给利益集团输送利益，包括中共强推的多针剂疫苗，都与利益集团有关系。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+黄万盛还透露，中共国某个集团仅仅通过核酸检测这一项，就赚了六千七百亿。
+
+据美国南卡罗莱纳大学艾肯商学院终身教授谢田称，黄万盛并非真正的哈佛学者，而是一个1977年毕业的工农兵大学生，哲学背景出身。黄之所以借哈佛的名头，是为了让中共觉得这可能是个很好的资历，以便把他请回去参加科技防疫类的协会。并指黄万盛大概是在参与防疫有关项目后，从科技防疫人员处得知此消息。
+
+新闻来源[**https://www.ntdtv.com/gb/2022/02/15/a103348516.html**](https://www.ntdtv.com/gb/2022/02/15/a103348516.html)
+
+秘翻新闻 采集 / 撰稿 EY120
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
