--- a/gnews/18.md
+++ b/gnews/18.md
@@ -1,24 +1,23 @@
 ---
-title: 中共洗脑未见效 中国存在「沉默的大多数」
+title: 樱花FM&#124;从2008的“北京欢迎你”到2022的“北京整死你”
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2013261/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013286/)
 
-[撰稿日期]：2022.02.14
+音频：东京樱花团/战友520
+![](https://lh6.googleusercontent.com/NRRTnyfmnDjoCf3q-PCoTqGbnpxgXtAgdU86we90daGZd8eyXshftRhkUpLxMgGiL7KGbnaahVDd2SDTTXrPNWSrqXPGXVfwEEkPSGYMFBfMHqA19WIWoe2tkyEChB6LxCGW9sx4)
+2月9日共同社北京消息：国际奥委会发言人亚当斯在例行新闻发布会上说，由于 “法律问题”，原定8日晚的北京冬奥会花样滑冰队的颁奖仪式被取消。由于这是个新问题，已经与国际滑冰联盟进行了必要的法律磋商。待确认结果明确后，我们将提供信息。
 
-[署名]：台湾宝岛农场\_阿尔道夫
+奥运专题媒体报道，获得金牌的ROC涉嫌使用兴奋剂。同时，一家俄罗斯报纸的电子版报道说，有关8日的男子SP比赛中，日本选手羽生结弦因卡在冰窟窿里而失跳，ROC在表演前就收到羽生结弦粉丝的死亡威胁，颁奖仪式被取消。
 
-[新闻连接]：《https://www.epochtimes.com/b5/22/2/13/n13573794.htm》
+新中国联邦把北京冬奥会打成了冬眠会，中共自己还添把火，把北京冬奥会直接打成了要命会！
 
-[正文]：
+不由得想起了当年：２００８年北京奥运唱响了“北京欢迎你”，那一年的国庆，笔者受邀人民大会堂的 “国庆宴会”，代表们还被专用大巴拉去水立方和鸟巢参观。闲暇之余，海外归来的代表们调侃唱起了“北京整死你”……
 
-今年1月18日，爱德曼国际公关公司针对全球28个国家实施「全球政府信任度」调查，其中包含美国、德国、荷兰、中共等国。
+文字版原文：[从2008的“北京欢迎你”到2022的“北京整死你”](https://gnews.org/zh-hans/1978664/)
 
-调查结果，中共政权的信任度位居榜首，引发多方质疑声浪。针对此结果，近日华盛顿智库战略与国际研究中心（CSIS）和斯坦福大学根据后来的调查研究发现，会造成上述结果，乃是因为「中国存在「『沉默的大多数』，他们并不支持中共的选择」。
-
-相对于中国境内「沉默的大多数」，斯坦福大学传播学副教授潘婕（Jennifer Pan）和政治学助理教授徐轶青的报告中指出：尽管存在风险，但仍有少数民众在后来的调查访问中愿意揭露真相，分享他们并不支持中共政策的立场和主张。
-
-由华盛顿智库战略与国际研究中心（CSIS）和斯坦福大学后续的研究证明中共对中国公民的洗脑，不像外界认为的那样有效，中共政权很大的危机是正面临「大多数沉默人民的抗议」，此发现也助于加强美国的对华政策，应该联合中国国内有自由主义思想的「沉默大多数」抗共、反共。
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
