--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,26 +1,56 @@
 ---
-title: 瑞典推荐80岁以上老人注射第四剂新冠疫苗
+title: 从乌克兰局势看普京怎么玩习二
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2013087/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2013281/)
 
-#### 翻译                意大利达芬奇农场          小白鸽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-16-alle-10.17.52.png)图片来源：eventiavversinews.it
-瑞典公共卫生局于2月14日推荐80岁以上老人打第四针新冠疫苗，包括养老院的人或在家需要照顾的人；而与此同时许多国家开始打三针，推荐打第四针的还不多。
+撰稿：二号电梯
+![](https://assets.gnews.org/wp-content/uploads/2022/02/电梯.png)
+（图片来自网络）
 
-瑞典卫生局要求尽快在接种了前一剂疫苗之后的四个月之后再接种疫苗。
+话说习二发现由于爆料革命，新中国联邦从中“作梗”，他的病毒策略并没有完全达到预期，反而越来越多的国家摆明了要对他追责！于是，习二思前想后，觉得唯有对台湾动武才是解决之道。
 
-以色列、意大利、西班牙、丹麦已经宣布对免疫系统较弱人群开打第四针。
+但是，习二又担心：“万一美国佬真插手，只要联合沙特不卖我石油，那我不分分钟嗝屁嘛。”于是，他去找普京商量。
 
-瑞典已有超过85%的80岁以上的老人和55%的18岁以上的人都打了第三针。
+普京：“别怕。你打台湾，我打乌克兰，咱们双管齐下，保管美国顾得了东边，顾不了西边。至于石油，我不仅可以卖你油，我还可以卖你气！来，现在签合同。但是这个钱得先付，不然我没有钱采气采油，没法给你。”
 
-尽管奥米克戎的感染率在飙升，瑞典于2月9日解除了所有疫情限制措施。瑞典在新冠病毒刚爆发时未采取任何封城措施的做法曾引起人们的广泛关注。
+习二：“现在都还不知道需要多少量，咋签合同嘛！”
 
-迄今为止瑞典有16500人死于新冠病毒，其新冠死亡率好于欧洲平均水平。但远高于挪威、芬兰和丹麦。
+普京：“那就估一个用量嘛。”
 
-原文链接：[https://www.eventiavversinews.it/la-svezia-raccomanda-il-quarto-vaccino-covid-per-gli-over-80/](https://www.eventiavversinews.it/la-svezia-raccomanda-il-quarto-vaccino-covid-per-gli-over-80/)
+习二：“那行吧，先弄个一万亿吧。那万一用不了那么多，可以退钱不？”
 
-编辑、上传：Xiao  baige
+普京：“那不行。这个油气咱们给你的，你不要我也卖不掉啊。咱得签“照付不议”条款，不管你啥原因用或是不用，都得付钱。”
 
+习二：“那咱付人民币。”
+
+普京皱了皱眉头。
+
+习二连忙补充：“黄金做抵押。如果你到时候不要人民币，我就给你黄金。”
+
+普京：“好。就这么定了。”
+
+万亿合同到手，普京表示很开心，开始往乌克兰增兵。看到普京开始如约行动，习二表示很满意。
+
+冬奥会受到世界抵制，欧美主要政要都拒绝出席开幕式。习二心里很烦，于是他又去找普京商量。
+
+习二：“欧美那些家伙都不来参加我的冬奥开幕式，搞得我党内下不了台。”
+
+普京：“没事。我普京一定去，我还拉四个国家的总统一起去给你撑腰。我可以跟你单独谈，在所有媒体前握手，拥抱，让所有看到我挺你。只是……”普京停了停：“需要点活动经费，你知道的，那些家伙就看钱。”
+
+习二：“钱好说，只要来，先给个1000亿。”
+
+1000亿到手。普京表示很开心。到了当日，普京独自一人去了北京。习二不打算见普京了，油气合同也想只用人民币支付了。普京大发脾气，习二连忙下指示：“不用人民币，改用欧元支付。”
+
+普京很生气，连夜赶回俄罗斯。
+
+普京继续加紧往乌克兰增兵，美欧一看形势越来越紧张，也拼命往乌克兰方向增援。眼看战争一触即发。
+
+忽然，俄罗斯军队开始往后撤了。据“不靠谱”消息称，美俄已经达成一致，美国同意俄罗斯卖气给欧洲，俄罗斯同意不在乌克兰搞事，不挺习二。
+
+大家还记得吗？文贵先生在前两年的直播中说过普京是一个很出色的政治家，他最终会导向美国一边。我猜，杰出政治家的本事就是在某二死之前，榨干他最后一个铜板吧？哈哈。
+
+发稿：MG4
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
