--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,22 +1,23 @@
 ---
-title: 众多人士批评美国联邦机构追踪寻求疫苗宗教豁免人群
+title: 樱花FM&#124;五选手因服装被取消成绩 中共北京冬奥已毫无底线
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2013071/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013278/)
 
-#### 翻译/撰稿：zzballack
+音频：东京樱花团/战友520
+![](https://lh3.googleusercontent.com/YNS0RWjKYffrrQJRSTS-J1SpriLUXo_vUfkGVaR4s5lGg6el-ewDjYvlIYiRlRGYKu74T-Md3_C1qk7ImaaDPHcwcLGeUEYrFY7eRV93ojxs2gcqcLRCwbDocbiWzalRf4fX_BQJ)
+周一（2月7日）的跳台滑雪混合团体项目中，有61冠纪录的夺金大热日本选手高梨沙罗，为日本队打头阵，跳出103米的好成绩。然而，她随后被判大腿的紧身衣“宽松2公分”属违规，第一跳成绩被取消。高梨沙罗因此失去获奖机会，失去这一跳成绩的日本最后也只拿下第4名。高梨沙罗当场哭成泪人。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-3-5.jpg)图片来源：布雷特巴特新闻网
-据《真正美国之声》（Real America’s Voice）2月15日报道，美国有55个联邦机构颁布了修订规则，以追踪那些寻求豁免的联邦雇员或申请人。有些仅限于新冠疫苗豁免，有些则追踪所有豁免，包括那些寻求不在安息日（Shabbat）或星期日工作的人。很多人对此做法提出批评，认为这是对有信仰的人的歧视。
+不止是她，同场共有5名来自德国、奥地利、挪威等国的顶尖女选手，都因判“服装不合格”遭取消成绩。各国媒体纷纷报导此事，怒斥“这简直是场闹剧！”
 
-有报道说，美国政府正在建立一个数据库，记录那些申请豁免的人。非营利组织自由律师会（Liberty Counsel）的主席马修·斯塔韦 (Mathew Staver)上个月在接受采访时将其比作纳粹德国用来追踪犹太人的一个数据库：“这个数据库的唯一可能目的是找出和歧视有信仰的人，以服务于非法或者不合理目的。我们不能允许这种情况发生，我们不能允许一个联邦数据库按照人们的宗教或医疗状况进行分类。我想不出这类政府名单能带来什么好处？”
+其中一名挪威选手奥普塞特（Silje Opseth）告诉挪威媒体，导致她被判“服装不合格”的原因，是评审在测量服装时没有遵循正常程序。她说：“他们用完全不同的方式测量服装，我们被告知要用与以往不同的方式站立。”
 
-美国议员也纷纷采取行动反对联邦政府的宗教豁免追踪系统。南卡罗来纳州的众议员拉尔夫·诺曼 (Ralph Norman)提出了《宗教自由高于强制令法案》（Religious Freedom Over Mandates Act）。该法案将“禁止将联邦资金用于任何有关新冠疫苗接种要求的宗教豁免记录系统”。
+在中共疫情肆虐世界人民的时刻，一些国家的运动员为人权和正义而战。拒绝了参加北京冬奥会。在中共经济和政治体制摇摇欲坠的时刻，中共已经没有了底线和遮羞布。明晃晃地做自己想做的事情。没有人权人性之说，相信共产党走进火葬场！
 
-20名共和党议员写信给总统拜登，要求联邦政府不要针对或跟踪那些提出宗教豁免申请的人。信中写道：“你们政府不能利用联邦政府权力来追踪那些寻求疫苗宗教豁免的联邦雇员。从第一天起，你们就对那些在生活中把信仰放在首位的美国人表现出一贯的蔑视态度，将以宗教为由拒绝接种疫苗的美国人排除在外，这是不可原谅的，必须撤回。大多数通知没有解释机构计划存储数据多长时间、为什么需要在联邦机构之间分享数据，或者为什么机构在决定批准或拒绝雇员的宗教便利请求后，需要保留数据。你们政府没有为这些侵入性数据库提供合理解释，这些数据库只会被用来针对那些因为宗教信仰而拒绝接种疫苗的美国人。”
+文字版原文：[五选手因服装被取消成绩 中共北京冬奥已毫无底线](https://gnews.org/zh-hans/1978649/)
 
-新闻来源：[Criticism mounts as 55 federal agencies track COVID vaccine religious exemption requests](https://americasvoice.news/justthenews/criticism-mounts-federal-policies-tracking-covid-vaccine-religious/)
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
