--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,9 +1,19 @@
 ---
-title: 心脏科护士: “打疫苗死”被说成“得新冠死”
+title: 中共推出了预约办个税服务“割韭菜APP”
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2013412/)
+`儒为` [轉載自GNews](https://gnews.org/zh-hans/2013503/)
 
-来自澳洲新南威尔士州的金.史密斯是名心脏科的护士。她见过无数个因为打新冠疫苗而心脏出严重问题的病人。有些病人后来病重死了，死亡的原因居然被写成是得新冠病毒而死。
+作者：意大利罗马达芬奇农场-儒为
+![](https://assets.gnews.org/wp-content/uploads/2022/02/预约办税.jpeg)封面来源：网络图片
+中新财经2022年2月16日报道，中共2021年度个税汇算的时间为2022年3月1日至6月30日。纳税人如需在3月1日至3月15日之间办理年度汇算，可在2月16日至3月15日每天的早6点至晚22点登录手机个人所得税APP进行预约。纳税人也可以不预约，3月16日后直接登录手机个人所得税APP或网页端办理汇算申报，也可以到主管税务机关办税服务厅直接办理。
+
+中共这则新闻传递的信息最主要的内容就是告诉老百姓2021年个税开始征收了，凡是符合征收条件的都需要你自己主动积极的通过手机个人所得税APP进行提前预约，如果你不预约也要到主管税务机关办税服务厅直接办理。特别需要注意的是，对于年度汇算需补税的纳税人，如在年度汇算期结束后未申报并补缴税款，税务部门将依法加收滞纳金，并在其《个人所得税纳税记录》中予以标注。
+
+中共国个税一直是个模糊地带，这也是中共故意营造的漏洞，如果个税严格执行下去，老百姓那点微薄收入在中共吹起的经济泡沫下是无法养活一个家庭的，随之引发将是社会动荡。中共国个税一直是悬在每个老百姓头上的一把刀，这把刀会不会落下？什么时间落下？怎样落下？都掌握在中共手里。中共这次释放出“预约办理个税”服务的信号，说明中共这把刀要落下了，也更加说明中共真的没钱了。
+
+新闻来源：🔗[2021年度个税汇算3月开始 今起可提前预约办税](https://www.chinanews.com.cn/cj/2022/02-16/9677389.shtml)
+
+*编辑/校对/发稿：意大利罗马达芬奇农场-儒为*
 
  
 
