--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,28 +1,82 @@
 ---
-title: 有声｜要求彻查八孩母事件 中共国高校学子接力联署
+title: 【信仰之声】同样的侍奉，不同的得着
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013394/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2013493/)
 
-**By:秘翻新闻**
+作者：纽约香草山福音部 — 山城小哥
 
-***2022-02-16***
-![](https://assets.gnews.org/wp-content/uploads/2022/02/99999.png)
-[新唐人](https://m.ntdtv.com/gb/2022/02/15/a103348706.html)北京时间02月16日消息。中共徐州官方关于“八孩母”事件的所谓“调查结果”出台后，网络上开始大面积消声。但中共国多个高校学子开始接力联合署名，要求彻查真相。但联署信遭遇封杀。
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-5-768x103-3.jpg)
 
-2月15日，微博上出现题为“100位北大学子呼吁彻查徐州被拐女子事件”的联署公开信。信中直言徐州官方的“调查结果”前后不一，漏洞百出，要求北京当局彻查“八孩母”真相，严厉打击拐卖妇女儿童犯罪。参与联署的多为已经毕业的北大校友。
 
-除北大外，清华、人大、浙大等几个名校校友都成立了“拐卖关注群”。北大联名信发出后，网友呼吁其它高校跟进。
 
-徐州官方几次三番发出“八孩母”事件的不同“调查结果”后，网络开始大举删贴封号，据传四川公安也拒绝再追查“八孩母”是否是南充失踪女孩李莹。但网民的愤怒不息，关注度不减。
 
-“八孩母”被指未成年时就被拐卖到徐州，其容貌与当年被拐卖的四川南充未成年女孩李莹非常相似。出身徐州丰县的作家王圣强指出，当地人都知道“八孩母”就是李莹，但中共官方“不能让她是李莹”，因为李莹的父亲是军人，如果确认“八孩母”是李莹，会动摇军心。目前王圣强的相关帖文已经删除，据他说是遭遇了来自老家的压力。
 
-(秘翻新闻 二丫 编译报导)
 
-发布:星星
 
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+
+
+
+
+
+
+
+
+耶稣基督说:“你的財宝在哪里，你的心也在哪里。”
+
+在大约2900前的以利亚先知时代，以色列人在进入应许之地建国之后80年就分裂了。北国以色列国王为了用自己的手段确保自己权力的合法性和稳定性，于是造了金牛犊假神，并带领百姓拜假神，让百姓陷入了罪中。后来在经过两次血腥的灭族篡位之后，亚哈王更是放任自己的外族老婆在全国公然拜假神巴力并杀害神的先知。
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-28.jpg)
+
+
+
+以利亚先知就是在这样的世代热心地为神传信息，然而正如以利亚先知对神抱怨所说的：“我一向热心事奉万军之上帝耶和华，但以色列人背弃你的约，拆毁你的祭坛，残杀你的先知。现在只剩下我一个人，他们还要杀我。” (王上 19:10 ）先知一片热心侍奉神，甚至靠着神显了神迹奇事，在旱灾之年为同胞求得了雨水，得到同胞的回应却是拆毁祭坛，暴力威胁迫害。先知感觉万念俱灰，自己实在没有什么可以做的了，于是逃离了以色列国，宅在山洞里，甚至向神祷告，只求一死。
+
+然而，在西奈山的旷野，神提醒先知，不要在乎外在环境的艰难，要记住自己的使命是什么，要记住自己着眼和追求的是什么。先知恍然大悟:神给的和自己追求的不是舒适的环境，而是一个值得自己忍受一切患难的伟大使命和永生复活的盼望。于是先知原路返回，继续按神所吩咐的传讲神的话语和信息，继续侍奉神。最终，就在这样荒凉的世代，他成了大洪水之后唯一一个不经历死亡被神提升天的人。他得到了自己所追求的。
+
+以利亚先知有一个徒弟叫以利沙。当先知呼召以利沙的时候，没有多说多做别的，只把自己那仅有的毛皮衣服披在以利沙身上，以利沙立马就决定要跟随先知去侍奉神。以利沙是真的被先知侍奉神的生活所吸引，真的被先知所侍奉的那位神所吸引。于是他就辞别父母亲人去侍奉神，侍奉以利亚先知去了。
+
+在漫长的与神和以利亚先知同行的日子里，以利沙一直默默无闻，十分低调，从不出镜。他给世人的印象就是：“从前服侍以利亚的（倒水在以利亚手上的）。”(王下 3:11 ）他默默无闻地以一个仆人的身份服侍先知，不张扬，没有怨言，甚至以之为乐。就在神要接走他的师父以利亚先知的时候，众先知包括以利沙自己都知道了这个从神而来的信息。别人问起的时候，他却谦卑低调地毫不声张，并且告诉其他先知也不要声张。
+
+以利亚先知要升天之时，三次考验以利沙。让以利沙离开自己，但以利沙却绝不离开。这显明了以利沙侍奉神和神的仆人的时候是发自内心的愿意，乐意去做。他是真的爱神，渴慕神，以之为乐。若不以之为乐，他就离开以利沙了。最后，以利亚先知问他想要什么，这也是耶稣基督问第一批跟随他的门徒的问题:“你想要什么？”以利沙先知回答说:“求你把感动你的灵加倍的赐给我。”结果，以利沙正如以利亚先知说的，看到了以利亚先知那在神里永活的生命。最终，他也得到了双倍的圣灵。
+
+这些“小事”清晰地显明了以利沙的生命是真正的如此无“我”，“我”真的已经被粉碎，钉在十字架上了。“我”，真死了，耶稣真的在他里面复活了。他一心追求的是神的圣灵，是复活和永生。于是他就得到了。
+
+后来，以利沙接替师父的衣钵做了先知。他也有了一个名叫基哈西的弟子和仆人。基哈西也服侍自己的师父以利沙。
+
+有一次，亚兰国将军乃曼因着弱小的信心来求以利沙医治他的麻风病。为了彰显神的荣耀，以利沙靠着圣灵的大能，告诉乃曼去不起眼的约旦河里沐浴（受洗）七次就能得医治。乃曼带着试一试的心去了，结果真的得了医治。麻风病如同罪一样被洗净了！乃曼想要给一大笔钱财给以利沙做酬谢，但以利沙先知不要，因为他做的这一切不是为了钱财，而是为了荣耀神。
+
+然而基哈西却想要钱财，在乃曼走后，背着以利沙追上乃曼，找借口要了一大笔银子，乃曼还高兴地给了他双倍。他回到以利沙那里时，还对以利沙撒谎，结果，他一离开以利沙就得了乃曼的麻风病。
+
+同样是侍奉神，以利亚先知得到了永生，以利沙先知得到了双倍的圣灵和复活的生命，基哈西得到的却是双倍的不义之财和麻风病（罪）。这一切其实都源于那个问题:“你想要什么？”我们基督徒也要常常问自己，自己到底想要什么？我们是要真的得着耶稣，得着祂那死而复活，而且永活的生命？还是要在弟兄姊妹中间抓名抓利……
+
+求神看顾保守我们，我们一同警醒。愿我们同样的侍奉最终都有同样的得着–耶稣基督。阿门！
+
+2022年2月16日
+
+（本文仅代表作者个人观点）
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-7.jpg)
+
+*编辑 /校对*：德州牛仔
+
+*发稿：Yuki*jiang
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
