--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,46 +1,26 @@
 ---
-title: 经济封锁者现因卡车司机的“经济影响”欲对其进行制裁
+title: 中共国2亿人口被冠以“灵活就业”之名
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013351/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2013460/)
 
-编译： Jenny Ball
+撰稿：子喜太一
+![](https://assets.gnews.org/wp-content/uploads/2022/02/161-2.png)图片来自网络
+解决失业问题是世界各国政府执政的重中之重。失业人口直接影响一个国家的经济、政治的稳定，任何一届政府上台都希望自己的任期内把失业人口最大化缩减，以彰显自己的执政能力。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1561.png)图片来源：newstarget.com
+然而，在中共国，面对着2亿失业者、临时工、以及辞职人员，CCP只用一句“灵活就业”就轻轻松松把这一群体从地球上抹掉了。CCP根本不去关心这2亿没有稳定收入来源的人，将如何吃饭？如何活下去？却避重就轻地要探讨如何给这2亿人社保和医疗等权益！一个没有能力给老百姓饭吃的政府，还能给老百姓权益？这不是瞪眼胡说八道，漫天打口炮吗？
 
-除了行使威权主义之外，民主党及其支持者唯一擅长的另一件事，就是虚伪，对正在进行的涉及加拿大卡车司机的自由车队抗议活动，大量传播虚伪的信息。
+指望CCP解决就业问题，那简直是痴人说梦！不灭掉CCP，中共国任何问题都解决不了，因为中共所有问题的源头都是CCP。中共国和美国贸易战几年，使得南方大批工厂因失去订单而破产，CCP向全世界放出病毒，使得几十个发达国家主动和CCP断交，大批世界一流企业从中共国撤走，上游产业链断裂，导致整个市场断血，失业潮不断，2亿“灵活就业”人口绝不是最终数字，还会持续暴增！
 
-在过去的两年里，民主党人和他们的左翼马克思主义盟友，推动并实施了对他们的城市和州的封锁，理由是需要“阻止 COVID-19 的传播”，这破坏了他们的经济，并摧毁数百万美国人的生活和生计。
+14亿老百姓是CCP圈养的猪狗和待割的韭菜，CCP从来没有把老百姓当人看过，从来不会真的关心老百姓的死活，老百姓失业、吃不上饭、饿死，CCP眼皮都不会跳一下，只要CCP政权稳定，没人造反，CCP就持续全世界大撒币以巩固自己的执政地位！
 
-更重要的是，他们毫不掩饰地宣扬要持久的封锁，并且对封锁造成的灾难毫无同情心——因为作为民选领导人，他们从来不用担心薪水或一顿饭。与此同时，人民则因试图谋生成了“罪行”而被捕、罚款或入狱，普通美国人被告知，经济远没有“拯救生命”重要。
+14亿老百姓需迅速觉醒，站起来灭掉CCP，否则灾难可不只是失业吃不上饭，所有人都将成为CCP的祭品，活在炼狱！
 
-快进到今天。
+灭掉CCP！灭掉CCP！
 
-数以千计的加拿大卡车司机厌倦了毫无意义的 COVID-19 疫苗要求，特别是在持续的供应链危机中，民主党的大流行封锁的推动者首先制造这场危机，卡车司机们正在抗议让他们的政府放弃要求。他们通过封锁加拿大和美国之间最繁忙的国际桥梁之一来实现目标。
+新闻参考链接：[联合新闻网](https://udn.com/news/story/7333/6096553?from=udn-catebreaknews_ch2)
 
-他们知道这是商业交叉点之一；他们知道，每天约有 350 万美元的贸易额过桥。这正是他们选择这里抗议的原因。
-
-但现在，作为这场大流行病中最大的民主党伪君子之一，密歇根州州长格雷琴·惠特默（Gretchen Whitmer）要求对加拿大卡车司机采取行动，因为他们的抗议正在损害密歇根州的经济。
-
-**（点评：中国俗语：贼喊捉贼。）**
-
-所以，政府封锁摧毁了当地经济并伤害家庭两年是可以的，但是当卡车司机封锁道路四天，这就是恐怖主义？对经济造成“不可接受”的伤害？
-
-我们都不是孩子，我们知道民主社会对政府不满时，抗议可以解决问题（因为和平抗议之外的另一条路——暴力袭击和内战要糟糕得多）。
-
-**评论：荒唐，本末倒置。正是这些个威权主义决策级人物，剥夺了宪法赋予人民的权力所采取的长达两年之久的封锁和mRNA刺突蛋白毒药的强制注射，才让各国经济走向崩溃，让人民苏醒奋起抗议。加拿大卡车司机是最勇敢的人们，他们用行动在向那些独裁者们警告：人民捍卫自由的力量！**
-
-素材链接：[newstarget.com][Democrats who gleefully locked down economies for TWO years during pandemic now demand action against protesting Canadian truckers over “the economy”](https://www.newstarget.com/2022-02-13-democrats-shut-economies-now-concerned-about-economy.html)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
-
-
-
-
+*发稿：mgjxs*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
