--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,32 +1,21 @@
 ---
-title: 有声｜网络爆料中共极端“清零”防疫的暴利黑幕
+title: 樱花FM&#124;日本皇族首现中共病毒感染者
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013322/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013431/)
 
-**By:秘翻新闻**
+音频：东京樱花团/战友520
+![](https://lh3.googleusercontent.com/mg9RWRGgxL2gdmYnDmRGgSQqKJYgLq9LeIXSI0oMoPWC2qJkCj38RZrc_LvPDcd68BESfLaKiukGehjlil_LsFwZdJOLskEFSThEon3GuQBGUGPFG8S7UOME2tcmDPj7H5I3k4cH)
+２月９日共同通迅社消息：9日，日本皇室机构宣布，38岁的瑶子是已故宽仁亲王的二女儿，三笠宮崇仁亲王和同妃百合子的孙女，感染中共病毒（新冠病毒）入院皇宫内的皇室医院，又因发现她患有肺炎而被转到东京文京区的东京大学医院。
 
-**2022-02-16**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-14.png)图片来源 新唐人
-新唐人北京时间2月15日消息。最近，网络热传一段疑似哈佛学者黄万盛的录音，披露了中共的防疫敛财黑幕，引发关注。
+瑶子公主于7日左右感觉喉咙痛，8日下午，PCR测试呈阳性。由于她在入院的皇室医院进行检查时，发现患了肺炎，被认定为为中度感染症状。
 
-在录音中，黄万盛爆料称，2020年7月疫情爆发半年后，中共最高层花17万元为他购买单程机票紧急召他回国，领导一个科技防疫项目。
+日本皇室，日常生活基本上是跟外界绝缘的。因此，瑶子公主的感染令人费解。另外，既然皇族出现了感染者，那么其他皇族成员会不会有密切接触者呢？会不会再出现感染者呢？
 
-据黄万盛透露，中共高层的白手套和家属们染指核酸试剂领域，多地的多轮全员核酸检测皆因此而起。因为只有采购量才有利润。
+文字版原文：[日本皇族首现中共病毒感染者](https://gnews.org/zh-hans/1978642/)
 
-他说：全世界没有一个国家用这种方式进行免疫，这实际上是给利益集团输送利益，包括中共强推的多针剂疫苗，都与利益集团有关系。
-
-黄万盛还透露，中共国某个集团仅仅通过核酸检测这一项，就赚了六千七百亿。
-
-据美国南卡罗莱纳大学艾肯商学院终身教授谢田称，黄万盛并非真正的哈佛学者，而是一个1977年毕业的工农兵大学生，哲学背景出身。黄之所以借哈佛的名头，是为了让中共觉得这可能是个很好的资历，以便把他请回去参加科技防疫类的协会。并指黄万盛大概是在参与防疫有关项目后，从科技防疫人员处得知此消息。
-
-新闻来源[**https://www.ntdtv.com/gb/2022/02/15/a103348516.html**](https://www.ntdtv.com/gb/2022/02/15/a103348516.html)
-
-秘翻新闻 采集 / 撰稿 EY120
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
