--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,25 +1,52 @@
 ---
-title: 樱花FM&#124;法国记者专访彭帅 其安全仍令人担忧
+title: 特鲁多的Covid“疫苗”暴政使北美汽车业摇摇欲坠
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013432/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013524/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/xk0l8iBqLdMCPmMZPsHR_3aHxiFU_jc243-J12AAYB2PM-3AOc_bBp1vc5XfH7E3SYtjMa-MCmZrPFT-dKhvvKo_-VCjMFd6ffW6WYiy_0SJi-2kv_SEojAlpPLQ6JpfHhYpFsFu)
-在法国体育日报《团队报》发表与彭帅的独家专访隔天，其中一名参与访问的记者文图亚克 (Marc Ventouillac)周一 (2月8日)向美联社表示，他不确定彭帅是否可以自由地说和做她想做的事。他说：“这次采访并不能证明彭帅没有问题。”
+翻译： Jenny Ball
 
-文图亚克也说，中国的意图对他来说是清楚的。他认为，在举办北京冬奥会之际让彭帅接受西方媒体采访，显示中共官员希望平息争议，避免彭帅事件的争议影响到冬奥赛事。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1567.png)图片来源：newstarget.com
 
-他说：“这是中共国奥委会宣传的一部分。他们可以透过彭帅与一家欧洲大报的采访来证明彭帅没有任何问题。”彭帅在采访刊登的隔天与国际奥委会主席巴赫 (Thomas Bach) 一同出席北京冬奥自由式大跳台决赛，观看美国出生的中共国选手谷爱玲 (Eileen Gu) 夺金。
+在加拿大和美国都有工厂的汽车制造商，真正开始感受到贾斯汀·特鲁多的武汉冠状病毒（Covid-19）“疫苗”命令的伤害，但他拒绝让步。
 
-文图亚克表示：“我认为，对于中国奥委会、中国共产党和中国的许多人来说，努力证明没有外界所谓的彭帅事件是很重要的。彭帅看起来很健康。”
+尽管拜登政权暗示要减少一些限制，但据报道，特鲁多“坚决反对放宽加拿大的 COVID-19 限制，因此，最近几周抗议限制和反对特鲁多本人的压力越来越大。 ”
 
-他提到，法国《团队报》原本只得到半小时的访问时间，但最后他们却得到将近两倍的访问时间，且能问的问题比原先多出8至10个。除了文图亚克之外，国际女子网球协会 (WTA) 主席西蒙（Steve Simon）周一 (2月7日) 也发布声明，表示该访问并未消除国际女子网球协会对彭帅安危的疑虑。他在声明中表示：“无论是在采访中或出席冬奥会，看到彭帅现身总是令人高兴的。然而近期的采访并没有减轻我们对她11月2日发的帖子的担忧。”。
+特鲁多未能放弃暴政，导致加拿大和底特律之间的桥梁形成封锁，迫使福特工厂关闭。报告显示，其他汽车制造商也在遭受痛苦。
 
-文字版原文：[法国记者专访彭帅 其安全仍令人担忧](https://gnews.org/zh-hans/1978542/)
+美联社新闻报道说：“在底特律和安大略省温莎之间的大使桥，大多数人乘坐皮卡车的抗议活动，已经进入了第三天。” “进入加拿大的交通被阻止，而前往美国的交通仍在流动。”
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+“这座桥承载了两国之间 25% 的贸易，加拿大当局表示越来越多的担忧对经济的影响。”
+
+特鲁多所要做的就是：停止对他的国家人民的暴政，整个不断升级的局势就将立即结束。 然而，由于他拒绝这样做，抗议可能会无限期地持续下去，对汽车工业和整个北美经济造成越来越大的伤害。
+
+拜登政权将汽车行业危机归咎于抗议者，而不是特鲁多。
+
+福特在一份声明中声称，零部件短缺，迫使其关闭了温莎的一家发动机工厂。由于特鲁多的暴政导致供应不足，位于安大略省奥克维尔的福特装配厂，也不得不缩减工期。
+
+福特在一份声明中说：“底特律-温莎大桥的中断，伤害了边境两侧的客户、汽车工人、供应商、社区和公司。”
+
+通用汽车公司同样不得不取消其在密歇根州兰辛附近的中型 SUV 工厂的第二班，尽管发言人丹弗洛雷斯表示，这只是暂时的举措。
+
+丰田发言人表示，由于零部件短缺，他的公司将暂时无法在加拿大的三个工厂生产任何产品。他指责供应链、天气和“与大流行相关的挑战”，但在封锁形成后立即宣布了这一消息，这足以说明真正的原因是政府的封锁。
+
+在斯特兰蒂斯（ Stellantis），前菲亚特-克莱斯勒，业务基本正常，但该公司确实不得不缩短其在温莎的小型货车工厂的一些班次。
+
+与此同时，拜登政权将所有这些经济破坏归咎于封锁，而不是特鲁多。
+
+白宫新闻秘书宣布：“封锁对汽车行业的供应链构成风险，因为这座桥梁是汽车、零部件和零部件的关键通道，延迟可能会扰乱汽车生产，”但并未提及首先导致了抗议的相关疫苗授权。
+
+阿尔伯塔省库茨过境点的第二次封锁，也关闭了该入境口岸的经济活动。在过去的一个半星期里，数十辆卡车停在那里，还有数百辆卡车占据了加拿大首都渥太华市中心。
+
+“特鲁多不行动，我们就不动，”来自阿尔伯塔省科尔代尔的饲养场经营者、抗议者约翰·凡瑞维克（ John Vanreeuwyk ）说。
+
+素材链接：[newstarget.com][North American auto industry teetering towards collapse due to Trudeau’s covid “vaccine” tyranny](https://www.newstarget.com/2022-02-14-auto-industry-collapse-trudeau-covid-vaccine-tyranny.html)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
