--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,25 +1,20 @@
 ---
-title: 樱花FM&#124;香港或将在年内开放 但仍将强推疫苗接种
+title: 纽约一亚裔女子被尾随并杀害
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013287/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2013405/)
 
-音频：东京樱花团/战友520
-![](https://lh5.googleusercontent.com/H1pktryN4fKARlDcu30T-HDdi9GlAw0Py0Xiii_PnaOxIakWbpFEoG09iLmihe118fMI6fSbEiOoEPgAI79c0Yc1r-wb7v5takTu39crXe82kC-T2F_44l5ghPnmrOcz42JvSiJD)
-香港行政长官林郑月娥的高级顾问陈智思Bernard Chan周二表示，香港政府有可能在年内取消疫苗的限制，因为该市正在努力为所有人口接种新冠疫苗。陈智思在接受彭博社电视采访时说，”我们都希望尽快结束这件事”。
+撰文：台湾宝岛农场 寻文客
 
-当被问及香港是否能在未来一年内重新向世界开放时，陈说，一旦该市有了一个 “完全接种疫苗的社区 “和对OMICRON有了更好的了解，他 “非常乐观 “地认为它可以达到这个目标。
 
-Chan排除了香港在全市范围内进行中国式封锁的可能性，来阻止目前爆发的高传播性omicron变体。他说：”我认为我们不可能进入全面封锁状态。我们不能在香港这样做。我们不能像你在大陆看到的那样进行封锁。”
 
-陈说，让90%的居民接种疫苗是放松限制的关键，但他没有说达到这一目标是否会成为允许该市放松边境管制的触发因素。
+**【新闻链接】**[https://cn.nytimes.com/usa/20220215/suspect-christina-yuna-lee-murder/zh-hant/](https://cn.nytimes.com/usa/20220215/suspect-christina-yuna-lee-murder/zh-hant/)
 
-根据彭博社的疫苗追踪，目前，只有73.2%的居民接种了第一针疫苗。
+**       2****月****15****日，《纽约时报》报导了亚裔女子克里斯蒂娜****·****尤娜****·****李被陌生男子尾随并杀害的案件。**
 
-文字版原文：[香港或将在年内开放 但仍将强推疫苗接种](https://gnews.org/zh-hans/1978674/)
+**克里斯蒂娜****·****尤娜****·****李于****2****月****13****日被陌生男子尾随进入她在曼哈頓下城的家中，随即被该男子捅刺致死。嫌疑人已于****14****日因谋杀和入室盗窃罪被捕。**
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**该报导称李女士的遇害在纽约市的亚裔社区引发了恐惧，一位前来悼念的亚裔女士克里斯塔尔****·****张面对采访时说道****“****无论采取何种预防措施，年轻的亚洲专业人士都开始感到危险****”****。**
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
