--- a/gnews/13.md
+++ b/gnews/13.md
@@ -1,31 +1,57 @@
 ---
-title: 樱花FM&#124;新闻述评：北京冬奥赛事未完，丧事当喜事先办
+title: 中共大外宣战狼高志凯：彭帅很强壮，不可能被性侵
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013285/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2013381/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/PGoyEUkBbAAa2DTU4kJ2FBw4TqkHNDMSz5S2AwX4c2tR7yFUW2e_vjjRVxDv2dbj3qcroWDExAtt-6gnTYxW_h9jCm0YJcsHZ0yEbE2ADy6USaptef8hf1hz3K3qvc9watmxkoP0)
-**中共国官媒正在大肆鼓吹冬奥会的政治成就，欲将“冬奥会”取代“春天的故事”极力掩盖溃败的迹象，将美国及世界各国因疫情死去的人数当做共产党的喜讯看待。如此中共纳粹政权必将随着中共国冬奥会一起走向毁灭，因它给人类留下只有杀戮而非文明。**
+撰稿：一碗兰州（文远）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/兰州.png)图片来自网络
+彭帅事件持续发酵，近日，全球化智库副主任、曾任邓小平翻译的高志凯接受澳大利亚电视台采访时称，彭帅很强壮，不可能遭到性侵。此番说辞引发舆论哗然。
 
-据中共国新华社2月9日援引《经济参考报》题为《携手向未来的团结交响——记习近平主席出席北京冬奥会开幕式并举行系列外事活动》一文颇有迫不及待邀功行赏，丧事当做喜事办的感觉。按照惯例，总结类新闻需要活动终止后发布，新华社为何如此急于发布总结报告？这有点令人啼笑皆非。
+现年60岁的高志凯曾就读于苏州大学外语系和北京外国语大学，于1983年加入中共国外交部翻译室，担任邓小平的英文翻译。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/兰州2.png)图片来自网络
 
-根据消息，习近平值得高兴的事情又有哪些呢？如果说，2月4日至6日，习近平同所谓来华的外国元首、政府首脑、王室成员和国际组织负责人等国际贵宾一同出席北京第二十四届冬季奥林匹克运动会开幕式这件事令他感到高兴，那么欧美文明国家领导人或代表怎么一位都没有呢？哪些所谓元首来，背后花了多少钱，中国老百姓知道吗？他们来的人是支持习近平还是支持他们所关心的 “钱”呢？大概是党内面临的批评太过尖锐，需要发布一些成绩单来压压惊，不然，这有违一个大国媒体的规矩。
+澳大利亚热门新闻节目《60分钟》（60 Minutes Australia）日前对彭帅事件进行专题报道时，采访了全球化智库副主任、曾经担任邓小平英文翻译的中共国前外交官高志凯。高志凯公开质疑彭帅遭受性侵的真实性，称彭帅身体强壮，心智成熟，能够保护自己。高志凯说，如果他这种身高的人去性侵彭帅“是在幻想”，意指中共国前副总理张高丽性侵彭帅一事不实。
 
-- ***延展阅读：***[***巴布亚新几内亚总理在北京的中共病毒检测呈阳性***](https://abcnews.go.com/Health/wireStory/papua-guinea-pm-tests-positive-covid-19-beijing-82717706)
-- ***延展阅读：***[***纽约时报意见 | 在“种族灭绝奥运会”中，我们都是同谋吗？***](https://www.nytimes.com/2022/02/08/opinion/olympics-beijing-uighurs.html)
+高志凯的此番脑残洗地言论立即招来网友痛骂，澳大利亚网友说，彭帅身体再强壮也无法阻挡一个强大的专制政客的强迫性行为。另有网友说：“不是所有类型的力量和能力都是身体上的。他没有必要在身体上压倒她来做他指控的事情。对自己的生命和未来的恐惧可能是压倒性的。”
 
+“中共不把广大人民群众当人看。个人没有权利。彭帅可能是被他们软禁的。事实上，她并不是唯一被严密监视的人。她的每个家庭成员现在都在中共的监视之下”，一位网友说。
 
-习近平令媒体发布成绩单还有另一个政治目的，要急于宣布习“[春天的约定](https://baike.baidu.com/item/%E6%98%A5%E5%A4%A9%E7%9A%84%E7%BA%A6%E5%AE%9A/56266660)”这个风向标吗？中共国人似乎只认“[春天的故事](https://zh.wikipedia.org/wiki/%E6%98%A5%E5%A4%A9%E7%9A%84%E6%95%85%E4%BA%8B_%28%E8%91%A3%E6%96%87%E5%8D%8E%29)”。显然，这个约定是要进一步明确否定邓小平的改革开放，重拾毛泽东的知识青年上山下乡。既如此，这个约定倒不如叫“死亡的约定”罢了。
+“这就像说一个跑步运动员应该是安全的，因为他们可以跑掉”，turtlesneverlaugh写道。
 
-说起死亡，中共国新华社以快讯在9日这天炮制了《美国约翰·霍普金斯大学当地时间8日发布的新冠疫情最新统计数据显示，全球累计确诊病例超过4亿例》这一消息。实际上只有中共国[CGTN](https://www.cgtn.com/special/The-latest-on-the-COVID-19-pandemic.html)出口转内销的消息在说，而约翰·霍普金斯大学根本就没有发布相关数据，只有一个[中共病毒全球日增感染数据](https://coronavirus.jhu.edu/data/new-cases)的网页。值得注意的是，“[约翰霍普金斯大学的数据显示，美国新增冠状病毒病例的速度已从几周前的峰值下降了三分之二以上](https://www.usatoday.com/story/news/health/2022/02/08/covid-19-news-mask-mandates-ease-up-schools-indoor-settings/6699190001/)。”由此可见，中共国大概是因为美国新感染病毒人数在下降而不知所措，基于做点什么来向被他奴役的同胞继续洗脑、灌输一些错误的“爱国”思想。相信这还不是主要的，更主要的是西方国家正在选民的推动下逐渐放弃“疫苗暴政”政策，而病毒溯源正在发起新的一轮追查。共产党丧事喜办的办法就是拿美国人和世界人的鲜血祭奠他们的血旗。
+“自由人？在中国？如果她有家人需要保护，就不会。至于她身体太强壮，当有枪指著你的头威胁时，你就会惊讶将发生什么。只是想知道还有多少人被杀”，saltqueen99说。
 
-中共新华社这种新闻操守越来越趋于纳粹化，可谓到了共产党行将结束的末端。尽管世界得到文明是墓碑文明的代价，但西方文明的觉醒从来都不是共产主义阵营所能左右得了的，如今，中国人在新中国联邦的呼召下，正在觉醒的中国人也不再任由摆布，正如郭文贵先生援引共产党某将军所言，“如果习近平下令让我打台湾，我尽我所能，把炮弹导弹扔到北京中南海去。”
+澳喜GNEWS推特账号发布快讯并讽刺，难道要说是彭帅强奸了张高丽吗？
 
-文字版原文：[新闻述评：北京冬奥赛事未完，丧事当喜事先办](https://gnews.org/zh-hans/1978663/)
+这不是高志凯第一次给中国共产党洗地，面对BBC对于中共在新疆实施种族灭绝政策的报道，高志凯坚称没有事实根据。事实上，美国政府已官方认定中共国在新疆对维吾尔族及其他穆斯林少数民族犯下种族清洗与反人类罪。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+在2021年9月20日与澳大利亚媒体ABC’s China Tonight 的联线中，高志凯表示：“装备核潜艇后，澳大利亚在未来将会变成核攻击目标（丧失其作为无核地区而免受核攻击的地位）。”该言论被主持人认为是在威胁澳大利亚。
+
+高志凯还曾在Munk Dialogue节目中，就疫情经济、中共国疫情应对、中共国疫情数据造假、中美关系等议题为中共辩护，替中共掩盖罪行，继续欺骗世界。
+
+高志凯目前拥有众多头衔，包括全球化智库（CCG）副主任，耶鲁法学博士，国际燃气联盟(IGU)/世界燃气大会（WGC）2021-2024国家组织委员会当选主席；中国能源安全研究所所长；北斗产业促进会副会长；欧美同学会常务理事；香港OBOR集团董事长；北京能源俱乐部会员；总部在纽约的亚洲协会（Asia Society）全球理事会理事；总部在伦敦的能源情报集团（EIG）国际顾问委员会委员；沙特阿美公司顾问；香港若干家上市公司董事会成员；中国企业投资协会常务理事；中国太平洋经济合作全国委员会（PECC）对外经济技术合作委员会常务理事;中央电视台英语频道评论员等。
+
+高志凯毫无道德底线，颠倒黑白，一味给共产党的残暴行径洗地，丑恶嘴脸令世人唾弃。这类共产党人渣竟然是耶鲁大学法学博士，同时在多个国际组织和机构、香港上市公司及中共国相关机构任职，足见共产党在全世界的渗透之深，布局之广，对全球造成巨大危害。
+
+值得一提的是，高志凯担任副主任的全球化智库（CCG, CENTER FOR CHINA&GLOBALIZATION）是中共大外宣的中坚力量，拥有近百人的研究团队，是联合国特别咨询商，连续四年位列全球顶级智库百强榜。CCG同时也是中联部（中共共产党对外联络部，中共的情报组织）“一带一路”智库联盟理事单位，中共国中央人才工作协调小组全国人才理论研究基地，中共国人社部中国人才研究会国际人才专业委员会所在地，中共国财政部“美国研究智库联盟”创始理事单位，拥有中共国国家授予的博士后科研工作站资质，中国公共关系协会副会长单位。
+
+中共在世界范围内安插其战狼走狗，占据政治、经济、学术、媒体等关键位置，他们强行代表中国与中国人，实际是替共产党家族卖命，其流氓言行或将招致西方对全体华人的反感与歧视，给海外华人乃至中国树立敌人，给国家和民族带来灾难。
+
+参考消息：
+
+新浪新闻：[BBC涉疆报道连线中国学者遭怒怼:你们真该好好做功课](https://news.sina.cn/gn/2021-03-04/detail-ikftpnnz1976317.d.html)
+
+搜狐网：[三次亮相，为何这个舞台的辩论和对话如此重要](https://www.sohu.com/a/401689728_828358)
+
+CCG全球化智库官网：[高志凯](http://www.ccg.org.cn/archives/55265)
+
+维基百科：[高志凯](https://zh.wikipedia.org/wiki/%E9%AB%98%E5%BF%97%E5%87%AF)
+
+法广：[中国一前外交官称：彭帅高大力壮不可能被性侵](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220215-%E4%B8%AD%E5%9B%BD%E4%B8%80%E5%89%8D%E5%A4%96%E4%BA%A4%E5%AE%98%E7%A7%B0-%E5%BD%AD%E5%B8%85%E9%AB%98%E5%A4%A7%E5%8A%9B%E5%A3%AE%E4%B8%8D%E5%8F%AF%E8%83%BD%E8%A2%AB%E6%80%A7%E4%BE%B5)
+
+万维读者网：[剖析彭帅事件 中共外交官再出惊人言论](https://news.creaders.net/china/2022/02/14/2451603.html)
+
+发稿：MG4
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
