--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,20 +1,37 @@
 ---
-title: 辉瑞令人震惊的内部数据：新冠患者接种新冠疫苗 3 个月内死亡率约为 3%
+title: 美国务卿布林肯宣布关闭美驻乌克兰大使馆 并呼吁美在乌公民尽快离境
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2013273/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2013317/)
 
-编者：台湾宝岛农场 寻文客
+作者: 首尔天池农场—祥瑞舟
 
-辉瑞公司的新冠疫苗研究资料在美国《信息自由法案》的要求下正在逐渐被公布。不久前，加拿大非营利组织 Strong and Free Canada 发现并报导了辉瑞公司公开的研究资料中令人震惊的数据：新冠患者接种新冠疫苗 3 个月内死亡率约为 3%。 [1]
-根据辉瑞公司公开的新冠疫苗研究资料[2] ，2020年 12 月 1 日至 2021年 2 月 28 日期间，辉瑞公司的第一批获得临时授权的新冠疫苗开始紧急供应给世界各地。直到 2021 年 2 月 28 日，辉瑞公司收到了来自超过 60个国家的一共 42,086 份病例报告，其中有 1,223 例病例被确认死亡。即新冠病毒患者接种辉瑞 BNT 新冠疫苗后 3 个月内死亡率约为 3%(2.91%)。
 
-根据世界卫生组织的最新数据，新冠病毒的致死率约为 1.41%。 [3] 而根据辉瑞公司内部研究资料，接种辉瑞新冠疫苗 3 个月内死亡率已经是新冠病毒致死率的 2 倍有馀。从数据上看，新冠疫苗更像是对人类的毒药而不是对病毒的解药。
-此外，根据该研究资料，31% 成年人和 40% 的儿童在接种辉瑞新冠疫苗后遭受了长期的副作用。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-26.png)
+据路透社2月14日的报道，当地时间2月14日，美国国务卿布林肯宣布已下令关闭位于基辅的美国驻乌克兰大使馆，并将“暂时性地”把留在基辅的少数外交人员转移到乌克兰西部城市利沃夫。布林肯并呼吁位于乌克兰的美国公民尽快离境。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/blinken.jpeg)图片来源: 网络
+布林肯在声明中说：“我下令采取这些措施的原因只有一个，那就是我们工作人员的安全。我们强烈敦促所有留在乌克兰的美国公民立即离开乌克兰。” 他同时表示，这些决定并不会改变美国对乌克兰的承诺，美国也仍然会与俄罗斯保持沟通，为达成外交解决方案做进一步努力。美国国务院表示，本周末将在利沃夫维持一个小型领事馆来用于紧急服务。
 
-参考来源
-[1] https://strongandfreecanada.org/facts-and-data/pfizer-trial/
-[2] https://strongandfreecanada.org/wp-content/uploads/2021/12/Pfizer-trial-results-first-3-months.pdf
-[3] https://covid19.who.int/table
+在多国发布撤离在乌克兰公务和商务人员之后，美国国务卿关闭大使馆的行政命令，意味着俄乌紧张局势达到战争临界点的一个重大标志。
+
+新闻链接: [https://www.reuters.com/world/europe/us-moving-remaining-ukraine-embassy-staff-kyiv-lviv-blinken-2022-02-14/](https://www.reuters.com/world/europe/us-moving-remaining-ukraine-embassy-staff-kyiv-lviv-blinken-2022-02-14/)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-34.jpg)
+编辑/校对/发稿: 卡夫卡的甲壳虫
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+
+
+
+
 
  
 
