--- a/gnews/19.md
+++ b/gnews/19.md
@@ -1,32 +1,31 @@
 ---
-title: 有声｜奥地利政府的强制疫苗政策并未提高接种率
+title: 樱花FM&#124;新闻述评：北京冬奥赛事未完，丧事当喜事先办
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013251/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013285/)
 
-**By:秘翻新闻**
+音频：东京樱花团/战友520
+![](https://lh3.googleusercontent.com/PGoyEUkBbAAa2DTU4kJ2FBw4TqkHNDMSz5S2AwX4c2tR7yFUW2e_vjjRVxDv2dbj3qcroWDExAtt-6gnTYxW_h9jCm0YJcsHZ0yEbE2ADy6USaptef8hf1hz3K3qvc9watmxkoP0)
+**中共国官媒正在大肆鼓吹冬奥会的政治成就，欲将“冬奥会”取代“春天的故事”极力掩盖溃败的迹象，将美国及世界各国因疫情死去的人数当做共产党的喜讯看待。如此中共纳粹政权必将随着中共国冬奥会一起走向毁灭，因它给人类留下只有杀戮而非文明。**
 
-**2022-02-16**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/7-19.png)图片来源 Info Wars
-据《Info Wars》2月15日报道，奥地利最畅销的报纸《克朗报》称，政府提出的强制疫苗政策自2月5日生效以来，该国首都的疫苗接种率没有受到明显影响，甚至还可能下降了。
+据中共国新华社2月9日援引《经济参考报》题为《携手向未来的团结交响——记习近平主席出席北京冬奥会开幕式并举行系列外事活动》一文颇有迫不及待邀功行赏，丧事当做喜事办的感觉。按照惯例，总结类新闻需要活动终止后发布，新华社为何如此急于发布总结报告？这有点令人啼笑皆非。
 
-2月6日，即疫苗强制令执行后的第二天，接种新冠疫苗的人数明显减少，2月12日的数据也延续了这一趋势。市卫生委员彼得·哈克的办公室表示，预计在未来几天和几周内，疫苗接种人数不会上升。
+根据消息，习近平值得高兴的事情又有哪些呢？如果说，2月4日至6日，习近平同所谓来华的外国元首、政府首脑、王室成员和国际组织负责人等国际贵宾一同出席北京第二十四届冬季奥林匹克运动会开幕式这件事令他感到高兴，那么欧美文明国家领导人或代表怎么一位都没有呢？哪些所谓元首来，背后花了多少钱，中国老百姓知道吗？他们来的人是支持习近平还是支持他们所关心的 “钱”呢？大概是党内面临的批评太过尖锐，需要发布一些成绩单来压压惊，不然，这有违一个大国媒体的规矩。
 
-疫苗强制政策不仅没有提升接种率，还引发了奥地利民众举行了类似加拿大卡车司机那样的抗议活动。
-
-疫苗强制令的执行十分苛刻。公民在街上被随机拦下，并被迫接受警察的疫苗状况检查。奥地利政府甚至宣布他们将雇用人员“追捕拒绝接种者”。不接种疫苗的奥地利人将面临高达7200欧元的罚款，而那些拒绝支付的人还将面临12个月的监禁。
-
-此举引发了奥地利民众的强烈抗议。
-
-新闻来源[https://www.infowars.com/posts/forced-vaccination-policy-in-austria-has-no-impact-on-jab-uptake/](https://www.infowars.com/posts/forced-vaccination-policy-in-austria-has-no-impact-on-jab-uptake/)
-
-(秘翻新闻 巴拉克 编译报导)
-
-发布 : 恩典
-
-* * *
-![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+- ***延展阅读：***[***巴布亚新几内亚总理在北京的中共病毒检测呈阳性***](https://abcnews.go.com/Health/wireStory/papua-guinea-pm-tests-positive-covid-19-beijing-82717706)
+- ***延展阅读：***[***纽约时报意见 | 在“种族灭绝奥运会”中，我们都是同谋吗？***](https://www.nytimes.com/2022/02/08/opinion/olympics-beijing-uighurs.html)
 
 
+习近平令媒体发布成绩单还有另一个政治目的，要急于宣布习“[春天的约定](https://baike.baidu.com/item/%E6%98%A5%E5%A4%A9%E7%9A%84%E7%BA%A6%E5%AE%9A/56266660)”这个风向标吗？中共国人似乎只认“[春天的故事](https://zh.wikipedia.org/wiki/%E6%98%A5%E5%A4%A9%E7%9A%84%E6%95%85%E4%BA%8B_%28%E8%91%A3%E6%96%87%E5%8D%8E%29)”。显然，这个约定是要进一步明确否定邓小平的改革开放，重拾毛泽东的知识青年上山下乡。既如此，这个约定倒不如叫“死亡的约定”罢了。
+
+说起死亡，中共国新华社以快讯在9日这天炮制了《美国约翰·霍普金斯大学当地时间8日发布的新冠疫情最新统计数据显示，全球累计确诊病例超过4亿例》这一消息。实际上只有中共国[CGTN](https://www.cgtn.com/special/The-latest-on-the-COVID-19-pandemic.html)出口转内销的消息在说，而约翰·霍普金斯大学根本就没有发布相关数据，只有一个[中共病毒全球日增感染数据](https://coronavirus.jhu.edu/data/new-cases)的网页。值得注意的是，“[约翰霍普金斯大学的数据显示，美国新增冠状病毒病例的速度已从几周前的峰值下降了三分之二以上](https://www.usatoday.com/story/news/health/2022/02/08/covid-19-news-mask-mandates-ease-up-schools-indoor-settings/6699190001/)。”由此可见，中共国大概是因为美国新感染病毒人数在下降而不知所措，基于做点什么来向被他奴役的同胞继续洗脑、灌输一些错误的“爱国”思想。相信这还不是主要的，更主要的是西方国家正在选民的推动下逐渐放弃“疫苗暴政”政策，而病毒溯源正在发起新的一轮追查。共产党丧事喜办的办法就是拿美国人和世界人的鲜血祭奠他们的血旗。
+
+中共新华社这种新闻操守越来越趋于纳粹化，可谓到了共产党行将结束的末端。尽管世界得到文明是墓碑文明的代价，但西方文明的觉醒从来都不是共产主义阵营所能左右得了的，如今，中国人在新中国联邦的呼召下，正在觉醒的中国人也不再任由摆布，正如郭文贵先生援引共产党某将军所言，“如果习近平下令让我打台湾，我尽我所能，把炮弹导弹扔到北京中南海去。”
+
+文字版原文：[新闻述评：北京冬奥赛事未完，丧事当喜事先办](https://gnews.org/zh-hans/1978663/)
+
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
