--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,46 +1,21 @@
 ---
-title: 美国财政部确认：加密矿工免于IRS报告规则
+title: 樱花FM&#124;东京大学副教授预测中共病毒的次生灾难：人荒将至
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013100/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013283/)
 
-编译： Jenny Ball
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/tqRGmgMYFyPcmbi_bhZLeyC0O9rgriLNVZtWi319burlplVZiWoOoQp86onJ9GMhqS3n1B3g1iqm9e4eW5nQwhfuOmFfdrIGTDIhKjR4t6YSJBpFI0Pgj3Y2XivtR49y3iX00729)
+2月9日朝日电视报道：东京大学副教授仲田泰祐研究团队发表了他们的估计数字，由于经济不安感的增加和中共病毒（新冠病毒）带来的邂逅减少，2020年和2021两年失去的婚姻数量总计大约为11万。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1558.png)图片来源：cointelegraph.com
+如果没有结婚人数增加作为填补，这将导致未来几年的出生人口数下降约21万。多年来，婚姻和出生率一直在下降，如果中共病毒的影响长期存在，可能会加速这一趋势。
 
-美国的加密货币行业即将在法律上取得重大胜利，因为美国财政部计划将加密货币矿工和其他“附属方”从税收报告规则中解放出来。
+笔者能想到的是，除此之外，中共病毒造成的大量死亡，也会成为人荒的到来的加速器。
 
-在周五给一群参议员的一封信中，美国财政部表示，它计划免除加密矿工、赌注者和其他市场参与者的规则，这些规则要求加密经纪人与美国国税局共享其客户交易的数据。
+文字版原文：[东京大学副教授预测中共病毒的次生灾难：人荒将至](https://gnews.org/zh-hans/1978653/)
 
-“感谢财政部确认加密矿工、质押者，以及出售钱包硬件和软件的人，不受纳税申报义务的约束，”参议员罗伯·波特曼（Rob Portman）在推特上宣布这一消息时说。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1560.png)图片来源：cointelegraph.com
-
-在这封信中，负责立法事务的财政部助理部长乔纳森戴维森表示，该部门的立场是，“无法获得对 IRS 有用的信息的辅助方，不会被经纪人的报告要求所捕获。”
-
-戴维森还强调，加密验证器“不太可能知道交易是否是销售的一部分”，而参与提供与硬件或软件加密钱包相关的服务的实体“没有进行经纪人活动”。
-
-信中指出，财政部还将考虑“数字资产市场中的其他各方，例如，中心化交易所，以及通常被描述为去中心化交易所和点对点交易所的交易方，在多大程度上应被视为经纪人”。
-
-《彭博社》报道称，财政部正计划发布拟议的法规，以包括其对经纪人定义的立场。
-
-正如之前报道的那样，美国总统乔·拜登在 2021 年 11 月中旬签署了 1 万亿美元的基础设施法案，要求加密市场参与者向 IRS 报告所有价值超过 1 万美元的数字资产交易。
-
-包括帕特·图米（ Pat Toomey）、罗恩·怀登（Ron Wyden ）和辛西娅·卢米斯（ Cynthia Lummis） 在内的几位参议员，随后在 12 月敦促财政部澄清基础设施法中经纪人的定义，并计划提供相关立法。 一群众议院民主党人也在 11 月支持了一项类似的倡议。
-
-**评论：这就是为什么文贵先生对喜币的未来充满信心，因为从针对加密／数字货币，美国出台的政策法案，就像是照着喜币的标准为基准的。还犹豫什么，未来经济将是数字货币的时代，而双币设置，黄金锚定的喜币必是不二的选择，成为未来财富的拥有者，时不我待啊。**
-
-素材链接：[cointelegraph.com] [Crypto miners exempt from IRS reporting rules, US Treasury affirms](https://cointelegraph.com/news/crypto-miners-exempt-from-irs-reporting-rules-us-treasury-affirms)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
-
-
-
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
