--- a/gnews/23.md
+++ b/gnews/23.md
@@ -1,48 +1,20 @@
 ---
-title: 中共正在将其极权主义行为不遗余力地输送到全球
+title: 辉瑞令人震惊的内部数据：新冠患者接种新冠疫苗 3 个月内死亡率约为 3%
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2013064/)
+`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2013273/)
 
-翻译：小小小鸟（酷翻组）
-采集：玫瑰新闻组
-校对：sherryok (水云间)
+编者：台湾宝岛农场 寻文客
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2163.png)2018年7月，在刚果科卢韦齐，中国华友钴业的子公司刚果东方矿业旗下的卡苏洛矿附近，一个年轻人将一袋钴放在一个11岁男孩的背上：罪恶的行业正在运作
+辉瑞公司的新冠疫苗研究资料在美国《信息自由法案》的要求下正在逐渐被公布。不久前，加拿大非营利组织 Strong and Free Canada 发现并报导了辉瑞公司公开的研究资料中令人震惊的数据：新冠患者接种新冠疫苗 3 个月内死亡率约为 3%。 [1]
+根据辉瑞公司公开的新冠疫苗研究资料[2] ，2020年 12 月 1 日至 2021年 2 月 28 日期间，辉瑞公司的第一批获得临时授权的新冠疫苗开始紧急供应给世界各地。直到 2021 年 2 月 28 日，辉瑞公司收到了来自超过 60个国家的一共 42,086 份病例报告，其中有 1,223 例病例被确认死亡。即新冠病毒患者接种辉瑞 BNT 新冠疫苗后 3 个月内死亡率约为 3%(2.91%)。
 
-美国参议员马可*·*卢比奥（R-FL）是参议院情报特别委员会副主席、国会及行政当局中国委员会高级成员和参议院外交关系委员会成员。
+根据世界卫生组织的最新数据，新冠病毒的致死率约为 1.41%。 [3] 而根据辉瑞公司内部研究资料，接种辉瑞新冠疫苗 3 个月内死亡率已经是新冠病毒致死率的 2 倍有馀。从数据上看，新冠疫苗更像是对人类的毒药而不是对病毒的解药。
+此外，根据该研究资料，31% 成年人和 40% 的儿童在接种辉瑞新冠疫苗后遭受了长期的副作用。
 
-我们都知道中国共产党在其境内可怕的侵犯人权行为：现代版的奴隶制度、在新疆对维吾尔族穆斯林和其他民族的持续种族灭绝、对宗教和新闻自由的打击——不胜枚举。而没有被广泛报道的是，该党还成功地将其滥用职权的做法输送到了全球。
-
-中共的“一带一路”（BRI）派遣中共国公司和劳工到发展中国家从事基础设施建设。北京将“一带一路”宣传为中共国及其“伙伴”国家的“双赢”互惠。但实际上，“一带一路”的贷款诱使发展中国家陷入经济和政治依赖，这反过来又会使他们更容易受到中共的伤害。
-
-然而，根据最新的研究，这并不是“一带一路”诡异的全部。在全球大部分地区，从事“一带一路”项目的中共国公司正在大规模地滥用劳工。从“一带一路”开启的2013年到2020年间，商业与人权资源中心就收到了679起与中共投资有关的侵犯人权行为的指控。这些指控大部分来自东南亚、撒哈拉以南的非洲和拉丁美洲，但也有来自南亚和中东的投诉。
-
-最常见的指控是针对中共国的采矿业务。在厄瓜多尔和秘鲁，中国矿工任意拘留和殴打当地居民。在赞比亚的一个煤矿，为阻止抗议活动他们甚至向工人开火。中共国建筑公司也臭名昭著，以侵犯柬埔寨、老挝和斐济当地人的土地权而声名狼藉。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2162.jpg)中共投资正在推动柬埔寨的建设热潮，但也带来了令人头疼的问题。 （照片由Akira Kodaka提供）
-
-各行各业都发现了侵犯人权的行为。在乌干达和巴基斯坦，中共国能源公司与当地民众发生冲突，给其带来了与污染相关的健康风险。在南美和南亚沿岸，中共国渔船严重染指海洋环境，掠夺渔民生计。在整个发展中国家，中共国投资者经常会因为信息公布不充分和缺乏环境影响评估而被指责。
-
-罪恶还远不止于此。2016年，国际特赦组织发现中共国公司华友钴业正在使用40,000名被奴役的儿童——其中一些年仅7岁——在刚果民主共和国开采主要矿产。孩子们在没有人身保护的情况下“背负重担，每天在高温下工作一天仅赚1美元或2美元”，并且一直受到公司员工的殴打和勒索。尽管国际上愤愤不平，但这个罪恶的行业仍在运作。
-
-这些仅是中共恐怖式操作和颠覆性影响的几个例子。
-
-即使中共国公民在国外也不能免受虐待。通过对在不同国家“一带一路”的工作人员的采访发现，中共国公民一旦出国，护照就会被没收，并遭受加班、欠薪、恐吓等诸多问题。这些故事令人不寒而栗，揭示了其“一带一路”本质上是一个全球人口贩卖集团。
-
-各国必须意识到“一带一路”的阴暗面及其附带的所有条件。这清楚地表明，中共无论在哪里运作，都会带来剥削和完全无视人的尊严。中共知道中共国企业（其中许多是国有企业）的侵权行为，但却不愿追究这些企业的责任。此外，据报道，它正在利用其权力掩盖这些滥用行为，这意味着中共与其附属公司一样有罪。
-
-中共国企业虐待工人本身就是一种严重的犯罪行为，它对我们以规则为基础的国际秩序也构成了严重威胁。这些罪行——土地盗窃、恐吓、环境退化、暴力和奴役——不仅违反了做为一个人的尊严，也违反了主权国家的法律。换言之，北京政权方面的所作所为是公然、咄咄逼人地破坏发展中国家的独立与稳定。
-
-这些只是我们已经知道的更多的证据：北京将自己视为世界的中心，有权获得其他国家的附庸进贡和毫无怀疑的尊重。
-
-在举办2008年奥运会时，中共提出了“一个世界，一个梦想”的口号。2014年，习近平总书记宣布要“把中共国周边地区打造成为人类命运共同体”。虽然这些只是宣传路线，但它们也暗含了其政党长期目标的真实野心，即推翻现有的国际秩序并按照自己的形象来重塑新的秩序。
-
-中共国企业的人权侵犯证实了“一带一路”不是一个双赢的工程，而是一个让伙伴国臣服于中共的新殖民主义项目。北京政权“新丝绸之路”的目的是复兴中共国民族主义者对前现代世界的看法，在这个世界中，中共国处于舞台的核心，首要做的便是拉拢发展中国家并使其依赖中共。
-
-全球各国不应该让极权主义政权虐待他们的人民，欺凌和边缘化他们的政府。他们的领导人必须拒绝会损害其国家主权和公民福祉的片面“交易”。我们需要揭露中共公司的滥用职权行为，否则北京方面会巧妙地掩盖这些事实。
-
-**审核校对：Barry Jack
-上传排版：V在途中**
+参考来源
+[1] https://strongandfreecanada.org/facts-and-data/pfizer-trial/
+[2] https://strongandfreecanada.org/wp-content/uploads/2021/12/Pfizer-trial-results-first-3-months.pdf
+[3] https://covid19.who.int/table
 
  
 
