--- a/gnews/29.md
+++ b/gnews/29.md
@@ -1,29 +1,32 @@
 ---
-title: 中日财经爆&#124;澳洲葡萄酒商或用NFT化解中共贸易报复
+title: 秘翻新闻｜网络爆料中共极端“清零”防疫的暴利黑幕
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2012861/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2012964/)
 
-撰稿：东京樱花团/peterwong
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1554.png)[图片来源](https://kknews.cc/zh-sg/food/22xe5k9.html)
-澳洲主要葡萄酒生产商表示，中共国对澳洲进口葡萄酒课征严格关税以来，对中共国的销售已经蒸发，但其他地方的旺盛需求帮助避免了灾难，NFT或为新利润增长点。
+**By:[秘翻新闻](https://gtv.org/broadcast/watch/620c93b0432ae869226d6537)**
 
-澳洲富邑葡萄酒集团(Treasury Wine Estates Limited)2月15日公布，在截至2021年12月31日的六个月内，净利润同比下降7.5%，原因是中共国对澳洲酒征收关税，以及中共病毒（新冠病毒COVID-19）疫情的冲击，对中共国的销售额，从一年前的7,800 万澳元跌至200万澳元( 140万美元)。
+**[2022-02-16](https://gtv.org/broadcast/watch/620c93b0432ae869226d6537)**
 
-但富邑葡萄酒集团执行长福特(Tim Ford)16日表示，其它市场，特别是马来西亚、新加坡和泰国的强劲表现，在一定程度上抵消了在中共国业务的萎缩。
+**今日主题：**
 
-澳洲和中共国的关系，从激烈的口水战蔓延到贸易关系。中共国对澳洲进口葡萄酒课征高关税。牛肉、大麦、煤炭和其他主要出口产品也成为中共国报复的目标。
+**1.网络爆料中共极端“清零”防疫的暴利黑幕**
 
-在实施这项关税前，中共国的销售额在高峰时期占澳洲葡萄酒出口的41%，引发了人们担心贸易战可能会摧毁澳洲葡萄酒产业。中共国对澳洲葡萄酒课征高达116.2%至218.4%的高关税。世界贸易组织(W WTO)正在审理澳洲提出的申诉。
+**2.大陆中小银行股权拍卖遇冷 近六成流拍**
 
-财务长杨恩(Matt Young)16日在财报视频会议上表示，其他市场的葡萄酒出口水平依然强劲。
+**3.中共国因俩疑似偷渡者发动群众举报 最高悬赏十万**
 
-富邑葡萄酒集团还引用其半年收益报告强调一些证明是有利可图的创新，例如一种非同质化代币(Non-Fungible Token, NFT)标价为13万美元的稀有葡萄酒，在12秒内销售一空。
+**4.加拿大安省省长：打一针还是打十针皆不能避免感染**
 
-消息来源：[不必靠中國 澳洲葡萄酒商從關稅制裁中脫困](https://www.rti.org.tw/news/view/id/2124683)
+**5.日本呼吁对俄罗斯准备入侵乌克兰做出强硬回应**
 
-*编辑：东京樱花团/知了知了
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+**6.五角大楼:中共支持俄对乌立场 令人警觉**
+
+🔗**GTV链接:**[https://gtv.org/broadcast/watch/620c93b0432ae869226d6537](https://gtv.org/broadcast/watch/620c93b0432ae869226d6537)
+
+**发布:星星**
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
