--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,33 +1,50 @@
 ---
-title: 短视频：特鲁多政府抹黑大卡车运动为暴力行为
+title: 文·贵天成——文贵先生谈“蓝、金、黄”计划（八）
 ---
-`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2012671/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2012933/)
 
-翻译：俏如来
-校对：精靈藍
-视频字幕：qingjing（清净）
-编辑：文泓
+#### 整理：BENJ1
+编辑：小红帽
 
-- ![](https://assets.gnews.org/wp-content/uploads/2022/02/无标题-3.png)图片来源：视频截屏
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/fengmian0216-1.jpg)图片来源：雅典娜农场设计组（614）
 
 
-根据贾斯汀·特鲁多的说法，在渥太华市拥有汽油现在是一种犯罪行为。
+**郭文贵先生2017年9月6日直播**
 
-现在，需要明确的是，渥太华确实宣布进入紧急状态，因为卡车司机们“点燃了一座法院，开枪伤人或夷平了教堂”——这是黑命贵运动（Black Lives Matter，BLM）的那些人做了所有这些事情。但贾斯汀·特鲁多强烈支持 BLM运动。前几天他还重申支持BLM，这就是问题所在。我们将让渥太华市长解释为什么和平的卡车司机对加拿大构成迫在眉睫的危险？
+别小看了共产党这个系统！共产党这个系统就是绞肉机！绞肉机！现在谁摁着就使劲绞！使劲绞，转的快一点儿？慢一点儿？着点儿！共产党最后把自己也得绞进去！因为他绞着绞着自己就老了！权力萎缩了！犯罪多了！战斗力不行了！新的来了就把它给绞进去！这就是整个的中国的官场的文化！没有真相！没有公平！没有真理！你看看我们整个海外的世界,被蓝金黄到什么程度？
 
-当你看到抗议变成某种有趣的嘉年华时，你会感到不安，那里有充气城堡、热水浴缸和桑拿房。对过去七天一直忍受卡车司机的各种恶行的市民来说是种极端侮辱，对卡车司机的做法表现出极大的麻木不仁。
+**郭文贵先生2017年9月9日直播**
 
-卡车司机竟然为孩子们准备了充气城堡，没有孩子的渥太华市长咆哮着说：“让我们伤害、惩罚他们。”是的，女士们，先生们，在卡车司机的领地，孩子们在充气城堡玩耍上是一个黑暗的场景。当然，与此同时，孩子的父母会向政府展示那些负责让孩子在充气城堡上玩耍的人是在犯罪。请观看一位“白人至上主义者”的抗议，解释他抗议的动机。
+美国的法律,还有美联社和中国的沟通,大家能看到蓝金黄。盗国贼自己恼火,蓝金黄也到了美联社,就在我们身边,而且你看到的张痔疮还有癞蛤蟆,李伟东那个畜生。李伟东简直是个畜生。他发出去的，光说坏话的那些语音就不能听了。天下还有这种坏蛋,这个癞蛤蟆。这个李伟东简直是个畜生。这个李伟东，在癞蛤蟆里，还有屎诺这种人,还有这个这个张痔疮,这些人都是蓝金黄者。我今天在这宣布，我们很快会采取一系列的法律措施,对癞蛤蟆里的这些人–张痔疮，夏痔疮,还有美联社,我们早在几周前就有了计划。等着到他们都出手，都出完手以后，我们再出手。现在基本上已经接近成熟了,就到过谁这招用得差不多了,我们也要开始了。我们也要开始对他们出手。这些人，所有的这些作为，都是蓝金黄的结果。
 
-你当时在哪里呢？你根本不在那里。但是现在，你冒着严寒出来反对我的基本人权和自由吗？我不会接受你这种做法，我并不孤单，站在旁边的就是我的兄弟。这是我的兄弟，就在这里。你们都没有权利告诉我应该与谁交往，不与谁交往。因为你没有站出来表达你对贾斯汀·特鲁多因为我的医疗决定而禁止我离开这个国家的做法的担忧，只是因为我做了一个他不喜欢的决定他就不允许我离境。
+曹长青先生披露当中美联社和中国政府的蓝金黄的过程和沟通，胡说所谓的这个长篇的定义，那种完全是假的定义。美联社那个小中国华裔的那个男孩子,绝对是有大问题的。
 
-视频链接：[Wittgenstein 在 Twitter: “Tucker Carlson on how Canadian liberals want to intimidate the truckers https://t.co/Mt9Q4ccFCc” / Twitter](https://twitter.com/backtolife_2022/status/1491163995877027844?t=0ntydQ3gOH-bxoV5k-VL3A&amp;s=19)
-发布：文泓
-更多资讯，请关注：**
-**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+**郭文贵先生2017年9月10日直播**
+
+这是文贵的个性和我的做人方式,我全力以赴对付海内外的蓝金黄者,和沉默的力量。这是破坏中国走向民主法治的狗和打手！我们必须拨开所有盖在我们老百姓头上的尘土，那些虱子，那些肮脏的东西。
+
+**郭文贵先生2017年9月10日直播**
+
+孙立军培养了一批吴征这样的人在海外搞蓝金黄。而且在这所有的情报系统里边儿,特别是上海江浙一代的人,安全厅的特务们,所有的人都被他控制着。
+
+资料来源：郭先生GTV和盖特直播视频
+
+往期回顾：
+[文·贵天成——文贵先生谈“蓝、金、黄”计划（一）](https://gnews.org/zh-hans/2008275/)
+[文·贵天成——文贵先生谈“蓝、金、黄”计划（二）](https://gnews.org/zh-hans/2008300/)
+[文·贵天成——文贵先生谈“蓝、金、黄”计划（三）](https://gnews.org/zh-hans/2008496/)
+[文•贵天成——文贵先生谈“蓝、金、黄”计划（四）](https://gnews.org/zh-hans/2008314/)
+[文•贵天成——文贵先生谈“蓝、金、黄”计划（五）](https://gnews.org/zh-hans/2008332/)
+[文•贵天成——文贵先生谈“蓝、金、黄”计划（六）](https://gnews.org/zh-hans/2008361/)
+[文•贵天成——文贵先生谈“蓝、金、黄”计划（七）](https://gnews.org/zh-hans/2008344/)
+
+发布：Frank2021
+
+**更多资讯，请关注：**
+[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
 [澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
 [澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
-[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/Nz26pG64XF)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
 [澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
  
