--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,23 +1,25 @@
 ---
-title: 樱花FM┃拜登政府二度批准对台军售
+title: 中共病毒感染后心血管疾病的风险增加
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2012339/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2012513/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/bSY1RrxVwjxw0RUrhRHAMIh8oqydLM4Bsh03EHQsAxcJnxDa0T9AUFsgE5WwvhYNL3j2UQ901b_P_LWLAU7S9JdmCVyyaxGuowHfMynHltzoHBB2kymUJfvTlGLPmX-VlLlDo2Bx)
-美国国务院周一 (2月7日) 宣布，基于《台湾关系法》，已批准对台湾出售价值1亿美元、为期5年的爱国者系统工程勤务计划。美国国务院表示，这批军售案能有助于提高台湾的安全，并对维持区域政局稳定、军事平衡和经济进步都有帮助。这也是拜登政府上台后，第二次核准对台湾的军售。
+撰稿：东京樱花团/立正道
 
-美国国务院政军局在一份声明稿中说，这次军售将会有助于台湾维持其飞弹密度、确保台湾的空中作战战备能力，以达到区域吓阻作用。这次军售主要是提供支持台湾参与爱国者飞弹工程勤务及飞弹效能鉴测的相关设备与服务，为期共5年，提供的协助包含工程服务支援，以及维持与改善爱国者防空飞弹系统。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/中共病毒感染后心血管疾病的风险增加.png)[图片来源](https://news.yahoo.co.jp/articles/4559c508abfad26cde290f3000a83079e125519f/images/000)
 
-美国国务院政军局也重申，核准这次军售是为了使台湾的军队持续现代化且保持可靠的防御能力，因为这样的发展符合美国的国家、经济与安全利益。这次军售将会有助于台湾维持其飞弹密度、确保台湾的空中作战战备能力，以达到区域吓阻作用。
+华盛顿大学一项研究指出，感染中共病毒（新冠病毒Covid-19）后会增加患心脏和血管疾病的风险，该研究发表在美国一家医学杂志上。
 
-台湾国防部说美国此举是基于《台湾关系法》与“六项保证”，持续帮助台湾维持足够的自我防卫能力，所以台湾国防部也向美国政府表示感谢。
+7日，美国华盛顿大学利用2020年3月至2021年1月在一家退伍军人医院里，对感染中共病毒后存活30天以上的约15万人的数据发布了研究结果。
 
-文字版原文：[拜登政府二度批准对台军售](https://gnews.org/zh-hans/1979109/)
+无论是严重还是轻微者，感染后第一年患20种心脏和血管系统疾病的风险增加。 与感染前的数据相比，心脏病发作增加了63%，中风增加了52%，心力衰竭增加了72%。调查对象主要是退伍军人的白人男性，他宣称，“一般来说，数据虽然存在缺陷，但足以敲响警钟”。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+信息来源：
+
+[コロナ感染後 心臓や血管系の疾患リスクが上昇する可能性を指摘 ワシントン大学](https://news.yahoo.co.jp/articles/4559c508abfad26cde290f3000a83079e125519f)
+
+*编辑：东京樱花团/知了知了
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
