--- a/gnews/4.md
+++ b/gnews/4.md
@@ -1,19 +1,36 @@
 ---
-title: 纽约一亚裔女子被尾随并杀害
+title: 2月16日关键词是战争和平通货膨胀
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2013405/)
+`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/2013501/)
 
-撰文：台湾宝岛农场 寻文客
+信息来源： 路透社
+
+翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
+
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/CCFBUIPDZVNB3NLFIXHESJVALQ.jpg)
 
 
+图片来源： 路透社
 
-**【新闻链接】**[https://cn.nytimes.com/usa/20220215/suspect-christina-yuna-lee-murder/zh-hant/](https://cn.nytimes.com/usa/20220215/suspect-christina-yuna-lee-murder/zh-hant/)
+根据白宫的说法，2 月 16 日是俄罗斯打算入侵乌克兰的时间，但莫斯科暗示它正在撤出在乌克兰边境集结的一些军队的信号在周二提振了华尔街，并推动了避险美国国债和德国国债的抛售。
 
-**       2****月****15****日，《纽约时报》报导了亚裔女子克里斯蒂娜****·****尤娜****·****李被陌生男子尾随并杀害的案件。**
+市场涨势延续至周三,。日本日经指数上涨 2.2%，欧洲股市开盘走高，但美国股指期货再次显示出谨慎迹象。
 
-**克里斯蒂娜****·****尤娜****·****李于****2****月****13****日被陌生男子尾随进入她在曼哈頓下城的家中，随即被该男子捅刺致死。嫌疑人已于****14****日因谋杀和入室盗窃罪被捕。**
+当然，还有其他发动战争的方式。乌克兰指责俄罗斯在周二发动了一系列网络攻击。请注意，俄罗斯议会要求普京总统承认两个莫斯科支持的乌克兰东部分离地区是独立的。
 
-**该报导称李女士的遇害在纽约市的亚裔社区引发了恐惧，一位前来悼念的亚裔女士克里斯塔尔****·****张面对采访时说道****“****无论采取何种预防措施，年轻的亚洲专业人士都开始感到危险****”****。**
+经济数据发布和央行也在占领市场。那些希望通胀见顶迹象的人将​​对英国和美国的最新数据感到沮丧。上个月英国消费者价格以近 30 年来最快的年度速度上涨，较 12 月小幅上涨
+
+这是在周二美国数据显示核心工厂通胀率（剔除食品和能源后生产商的成本）创下一年来最大涨幅的前一天。
+
+提前大幅加息的前景使债券曲线显着变平，两年期和 10 年期英国国债收益率之间的差距很快就会转为负值——这种所谓的反转通常预示着经济衰退。
+
+由于战争担忧消退提振 10 年期国债收益率，周二美国国债收益率曲线变陡，但一天前它是自 2020 年年中以来的最窄水平。对一些人来说，曲线的状态表明央行在通胀斗争中已经落后，必须更快地采取行动，收紧政策才能迎头赶上。
+
+因此，现在所有人都在关注美联储上次会议的纪要。它们可以表明决策者是否会在 3 月的会议上倾向于将利率提高 0.5 个百分点，或者他们是否倾向于更快地通过出售美联储持有的债券来收紧金融状况。
+
+🔗 [2月16日关键词是战争和平通货膨胀](https://www.reuters.com/markets/europe/war-peace-inflation-2022-02-16/)
+
+编辑发布： Shuizhuyu
 
  
 
