--- a/gnews/1.md
+++ b/gnews/1.md
@@ -1,52 +1,25 @@
 ---
-title: 特鲁多的Covid“疫苗”暴政使北美汽车业摇摇欲坠
+title: 特鲁多在议会上回应疫苗强制令时惨遭嘲笑
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013524/)
+`墨尔本雅典娜农场` [轉載自GNews](https://gnews.org/zh-hans/2013605/)
 
-翻译： Jenny Ball
+##### 素材：熊猫乱滚
+翻译：Frank
+校对：Lish
+剪辑|字幕： 向上James
+编辑：Mttfly
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1567.png)图片来源：newstarget.com
+在爱尔兰、瑞典、挪威、以色列、捷克共和国、英国、西班牙、丹麦等国家都在取消限制和疫苗强制令时，加拿大总理特鲁多一意孤行，仍然宣扬所谓“遵循科学”，以加拿大人的利益为幌子，继续强推毒疫苗。在与保守党领袖Candice Bergen关于疫苗强制的论战中，特鲁多发言时惨遭议会众人嘲讽。
 
-在加拿大和美国都有工厂的汽车制造商，真正开始感受到贾斯汀·特鲁多的武汉冠状病毒（Covid-19）“疫苗”命令的伤害，但他拒绝让步。
+*发布：Mttfly*
 
-尽管拜登政权暗示要减少一些限制，但据报道，特鲁多“坚决反对放宽加拿大的 COVID-19 限制，因此，最近几周抗议限制和反对特鲁多本人的压力越来越大。 ”
+**更多资讯，请关注：
+**[澳大利亚墨尔本雅典娜农场Twitter](https://twitter.com/HimalayaAthena1)：HimalayaAthena
+[澳大利亚墨尔本雅典娜农场Gettr](https://www.gettr.com/user/himalayaathena)：himalayaathena
+[澳大利亚墨尔本雅典娜农场YouTube](https://youtube.com/channel/UC-tz4lmA7mG3FzYbylgqjTQ)
+[澳大利亚墨尔本雅典娜农场Discord](https://discord.gg/KQQVvwBNvm)
+[澳大利亚墨尔本雅典娜农场GTV直播1台](https://www.gtv.org/user/5f72f8f60cd82c6bb6a248a6)
 
-特鲁多未能放弃暴政，导致加拿大和底特律之间的桥梁形成封锁，迫使福特工厂关闭。报告显示，其他汽车制造商也在遭受痛苦。
-
-美联社新闻报道说：“在底特律和安大略省温莎之间的大使桥，大多数人乘坐皮卡车的抗议活动，已经进入了第三天。” “进入加拿大的交通被阻止，而前往美国的交通仍在流动。”
-
-“这座桥承载了两国之间 25% 的贸易，加拿大当局表示越来越多的担忧对经济的影响。”
-
-特鲁多所要做的就是：停止对他的国家人民的暴政，整个不断升级的局势就将立即结束。 然而，由于他拒绝这样做，抗议可能会无限期地持续下去，对汽车工业和整个北美经济造成越来越大的伤害。
-
-拜登政权将汽车行业危机归咎于抗议者，而不是特鲁多。
-
-福特在一份声明中声称，零部件短缺，迫使其关闭了温莎的一家发动机工厂。由于特鲁多的暴政导致供应不足，位于安大略省奥克维尔的福特装配厂，也不得不缩减工期。
-
-福特在一份声明中说：“底特律-温莎大桥的中断，伤害了边境两侧的客户、汽车工人、供应商、社区和公司。”
-
-通用汽车公司同样不得不取消其在密歇根州兰辛附近的中型 SUV 工厂的第二班，尽管发言人丹弗洛雷斯表示，这只是暂时的举措。
-
-丰田发言人表示，由于零部件短缺，他的公司将暂时无法在加拿大的三个工厂生产任何产品。他指责供应链、天气和“与大流行相关的挑战”，但在封锁形成后立即宣布了这一消息，这足以说明真正的原因是政府的封锁。
-
-在斯特兰蒂斯（ Stellantis），前菲亚特-克莱斯勒，业务基本正常，但该公司确实不得不缩短其在温莎的小型货车工厂的一些班次。
-
-与此同时，拜登政权将所有这些经济破坏归咎于封锁，而不是特鲁多。
-
-白宫新闻秘书宣布：“封锁对汽车行业的供应链构成风险，因为这座桥梁是汽车、零部件和零部件的关键通道，延迟可能会扰乱汽车生产，”但并未提及首先导致了抗议的相关疫苗授权。
-
-阿尔伯塔省库茨过境点的第二次封锁，也关闭了该入境口岸的经济活动。在过去的一个半星期里，数十辆卡车停在那里，还有数百辆卡车占据了加拿大首都渥太华市中心。
-
-“特鲁多不行动，我们就不动，”来自阿尔伯塔省科尔代尔的饲养场经营者、抗议者约翰·凡瑞维克（ John Vanreeuwyk ）说。
-
-素材链接：[newstarget.com][North American auto industry teetering towards collapse due to Trudeau’s covid “vaccine” tyranny](https://www.newstarget.com/2022-02-14-auto-industry-collapse-trudeau-covid-vaccine-tyranny.html)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
