--- a/gnews/14.md
+++ b/gnews/14.md
@@ -1,45 +1,36 @@
 ---
-title: 经济封锁者现因卡车司机的“经济影响”欲对其进行制裁
+title: 2月16日关键词是战争和平通货膨胀
 ---
-`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013351/)
+`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/2013501/)
 
-编译： Jenny Ball
+信息来源： 路透社
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1561.png)图片来源：newstarget.com
+翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
 
-除了行使威权主义之外，民主党及其支持者唯一擅长的另一件事，就是虚伪，对正在进行的涉及加拿大卡车司机的自由车队抗议活动，大量传播虚伪的信息。
-
-在过去的两年里，民主党人和他们的左翼马克思主义盟友，推动并实施了对他们的城市和州的封锁，理由是需要“阻止 COVID-19 的传播”，这破坏了他们的经济，并摧毁数百万美国人的生活和生计。
-
-更重要的是，他们毫不掩饰地宣扬要持久的封锁，并且对封锁造成的灾难毫无同情心——因为作为民选领导人，他们从来不用担心薪水或一顿饭。与此同时，人民则因试图谋生成了“罪行”而被捕、罚款或入狱，普通美国人被告知，经济远没有“拯救生命”重要。
-
-快进到今天。
-
-数以千计的加拿大卡车司机厌倦了毫无意义的 COVID-19 疫苗要求，特别是在持续的供应链危机中，民主党的大流行封锁的推动者首先制造这场危机，卡车司机们正在抗议让他们的政府放弃要求。他们通过封锁加拿大和美国之间最繁忙的国际桥梁之一来实现目标。
-
-他们知道这是商业交叉点之一；他们知道，每天约有 350 万美元的贸易额过桥。这正是他们选择这里抗议的原因。
-
-但现在，作为这场大流行病中最大的民主党伪君子之一，密歇根州州长格雷琴·惠特默（Gretchen Whitmer）要求对加拿大卡车司机采取行动，因为他们的抗议正在损害密歇根州的经济。
-
-**（点评：中国俗语：贼喊捉贼。）**
-
-所以，政府封锁摧毁了当地经济并伤害家庭两年是可以的，但是当卡车司机封锁道路四天，这就是恐怖主义？对经济造成“不可接受”的伤害？
-
-我们都不是孩子，我们知道民主社会对政府不满时，抗议可以解决问题（因为和平抗议之外的另一条路——暴力袭击和内战要糟糕得多）。
-
-**评论：荒唐，本末倒置。正是这些个威权主义决策级人物，剥夺了宪法赋予人民的权力所采取的长达两年之久的封锁和mRNA刺突蛋白毒药的强制注射，才让各国经济走向崩溃，让人民苏醒奋起抗议。加拿大卡车司机是最勇敢的人们，他们用行动在向那些独裁者们警告：人民捍卫自由的力量！**
-
-素材链接：[newstarget.com][Democrats who gleefully locked down economies for TWO years during pandemic now demand action against protesting Canadian truckers over “the economy”](https://www.newstarget.com/2022-02-13-democrats-shut-economies-now-concerned-about-economy.html)
-
-* * *
-
-*审核：文乐
-校对：阿伯塔
-发稿：Nuevo唐人*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/CCFBUIPDZVNB3NLFIXHESJVALQ.jpg)
 
 
+图片来源： 路透社
 
+根据白宫的说法，2 月 16 日是俄罗斯打算入侵乌克兰的时间，但莫斯科暗示它正在撤出在乌克兰边境集结的一些军队的信号在周二提振了华尔街，并推动了避险美国国债和德国国债的抛售。
+
+市场涨势延续至周三,。日本日经指数上涨 2.2%，欧洲股市开盘走高，但美国股指期货再次显示出谨慎迹象。
+
+当然，还有其他发动战争的方式。乌克兰指责俄罗斯在周二发动了一系列网络攻击。请注意，俄罗斯议会要求普京总统承认两个莫斯科支持的乌克兰东部分离地区是独立的。
+
+经济数据发布和央行也在占领市场。那些希望通胀见顶迹象的人将​​对英国和美国的最新数据感到沮丧。上个月英国消费者价格以近 30 年来最快的年度速度上涨，较 12 月小幅上涨
+
+这是在周二美国数据显示核心工厂通胀率（剔除食品和能源后生产商的成本）创下一年来最大涨幅的前一天。
+
+提前大幅加息的前景使债券曲线显着变平，两年期和 10 年期英国国债收益率之间的差距很快就会转为负值——这种所谓的反转通常预示着经济衰退。
+
+由于战争担忧消退提振 10 年期国债收益率，周二美国国债收益率曲线变陡，但一天前它是自 2020 年年中以来的最窄水平。对一些人来说，曲线的状态表明央行在通胀斗争中已经落后，必须更快地采取行动，收紧政策才能迎头赶上。
+
+因此，现在所有人都在关注美联储上次会议的纪要。它们可以表明决策者是否会在 3 月的会议上倾向于将利率提高 0.5 个百分点，或者他们是否倾向于更快地通过出售美联储持有的债券来收紧金融状况。
+
+🔗 [2月16日关键词是战争和平通货膨胀](https://www.reuters.com/markets/europe/war-peace-inflation-2022-02-16/)
+
+编辑发布： Shuizhuyu
 
  
 
