--- a/gnews/16.md
+++ b/gnews/16.md
@@ -1,32 +1,30 @@
 ---
-title: 有声｜网络爆料中共极端“清零”防疫的暴利黑幕
+title: 有声｜加拿大安省省长：打一针还是打十针皆不能避免感染
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013322/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013482/)
 
 **By:秘翻新闻**
 
 **2022-02-16**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/8-14.png)图片来源 新唐人
-新唐人北京时间2月15日消息。最近，网络热传一段疑似哈佛学者黄万盛的录音，披露了中共的防疫敛财黑幕，引发关注。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/9-14.png)图片来源 Frank Gunn／加通社
+大纪元02月16日消息。加拿大安大略省省长福特在日前表示，他强烈反对施加任何新的防疫限制或重新启用疫苗护照系统，政府应该还安省人以正常的生活。同时，他还强调无论打多少针疫苗，人们都有可能被感染中共病毒Covid-19。
 
-在录音中，黄万盛爆料称，2020年7月疫情爆发半年后，中共最高层花17万元为他购买单程机票紧急召他回国，领导一个科技防疫项目。
+据了解，福特在周二发表讲话时表示，公众需要恢复正常生活，继续接种疫苗没有什么价值，并指出第三剂疫苗完全不能提供避免奥米炕感染的有效保护。他说，打一针还是打十针都一样，人们仍然可能感染中共病毒。人们只需要小心，始终确保洗手并继续前进。
 
-据黄万盛透露，中共高层的白手套和家属们染指核酸试剂领域，多地的多轮全员核酸检测皆因此而起。因为只有采购量才有利润。
+福特强调，公众需要尊重那些拒绝接种中共病毒疫苗的人。
 
-他说：全世界没有一个国家用这种方式进行免疫，这实际上是给利益集团输送利益，包括中共强推的多针剂疫苗，都与利益集团有关系。
+据悉，加拿大安省此前已经宣布，将于3月1日起全面取消疫苗护照措施，成为又一个反对中共病毒疫苗暴政的城市。
 
-黄万盛还透露，中共国某个集团仅仅通过核酸检测这一项，就赚了六千七百亿。
+新闻来源[**https://www.epochtimes.com/gb/22/2/15/n13579348.htm**](https://www.epochtimes.com/gb/22/2/15/n13579348.htm)
 
-据美国南卡罗莱纳大学艾肯商学院终身教授谢田称，黄万盛并非真正的哈佛学者，而是一个1977年毕业的工农兵大学生，哲学背景出身。黄之所以借哈佛的名头，是为了让中共觉得这可能是个很好的资历，以便把他请回去参加科技防疫类的协会。并指黄万盛大概是在参与防疫有关项目后，从科技防疫人员处得知此消息。
-
-新闻来源[**https://www.ntdtv.com/gb/2022/02/15/a103348516.html**](https://www.ntdtv.com/gb/2022/02/15/a103348516.html)
-
-秘翻新闻 采集 / 撰稿 EY120
+(秘翻新闻 Noemi 编译报道)
 
 发布 : 恩典
 
 * * *
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
