--- a/gnews/21.md
+++ b/gnews/21.md
@@ -1,56 +1,28 @@
 ---
-title: 从乌克兰局势看普京怎么玩习二
+title: 有声｜要求彻查八孩母事件 中共国高校学子接力联署
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2013281/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013394/)
 
-撰稿：二号电梯
-![](https://assets.gnews.org/wp-content/uploads/2022/02/电梯.png)
-（图片来自网络）
+**By:秘翻新闻**
 
-话说习二发现由于爆料革命，新中国联邦从中“作梗”，他的病毒策略并没有完全达到预期，反而越来越多的国家摆明了要对他追责！于是，习二思前想后，觉得唯有对台湾动武才是解决之道。
+***2022-02-16***
+![](https://assets.gnews.org/wp-content/uploads/2022/02/99999.png)
+[新唐人](https://m.ntdtv.com/gb/2022/02/15/a103348706.html)北京时间02月16日消息。中共徐州官方关于“八孩母”事件的所谓“调查结果”出台后，网络上开始大面积消声。但中共国多个高校学子开始接力联合署名，要求彻查真相。但联署信遭遇封杀。
 
-但是，习二又担心：“万一美国佬真插手，只要联合沙特不卖我石油，那我不分分钟嗝屁嘛。”于是，他去找普京商量。
+2月15日，微博上出现题为“100位北大学子呼吁彻查徐州被拐女子事件”的联署公开信。信中直言徐州官方的“调查结果”前后不一，漏洞百出，要求北京当局彻查“八孩母”真相，严厉打击拐卖妇女儿童犯罪。参与联署的多为已经毕业的北大校友。
 
-普京：“别怕。你打台湾，我打乌克兰，咱们双管齐下，保管美国顾得了东边，顾不了西边。至于石油，我不仅可以卖你油，我还可以卖你气！来，现在签合同。但是这个钱得先付，不然我没有钱采气采油，没法给你。”
+除北大外，清华、人大、浙大等几个名校校友都成立了“拐卖关注群”。北大联名信发出后，网友呼吁其它高校跟进。
 
-习二：“现在都还不知道需要多少量，咋签合同嘛！”
+徐州官方几次三番发出“八孩母”事件的不同“调查结果”后，网络开始大举删贴封号，据传四川公安也拒绝再追查“八孩母”是否是南充失踪女孩李莹。但网民的愤怒不息，关注度不减。
 
-普京：“那就估一个用量嘛。”
+“八孩母”被指未成年时就被拐卖到徐州，其容貌与当年被拐卖的四川南充未成年女孩李莹非常相似。出身徐州丰县的作家王圣强指出，当地人都知道“八孩母”就是李莹，但中共官方“不能让她是李莹”，因为李莹的父亲是军人，如果确认“八孩母”是李莹，会动摇军心。目前王圣强的相关帖文已经删除，据他说是遭遇了来自老家的压力。
 
-习二：“那行吧，先弄个一万亿吧。那万一用不了那么多，可以退钱不？”
+(秘翻新闻 二丫 编译报导)
 
-普京：“那不行。这个油气咱们给你的，你不要我也卖不掉啊。咱得签“照付不议”条款，不管你啥原因用或是不用，都得付钱。”
+发布:星星
 
-习二：“那咱付人民币。”
-
-普京皱了皱眉头。
-
-习二连忙补充：“黄金做抵押。如果你到时候不要人民币，我就给你黄金。”
-
-普京：“好。就这么定了。”
-
-万亿合同到手，普京表示很开心，开始往乌克兰增兵。看到普京开始如约行动，习二表示很满意。
-
-冬奥会受到世界抵制，欧美主要政要都拒绝出席开幕式。习二心里很烦，于是他又去找普京商量。
-
-习二：“欧美那些家伙都不来参加我的冬奥开幕式，搞得我党内下不了台。”
-
-普京：“没事。我普京一定去，我还拉四个国家的总统一起去给你撑腰。我可以跟你单独谈，在所有媒体前握手，拥抱，让所有看到我挺你。只是……”普京停了停：“需要点活动经费，你知道的，那些家伙就看钱。”
-
-习二：“钱好说，只要来，先给个1000亿。”
-
-1000亿到手。普京表示很开心。到了当日，普京独自一人去了北京。习二不打算见普京了，油气合同也想只用人民币支付了。普京大发脾气，习二连忙下指示：“不用人民币，改用欧元支付。”
-
-普京很生气，连夜赶回俄罗斯。
-
-普京继续加紧往乌克兰增兵，美欧一看形势越来越紧张，也拼命往乌克兰方向增援。眼看战争一触即发。
-
-忽然，俄罗斯军队开始往后撤了。据“不靠谱”消息称，美俄已经达成一致，美国同意俄罗斯卖气给欧洲，俄罗斯同意不在乌克兰搞事，不挺习二。
-
-大家还记得吗？文贵先生在前两年的直播中说过普京是一个很出色的政治家，他最终会导向美国一边。我猜，杰出政治家的本事就是在某二死之前，榨干他最后一个铜板吧？哈哈。
-
-发稿：MG4
-![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
