--- a/gnews/25.md
+++ b/gnews/25.md
@@ -1,22 +1,21 @@
 ---
-title: 众多人士批评美国联邦机构追踪寻求疫苗宗教豁免人群
+title: 樱花FM&#124;东京大学副教授预测中共病毒的次生灾难：人荒将至
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2013071/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013283/)
 
-#### 翻译/撰稿：zzballack
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/tqRGmgMYFyPcmbi_bhZLeyC0O9rgriLNVZtWi319burlplVZiWoOoQp86onJ9GMhqS3n1B3g1iqm9e4eW5nQwhfuOmFfdrIGTDIhKjR4t6YSJBpFI0Pgj3Y2XivtR49y3iX00729)
+2月9日朝日电视报道：东京大学副教授仲田泰祐研究团队发表了他们的估计数字，由于经济不安感的增加和中共病毒（新冠病毒）带来的邂逅减少，2020年和2021两年失去的婚姻数量总计大约为11万。
 
-#### 校对：Chris
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片1-3-5.jpg)图片来源：布雷特巴特新闻网
-据《真正美国之声》（Real America’s Voice）2月15日报道，美国有55个联邦机构颁布了修订规则，以追踪那些寻求豁免的联邦雇员或申请人。有些仅限于新冠疫苗豁免，有些则追踪所有豁免，包括那些寻求不在安息日（Shabbat）或星期日工作的人。很多人对此做法提出批评，认为这是对有信仰的人的歧视。
+如果没有结婚人数增加作为填补，这将导致未来几年的出生人口数下降约21万。多年来，婚姻和出生率一直在下降，如果中共病毒的影响长期存在，可能会加速这一趋势。
 
-有报道说，美国政府正在建立一个数据库，记录那些申请豁免的人。非营利组织自由律师会（Liberty Counsel）的主席马修·斯塔韦 (Mathew Staver)上个月在接受采访时将其比作纳粹德国用来追踪犹太人的一个数据库：“这个数据库的唯一可能目的是找出和歧视有信仰的人，以服务于非法或者不合理目的。我们不能允许这种情况发生，我们不能允许一个联邦数据库按照人们的宗教或医疗状况进行分类。我想不出这类政府名单能带来什么好处？”
+笔者能想到的是，除此之外，中共病毒造成的大量死亡，也会成为人荒的到来的加速器。
 
-美国议员也纷纷采取行动反对联邦政府的宗教豁免追踪系统。南卡罗来纳州的众议员拉尔夫·诺曼 (Ralph Norman)提出了《宗教自由高于强制令法案》（Religious Freedom Over Mandates Act）。该法案将“禁止将联邦资金用于任何有关新冠疫苗接种要求的宗教豁免记录系统”。
+文字版原文：[东京大学副教授预测中共病毒的次生灾难：人荒将至](https://gnews.org/zh-hans/1978653/)
 
-20名共和党议员写信给总统拜登，要求联邦政府不要针对或跟踪那些提出宗教豁免申请的人。信中写道：“你们政府不能利用联邦政府权力来追踪那些寻求疫苗宗教豁免的联邦雇员。从第一天起，你们就对那些在生活中把信仰放在首位的美国人表现出一贯的蔑视态度，将以宗教为由拒绝接种疫苗的美国人排除在外，这是不可原谅的，必须撤回。大多数通知没有解释机构计划存储数据多长时间、为什么需要在联邦机构之间分享数据，或者为什么机构在决定批准或拒绝雇员的宗教便利请求后，需要保留数据。你们政府没有为这些侵入性数据库提供合理解释，这些数据库只会被用来针对那些因为宗教信仰而拒绝接种疫苗的美国人。”
-
-新闻来源：[Criticism mounts as 55 federal agencies track COVID vaccine religious exemption requests](https://americasvoice.news/justthenews/criticism-mounts-federal-policies-tracking-covid-vaccine-religious/)
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
