--- a/gnews/3.md
+++ b/gnews/3.md
@@ -1,20 +1,26 @@
 ---
-title: 中共推出了预约办个税服务“割韭菜APP”
+title: 中共国房企疯狂抛售资产套现
 ---
-`儒为` [轉載自GNews](https://gnews.org/zh-hans/2013503/)
+`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2013590/)
 
-作者：意大利罗马达芬奇农场-儒为
-![](https://assets.gnews.org/wp-content/uploads/2022/02/预约办税.jpeg)封面来源：网络图片
-中新财经2022年2月16日报道，中共2021年度个税汇算的时间为2022年3月1日至6月30日。纳税人如需在3月1日至3月15日之间办理年度汇算，可在2月16日至3月15日每天的早6点至晚22点登录手机个人所得税APP进行预约。纳税人也可以不预约，3月16日后直接登录手机个人所得税APP或网页端办理汇算申报，也可以到主管税务机关办税服务厅直接办理。
+撰稿：子喜太一
+![](https://assets.gnews.org/wp-content/uploads/2022/02/164-2.png)图片来自网络
+去年下半年至今，中共国房企处置资产超过120起，已售及代售资产超过人民币3,200亿，选择出售的资产除了地产外，还有文旅、酒店等较难活化及回收周期长的资产，以及一些烧钱的多元化业务。
 
-中共这则新闻传递的信息最主要的内容就是告诉老百姓2021年个税开始征收了，凡是符合征收条件的都需要你自己主动积极的通过手机个人所得税APP进行提前预约，如果你不预约也要到主管税务机关办税服务厅直接办理。特别需要注意的是，对于年度汇算需补税的纳税人，如在年度汇算期结束后未申报并补缴税款，税务部门将依法加收滞纳金，并在其《个人所得税纳税记录》中予以标注。
+房企急于回笼现金，除了准备2022年上半年偿债高峰期所带来的压力外，更有抵御国内经济崩塌造成的生存压力的用意。
 
-中共国个税一直是个模糊地带，这也是中共故意营造的漏洞，如果个税严格执行下去，老百姓那点微薄收入在中共吹起的经济泡沫下是无法养活一个家庭的，随之引发将是社会动荡。中共国个税一直是悬在每个老百姓头上的一把刀，这把刀会不会落下？什么时间落下？怎样落下？都掌握在中共手里。中共这次释放出“预约办理个税”服务的信号，说明中共这把刀要落下了，也更加说明中共真的没钱了。
+14亿老百姓在冬奥会扬我国威的兴奋药陪伴下，欢度着虎年春节，畅想着来年的风调雨顺，金元宝进家！中共国的房地产企业可都是CCP的代理人白手套，春江水暖鸭先知，他们接近CCP高层，可以感知世界经济的变化，国内经济假大空房企更是亲身感受，他们深知整个经济泡沫就要破裂，房企这些靠贷款套钱的空壳公司不创造任何真实价值，只是把钢筋水泥作为抵押，从银行往外搬钱，经济崩塌，金融危机，银行烂底裤暴露，房企会死的比谁都难看。房企必须在老百姓都歌舞升平的这个档口赶紧出逃，快速套现，跳出虎口。
 
-新闻来源：🔗[2021年度个税汇算3月开始 今起可提前预约办税](https://www.chinanews.com.cn/cj/2022/02-16/9677389.shtml)
+当然，这只是中共国房企的美梦，这些年他们的雪球滚的太大了，银行百分之七八十的烂账，现在想脱身，恐怕是不可能了。一切的低价抛售，变卖资产都只是垂死挣扎，无法改变中共国房地产最终全部归零的必然结局！最终，受害最严重的肯定是14亿老百姓，他们用毕生积蓄买了一堆一文不值的钢筋水泥！
 
-*编辑/校对/发稿：意大利罗马达芬奇农场-儒为*
+房地产企业集体抛售，这是中共国经济崩塌的重要风向标，由于中共国房企都是CCP的代理人，因此这也表明CCP已经无法控制这个倒塌的局面，已经没有能力再执政下去，或者说已经没有能力再欺骗下去了，CCP自知死期已到！
 
+有能力有智慧的人，快将人民币资产转出去，把CCP的外汇储备耗尽，帮助CCP快点灭亡吧！
+
+新闻参考链接：[联合新闻网](https://udn.com/news/story/7333/6098161?from=udn-catebreaknews_ch2)
+
+发稿：mgjxs
+![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
