--- a/gnews/5.md
+++ b/gnews/5.md
@@ -1,81 +1,57 @@
 ---
-title: 【信仰之声】同样的侍奉，不同的得着
+title: 加拿大政府利用《紧急状态法》对抗自由车队的和平抗议
 ---
-`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2013493/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2013572/)
 
-作者：纽约香草山福音部 — 山城小哥
+![](https://assets.gnews.org/wp-content/uploads/2022/02/CP151087290f-1200x688-1-700x4201-1.jpg)图片来源：大纪元
+《大纪元时报》2022年2月14日报道，由于卡车司机及其支持者持续抗议中共病毒强制令和限制措施，加拿大联邦政府宣布进入紧急状态。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-5-768x103-3.jpg)
+在2月14日的新闻发布会上，总理贾斯汀·特鲁多(Justin Trudeau)说，抗议活动是不和平的，并且正在损害经济，因此需要采取措施加强执法机构。他说：“周五，安大略省援引了紧急状态来应对封锁。这是负责任和必要的做法。今天，为了在这些努力的基础上再接再厉，联邦政府准备使用更多的手段，促使局势得到完全的控制。”
+
+特鲁多说，《紧急状态法》的使用将有时间限制，并将以有针对性和相符的方式使用。他补充说，该法案将被用于保护机场和跨境口岸等关键基础设施。
+
+副总理克里斯蒂亚·弗里兰(Chrystia Freeland)宣布了一系列措施，以减少对抗议活动的资助。这些措施包括将反洗钱措施扩大到众筹平台和数字货币。银行也将能够冻结参与抗议活动的实体的账户。弗里兰还说，对于卡车被用于封锁抗议的那些公司，他们的公司账户将被冻结，并且其保险将被暂停。特鲁多是第一位援引《紧急状态法》的总理。
+
+阿尔伯塔省、萨斯喀彻温省、曼尼托巴省和魁北克省的省长表示不支持总理使用该法案。“我们拥有维持秩序所需的所有法律工具和行动资源。该法案不会增加任何相关的额外权力或资源。”阿尔伯塔省省长杰森·肯尼(Jason Kenney)2月14日在推特上写道。萨斯喀彻温省省长斯科特·莫(Scott Moe)在推特上写道：“非法道路封锁必须结束，但警方已经有足够方法来执法和清除封锁，正如他们周末在温莎市所做的那样。”
+
+“因此，萨斯喀彻温省不支持特鲁多政府援引《紧急状态法》。如果联邦政府真的着手实施这一措施，我希望它只会在立法允许的情况下，在提出需求的省份中援引。”
+
+曼尼托巴省省长希瑟·史蒂芬森(Heather Stefanson)也在一条推文中写道，在她的省份不需要援引这种权力。“我为曼尼托巴省的执法官员感到骄傲，并对他们保护我们的社区充满信心。联邦政府提出的使用《紧急状态法》的建议对艾默生边境的局势没有帮助。”
+
+据加拿大《新闻报》报道，魁北克省长弗朗索瓦·勒戈(François Legault)也采取了类似的立场，他说他不希望该法案在魁北克适用，因为这是一个不必要的和分裂性的措施。
+
+在2月14日早些时候的新闻发布会上，自由车队的组织者塔玛拉·利奇(Tamara Lich)表示，抗议者将继续示威，直到他们的要求得到满足。利奇说：“我们将保持和平，但在解除强制令之前，我们将在国会山上安顿下来。”
+
+担任自由车队发言人的纽芬兰省前总理布布赖恩·佩克福德(Brian Peckford)在新闻发布会上说，渥太华的抗议活动一直是和平的，并对宣布进入紧急状态的理由提出质疑。佩克福德说：“看看这种情况，特别是与渥太华的2022车队有关的情况，是和平的。自从卡车司机到达后，街道很干净[并且]犯罪率下降了。”
+
+为组织者提供法律代表的“宪法自由正义中心”(The Justice Centre for Constitutional Freedoms)在宣布之前的一份声明中说，它将“立即向法院提出申请，寻求推翻这样的声明”。
+
+临时保守党领袖坎迪斯·博尔根(Candice Bergen)说，她的政党将研究自由党政府的提议并评估其合理性，然后再决定是否支持。
+
+《紧急情况法》将国家紧急情况定义为“具有临时性质的紧急和危急情况，a)严重危及加拿大人的生命、健康或安全，其程度或性质超过了一个省的应对能力或权力，或(b)严重威胁到加拿大政府维护加拿大主权、安全和领土完整的能力”。
+
+该法案列出了四种不同类型的紧急情况：公共福利、公共秩序、国际紧急情况和战争。特鲁多以“对加拿大安全的威胁”为由援引了公共秩序紧急状态。通常情况下，除非政府撤销或延长紧急状态，否则紧急状态将在30天后失效。
+
+该法案赋予政府权力，如果有“合理预期”这可能会导致破坏和平，则剥夺公民的集会权。还可以禁止公民前往指定区域或在指定区域内旅行，或使用指定的财产。政府还可以控制公共设施和服务，并指导人们提供基本服务。
+
+在目前封锁或占领的情况下，政府将能够迫使拖车公司清除堵塞街道或车道的车辆，而此前他们在渥太华的抗议活动中已经拒绝这样做。不遵守该法案的行为，经简易程序定罪，可处最高500美元的罚款或最长6个月的监禁，经起诉，可处不超过5000美元的罚款和最长5年的监禁。最近几天，渥太华市和安大略省也宣布进入紧急状态。
+
+简评：
+
+在加拿大卡车司机们坚持不懈地和平抗议的情况下，几个大省已经陆续宣布解除疫苗强制令的计划。而此时，“狗急跳墙”的特鲁多居然做出了惊掉人下巴的举动——搬出从未使用过的《紧急状态法》，作为民选的总理，不但不听取人民的建议，反而与人民为敌，将和平抗议的人先描述“少数边缘人士”后描述成“严重危及加拿大人的生命、健康或安全人群”，与其父亲当年使用《战争措施法》处理魁北克恐怖分子的行动形成鲜明对比。特鲁多正一步一步把系在自己脖子上的绞绳收紧，最后必将惨淡收场。于此同时，卡车司机车队正在诉诸于法律，起诉政府行为；而加拿大内部也有意识到疫苗病毒灾难的政客，站起来反对法案的施行。有理由相信，勇敢、有良知的加拿大人不会就此妥协，他们的反抗必能争得应有的自由。
+
+新闻链接：[https://www.theepochtimes.com/canadian-government-declares-state-of-emergency-over-protests-against-covid-19-mandates\_4277273.html](https://www.theepochtimes.com/canadian-government-declares-state-of-emergency-over-protests-against-covid-19-mandates_4277273.html)
+
+* * *
+
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
 
+编辑：【英国伦敦喜庄园编辑部】
 
-
-
-
-
-
-
-
-
-
-
-
-
-耶稣基督说:“你的財宝在哪里，你的心也在哪里。”
-
-在大约2900前的以利亚先知时代，以色列人在进入应许之地建国之后80年就分裂了。北国以色列国王为了用自己的手段确保自己权力的合法性和稳定性，于是造了金牛犊假神，并带领百姓拜假神，让百姓陷入了罪中。后来在经过两次血腥的灭族篡位之后，亚哈王更是放任自己的外族老婆在全国公然拜假神巴力并杀害神的先知。
-
-
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-28.jpg)
-
-
-
-以利亚先知就是在这样的世代热心地为神传信息，然而正如以利亚先知对神抱怨所说的：“我一向热心事奉万军之上帝耶和华，但以色列人背弃你的约，拆毁你的祭坛，残杀你的先知。现在只剩下我一个人，他们还要杀我。” (王上 19:10 ）先知一片热心侍奉神，甚至靠着神显了神迹奇事，在旱灾之年为同胞求得了雨水，得到同胞的回应却是拆毁祭坛，暴力威胁迫害。先知感觉万念俱灰，自己实在没有什么可以做的了，于是逃离了以色列国，宅在山洞里，甚至向神祷告，只求一死。
-
-然而，在西奈山的旷野，神提醒先知，不要在乎外在环境的艰难，要记住自己的使命是什么，要记住自己着眼和追求的是什么。先知恍然大悟:神给的和自己追求的不是舒适的环境，而是一个值得自己忍受一切患难的伟大使命和永生复活的盼望。于是先知原路返回，继续按神所吩咐的传讲神的话语和信息，继续侍奉神。最终，就在这样荒凉的世代，他成了大洪水之后唯一一个不经历死亡被神提升天的人。他得到了自己所追求的。
-
-以利亚先知有一个徒弟叫以利沙。当先知呼召以利沙的时候，没有多说多做别的，只把自己那仅有的毛皮衣服披在以利沙身上，以利沙立马就决定要跟随先知去侍奉神。以利沙是真的被先知侍奉神的生活所吸引，真的被先知所侍奉的那位神所吸引。于是他就辞别父母亲人去侍奉神，侍奉以利亚先知去了。
-
-在漫长的与神和以利亚先知同行的日子里，以利沙一直默默无闻，十分低调，从不出镜。他给世人的印象就是：“从前服侍以利亚的（倒水在以利亚手上的）。”(王下 3:11 ）他默默无闻地以一个仆人的身份服侍先知，不张扬，没有怨言，甚至以之为乐。就在神要接走他的师父以利亚先知的时候，众先知包括以利沙自己都知道了这个从神而来的信息。别人问起的时候，他却谦卑低调地毫不声张，并且告诉其他先知也不要声张。
-
-以利亚先知要升天之时，三次考验以利沙。让以利沙离开自己，但以利沙却绝不离开。这显明了以利沙侍奉神和神的仆人的时候是发自内心的愿意，乐意去做。他是真的爱神，渴慕神，以之为乐。若不以之为乐，他就离开以利沙了。最后，以利亚先知问他想要什么，这也是耶稣基督问第一批跟随他的门徒的问题:“你想要什么？”以利沙先知回答说:“求你把感动你的灵加倍的赐给我。”结果，以利沙正如以利亚先知说的，看到了以利亚先知那在神里永活的生命。最终，他也得到了双倍的圣灵。
-
-这些“小事”清晰地显明了以利沙的生命是真正的如此无“我”，“我”真的已经被粉碎，钉在十字架上了。“我”，真死了，耶稣真的在他里面复活了。他一心追求的是神的圣灵，是复活和永生。于是他就得到了。
-
-后来，以利沙接替师父的衣钵做了先知。他也有了一个名叫基哈西的弟子和仆人。基哈西也服侍自己的师父以利沙。
-
-有一次，亚兰国将军乃曼因着弱小的信心来求以利沙医治他的麻风病。为了彰显神的荣耀，以利沙靠着圣灵的大能，告诉乃曼去不起眼的约旦河里沐浴（受洗）七次就能得医治。乃曼带着试一试的心去了，结果真的得了医治。麻风病如同罪一样被洗净了！乃曼想要给一大笔钱财给以利沙做酬谢，但以利沙先知不要，因为他做的这一切不是为了钱财，而是为了荣耀神。
-
-然而基哈西却想要钱财，在乃曼走后，背着以利沙追上乃曼，找借口要了一大笔银子，乃曼还高兴地给了他双倍。他回到以利沙那里时，还对以利沙撒谎，结果，他一离开以利沙就得了乃曼的麻风病。
-
-同样是侍奉神，以利亚先知得到了永生，以利沙先知得到了双倍的圣灵和复活的生命，基哈西得到的却是双倍的不义之财和麻风病（罪）。这一切其实都源于那个问题:“你想要什么？”我们基督徒也要常常问自己，自己到底想要什么？我们是要真的得着耶稣，得着祂那死而复活，而且永活的生命？还是要在弟兄姊妹中间抓名抓利……
-
-求神看顾保守我们，我们一同警醒。愿我们同样的侍奉最终都有同样的得着–耶稣基督。阿门！
-
-2022年2月16日
-
-（本文仅代表作者个人观点）
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-7.jpg)
-
-*编辑 /校对*：德州牛仔
-
-*发稿：Yuki*jiang
-
-**更多资讯，更多关注**
-
-[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
-
-[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
-
-[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
-
-[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
-
-[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
-
-[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
