--- a/gnews/10.md
+++ b/gnews/10.md
@@ -1,9 +1,34 @@
 ---
-title: 心脏科护士: “打疫苗死”被说成“得新冠死”
+title: 有声｜俄国防部称俄军开始撤离回营 拜登表示消息尚未证实
 ---
-`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2013412/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013539/)
 
-来自澳洲新南威尔士州的金.史密斯是名心脏科的护士。她见过无数个因为打新冠疫苗而心脏出严重问题的病人。有些病人后来病重死了，死亡的原因居然被写成是得新冠病毒而死。
+**By:秘翻新闻**
+
+**2022-02-16**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/10-18.png)图片来源 网络
+新唐人2月16日报道，针对媒体报道俄罗斯从俄乌边境撤军的消息，美国总统拜登表示，俄罗斯撤军是好消息，但尚未得到证实。他警告说，俄罗斯约有15万大军包围了乌克兰，入侵的可能性仍然很大。他呼吁美国侨民尽快离开乌克兰。
+
+综合媒体报道，俄罗斯国防部2月15日公布，部份军队在完成演习后，正在撤离靠近乌克兰的边境地区，返回基地。俄国防部强调国内仍会继续进行大规模演习。
+
+消息报道，英国政府将召开紧急会议，讨论如何应对此局面。
+
+乌克兰国家安全与国防委员会秘书丹尼洛夫在2月14日曾表示，政府没有看到俄罗斯16日或17日会全面入侵乌克兰的迹象。
+
+拜登2月15日在白宫记者会上表示，尽管俄方宣称其军队正在返回基地，但美国情报分析人员认为他们仍然非常具有威胁性。他重申，美国愿意和俄罗斯通过外交协商解决乌克兰危机。
+
+拜登还向俄罗斯民众喊话，美国与北约对俄罗斯并不构成威胁，也没有计划在乌克兰部署导弹，美国也从未针对俄罗斯人民。
+
+原文链接：
+[**https://www.hk01.com/%E5%8D%B3%E6%99%82%E5%9C%8B%E9%9A%9B/736077/%E4%BF%84%E7%BE%85%E6%96%AF%E9%83%A8%E4%BB%BD%E8%BB%8D%E9%9A%8A%E5%AE%8C%E6%88%90%E8%BB%8D%E6%BC%94%E9%9B%A2%E9%96%8B%E9%82%8A%E5%A2%83%E5%9B%9E%E7%87%9F-%E4%BF%84-%E8%A5%BF%E6%96%B9%E6%88%B0%E7%88%AD%E5%AE%A3%E5%82%B3%E5%A4%B1%E6%95%97%E4%B9%8B%E6%97%A5 https://m.ntdtv.com/b5/2022/02/16/a103348965.html**](https://www.hk01.com/%E5%8D%B3%E6%99%82%E5%9C%8B%E9%9A%9B/736077/%E4%BF%84%E7%BE%85%E6%96%AF%E9%83%A8%E4%BB%BD%E8%BB%8D%E9%9A%8A%E5%AE%8C%E6%88%90%E8%BB%8D%E6%BC%94%E9%9B%A2%E9%96%8B%E9%82%8A%E5%A2%83%E5%9B%9E%E7%87%9F-%E4%BF%84-%E8%A5%BF%E6%96%B9%E6%88%B0%E7%88%AD%E5%AE%A3%E5%82%B3%E5%A4%B1%E6%95%97%E4%B9%8B%E6%97%A5%20https://m.ntdtv.com/b5/2022/02/16/a103348965.html)
+
+(秘翻新闻StevenZ Julia联合编辑报道)
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
+
 
  
 
