--- a/gnews/11.md
+++ b/gnews/11.md
@@ -1,20 +1,52 @@
 ---
-title: 纽约一亚裔女子被尾随并杀害
+title: 特鲁多的Covid“疫苗”暴政使北美汽车业摇摇欲坠
 ---
-`GTV新聞訪談` [轉載自GNews](https://gnews.org/zh-hans/2013405/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013524/)
 
-撰文：台湾宝岛农场 寻文客
+翻译： Jenny Ball
 
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1567.png)图片来源：newstarget.com
 
+在加拿大和美国都有工厂的汽车制造商，真正开始感受到贾斯汀·特鲁多的武汉冠状病毒（Covid-19）“疫苗”命令的伤害，但他拒绝让步。
 
-**【新闻链接】**[https://cn.nytimes.com/usa/20220215/suspect-christina-yuna-lee-murder/zh-hant/](https://cn.nytimes.com/usa/20220215/suspect-christina-yuna-lee-murder/zh-hant/)
+尽管拜登政权暗示要减少一些限制，但据报道，特鲁多“坚决反对放宽加拿大的 COVID-19 限制，因此，最近几周抗议限制和反对特鲁多本人的压力越来越大。 ”
 
-**       2****月****15****日，《纽约时报》报导了亚裔女子克里斯蒂娜****·****尤娜****·****李被陌生男子尾随并杀害的案件。**
+特鲁多未能放弃暴政，导致加拿大和底特律之间的桥梁形成封锁，迫使福特工厂关闭。报告显示，其他汽车制造商也在遭受痛苦。
 
-**克里斯蒂娜****·****尤娜****·****李于****2****月****13****日被陌生男子尾随进入她在曼哈頓下城的家中，随即被该男子捅刺致死。嫌疑人已于****14****日因谋杀和入室盗窃罪被捕。**
+美联社新闻报道说：“在底特律和安大略省温莎之间的大使桥，大多数人乘坐皮卡车的抗议活动，已经进入了第三天。” “进入加拿大的交通被阻止，而前往美国的交通仍在流动。”
 
-**该报导称李女士的遇害在纽约市的亚裔社区引发了恐惧，一位前来悼念的亚裔女士克里斯塔尔****·****张面对采访时说道****“****无论采取何种预防措施，年轻的亚洲专业人士都开始感到危险****”****。**
+“这座桥承载了两国之间 25% 的贸易，加拿大当局表示越来越多的担忧对经济的影响。”
 
+特鲁多所要做的就是：停止对他的国家人民的暴政，整个不断升级的局势就将立即结束。 然而，由于他拒绝这样做，抗议可能会无限期地持续下去，对汽车工业和整个北美经济造成越来越大的伤害。
+
+拜登政权将汽车行业危机归咎于抗议者，而不是特鲁多。
+
+福特在一份声明中声称，零部件短缺，迫使其关闭了温莎的一家发动机工厂。由于特鲁多的暴政导致供应不足，位于安大略省奥克维尔的福特装配厂，也不得不缩减工期。
+
+福特在一份声明中说：“底特律-温莎大桥的中断，伤害了边境两侧的客户、汽车工人、供应商、社区和公司。”
+
+通用汽车公司同样不得不取消其在密歇根州兰辛附近的中型 SUV 工厂的第二班，尽管发言人丹弗洛雷斯表示，这只是暂时的举措。
+
+丰田发言人表示，由于零部件短缺，他的公司将暂时无法在加拿大的三个工厂生产任何产品。他指责供应链、天气和“与大流行相关的挑战”，但在封锁形成后立即宣布了这一消息，这足以说明真正的原因是政府的封锁。
+
+在斯特兰蒂斯（ Stellantis），前菲亚特-克莱斯勒，业务基本正常，但该公司确实不得不缩短其在温莎的小型货车工厂的一些班次。
+
+与此同时，拜登政权将所有这些经济破坏归咎于封锁，而不是特鲁多。
+
+白宫新闻秘书宣布：“封锁对汽车行业的供应链构成风险，因为这座桥梁是汽车、零部件和零部件的关键通道，延迟可能会扰乱汽车生产，”但并未提及首先导致了抗议的相关疫苗授权。
+
+阿尔伯塔省库茨过境点的第二次封锁，也关闭了该入境口岸的经济活动。在过去的一个半星期里，数十辆卡车停在那里，还有数百辆卡车占据了加拿大首都渥太华市中心。
+
+“特鲁多不行动，我们就不动，”来自阿尔伯塔省科尔代尔的饲养场经营者、抗议者约翰·凡瑞维克（ John Vanreeuwyk ）说。
+
+素材链接：[newstarget.com][North American auto industry teetering towards collapse due to Trudeau’s covid “vaccine” tyranny](https://www.newstarget.com/2022-02-14-auto-industry-collapse-trudeau-covid-vaccine-tyranny.html)
+
+* * *
+
+*审核：文乐
+校对：阿伯塔
+发稿：Nuevo唐人*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
