--- a/gnews/15.md
+++ b/gnews/15.md
@@ -1,43 +1,81 @@
 ---
-title: 02/16/2022 国际财经快讯：IMF表示哥伦比亚中央银行必须在上半年提高利率以控制通货膨胀；俄罗斯入侵乌克兰的担忧缓解，亚洲股市反弹
+title: 【信仰之声】同样的侍奉，不同的得着
 ---
-`秘密翻译组金融团队` [轉載自GNews](https://gnews.org/zh-hans/2013333/)
+`纽约香草山MOS03` [轉載自GNews](https://gnews.org/zh-hans/2013493/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/20220216-1.jpg)[图片来源](https://dzm0ugdauank9.cloudfront.net/wp-content/uploads/2022/02/2022-02-15T232414Z_1_LYNXMPEI1E15H_RTROPTP_0_COLOMBIA-ECONOMY-RESERVES_1.jpg)
-**1.IMF表示哥伦比亚中央银行必须在上半年提高利率以控制通货膨胀**
+作者：纽约香草山福音部 — 山城小哥
 
-[波哥大（路透社）–国际货币基金组织（IMF）周二表示，哥伦比亚中央银行将不得不在今年上半年提前加息，以控制通货膨胀并维护其来之不易的信誉。政府的DANE统计机构周二早些时候报告说，由于娱乐业、零售业和制造业飙升，这个安第斯国家去年的经济增长了10.6%，超过了预期。然而，国际货币基金组织哥伦比亚任务负责人Hamid Faruqee说，供应链问题带来的压力意味着哥伦比亚中央银行需要在今年上半年迅速采取行动，以锚定通胀预期并防范通胀上行风险。”Faruqee在一次虚拟新闻发布会上说：”控制通货膨胀……对哥伦比亚的中央银行构成了挑战，我们在其他国家也看到了这种挑战，包括美国。](https://www.oann.com/colombias-central-bank-must-raise-rates-in-first-half-to-control-inflation-imf/)
+![](https://assets.gnews.org/wp-content/uploads/2022/01/logo-5-768x103-3.jpg)
 
-**2.澳大利亚Liontown公司与特斯拉签署5年锂供应协议**
 
-[2月16日（路透社）–澳大利亚Liontown Resources（LTR.AX）周三表示，它与特斯拉（TSLA.O）签署了一项为期五年的协议，向这家电动汽车制造商供应锂精矿，使这家锂矿商的股价上涨近20%。特斯拉将在2024年开始的第一年购买10万干公吨（DMT）的精矿，并在随后几年增加到每年15万干公吨。在过去的几年里，锂的价格已经飙升，随着汽车制造商向电动汽车倾斜，供应商争相满足需求。价格比2021年初高出约8倍。Liontown将从其位于西澳大利亚的旗舰项目Kathleen Valley Lithium供应锂，该项目预计将在2025年开始商业生产。对特斯拉的供应将占到该项目年产能的三分之一左右。](https://www.reuters.com/business/australias-liontown-signs-5-year-lithium-supply-deal-with-tesla-2022-02-15/)
 
-**3.Coinbase将让墨西哥的加密货币接收者以当地货币兑现**
 
-[2月15日（路透社）–Coinbase Global（COIN.O）周二表示，它正在启动一项试点计划，允许墨西哥的加密货币接收者以比索兑现资金，此举旨在撼动7000亿美元的全球汇款市场。比特币等加密货币被视为人们向海外家人和朋友汇款的重要方式，因为加密货币具有无国界性，而且比传统货币转账的中间商更少。加密货币交易所周二在一篇博文中说，墨西哥的加密货币接收者现在可以在他们的Coinbase应用程序上生成一个兑换代码，可以用来在墨西哥全国37000家零售和便利店接收现金。Coinbase表示，这项服务将在3月31日前免费提供，之后将向客户收取 “名义费用，但仍比传统国际支付方式便宜25-50%”。](https://www.reuters.com/business/finance/coinbase-let-crypto-recipients-mexico-cash-out-local-currency-2022-02-15/)
 
-**4.俄罗斯入侵乌克兰的担忧缓解，亚洲股市反弹**
 
-[东京，2月16日（路透社）–亚洲股市周三反弹，因为在莫斯科表示将一些部队从演习中返回基地后，对俄罗斯本周入侵乌克兰的担忧消散了，给投资者带来了一定的安慰。世界大国之间在乌克兰局势上的紧张关系，已经发展成为几十年来东西方关系中最深刻的危机之一，一直是投资者关注的焦点。MSCI最广泛的日本以外的亚太股票指数(.MIAPJ0000PUS)在周三的区域早盘交易中大涨0.9%，追赶周二美国和欧洲股市的涨势。”IG驻墨尔本的市场分析师Kyle Rodda说：”如果我们继续看到外交手段发挥作用的迹象，以及紧张局势的缓和，我认为我们将看到一种反转交易。](https://www.reuters.com/markets/europe/global-markets-wrapup-1-pix-2022-02-16/)
 
-**5.迪士尼任命高管监督元宇宙战略**
 
-[2月15日（路透社）–根据路透社看到的迪斯尼首席执行官Bob Chapek周二发给员工的电子邮件，迪斯尼公司（DIS.N）已任命一名高管负责监督其元宇宙战略。媒体和娱乐发行集团的高管Mike White被任命为下一代故事和消费者体验的高级副总裁，他将帮助确定消费者如何体验迪士尼即将到来的元空间。他将与迪士尼的创意团队一起工作。”查普克在给员工的电子邮件中写道：”近100年来，我们公司通过利用技术将故事以更深入、更有影响力的方式带入生活，定义并重新定义了娱乐业，”他补充说：”今天，我们有机会将这些宇宙连接起来，为观众体验和参与我们的故事创造一个全新的模式。](https://www.reuters.com/business/media-telecom/exclusive-disney-names-executive-oversee-metaverse-strategy-memo-2022-02-15/)
 
-**6.CNN结束对Cuomo问题的调查，执行总裁Gollust将离任**
 
-[2月15日（路透社）–华纳传媒首席执行官Jason Kilar在给员工的一份备忘录中说，在一项内部调查发现她和其他人违反政策后，CNN高管Allison Gollust已经从公司辞职，路透社星期二看到了这份备忘录。她的离职是网络对克里斯-库莫的行为进行调查后的最新举措，克里斯-库莫是CNN黄金时段的主播，因涉嫌协助被指控性行为不当的哥哥、前纽约州长安德鲁-库莫而于12月被解雇。CNN总裁杰夫-扎克本月早些时候辞职，告诉员工他没有披露与一名同事的自愿关系。CNN主播布莱恩-斯特尔特(Brian Stelter)当时说，这段关系是与该网络的首席营销官戈勒斯特(Gollust)的关系。基拉尔在给员工的备忘录中写道：”由第三方律师事务所执行，并由一名前联邦法官领导，调查是全面和确定的，”从9月持续到上周末。](https://www.reuters.com/world/us/cnn-ends-probe-into-cuomo-issues-exec-gollust-depart-2022-02-16/)
 
-**7.Airbnb第一季度收入强劲，原因是旅游需求和延长住宿时间**
 
-[2月15日（路透社）–Airbnb Inc（ABNB.O）周二预测第一季度营收将好于预期，此前这家短期房屋租赁公司公布了强劲的季度业绩，原因是国内旅游人数增加，客人以较高的价格停留时间更长。虽然这家总部位于旧金山的公司最初受到了大流行病的冲击，但其业务出现了反弹，因为人们在离家较近的地方旅行，他们在那里停留的时间更长，以便进行远程工作。此后，这一趋势一直在持续，第四季度的 “非城市总夜数 “预订量比2019年增长了约45%。”在这个新的旅行类别中出现了这种整体加速，即人们对办公室的束缚减少了，所以他们现在可以住在任何地方，”首席执行官Brian Chesky在与分析师的电话会议上说。](https://www.reuters.com/business/airbnb-sees-strong-first-quarter-revenue-travel-demand-longer-stays-2022-02-15/)
 
-**8.摩根大通呼吁监管部门快速解决加密货币对冲问题**
 
-[伦敦，2月15日（路透社）–美国银行摩根大通（JPM.N）的一位高管周二表示，迫切需要制定新的规则，让银行在代表希望进入快速发展的市场的大客户处理加密资产时有确定性。包括比特币在内的2.7万亿美元的加密资产领域基本上没有受到监管，但目前还没有关于银行应该预留多少资本以覆盖该领域活动的定制规则。这让国际银行陷入困境，而监管机构则落后于形势。对冲基金和投资基金等大型机构对加密货币越来越感兴趣，并希望银行作为其中介机构。摩根大通企业和投资银行的监管事务主管Debbie Toennies说，一些非常大的玩家要求它对冲他们在加密资产上的风险。](https://www.reuters.com/technology/jpmorgan-calls-regulatory-quick-fix-crypto-hedging-2022-02-15/)
 
-By 【秘密翻译组-金融法律组】
-作者：千年等一回
+耶稣基督说:“你的財宝在哪里，你的心也在哪里。”
+
+在大约2900前的以利亚先知时代，以色列人在进入应许之地建国之后80年就分裂了。北国以色列国王为了用自己的手段确保自己权力的合法性和稳定性，于是造了金牛犊假神，并带领百姓拜假神，让百姓陷入了罪中。后来在经过两次血腥的灭族篡位之后，亚哈王更是放任自己的外族老婆在全国公然拜假神巴力并杀害神的先知。
+
+
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image0-28.jpg)
+
+
+
+以利亚先知就是在这样的世代热心地为神传信息，然而正如以利亚先知对神抱怨所说的：“我一向热心事奉万军之上帝耶和华，但以色列人背弃你的约，拆毁你的祭坛，残杀你的先知。现在只剩下我一个人，他们还要杀我。” (王上 19:10 ）先知一片热心侍奉神，甚至靠着神显了神迹奇事，在旱灾之年为同胞求得了雨水，得到同胞的回应却是拆毁祭坛，暴力威胁迫害。先知感觉万念俱灰，自己实在没有什么可以做的了，于是逃离了以色列国，宅在山洞里，甚至向神祷告，只求一死。
+
+然而，在西奈山的旷野，神提醒先知，不要在乎外在环境的艰难，要记住自己的使命是什么，要记住自己着眼和追求的是什么。先知恍然大悟:神给的和自己追求的不是舒适的环境，而是一个值得自己忍受一切患难的伟大使命和永生复活的盼望。于是先知原路返回，继续按神所吩咐的传讲神的话语和信息，继续侍奉神。最终，就在这样荒凉的世代，他成了大洪水之后唯一一个不经历死亡被神提升天的人。他得到了自己所追求的。
+
+以利亚先知有一个徒弟叫以利沙。当先知呼召以利沙的时候，没有多说多做别的，只把自己那仅有的毛皮衣服披在以利沙身上，以利沙立马就决定要跟随先知去侍奉神。以利沙是真的被先知侍奉神的生活所吸引，真的被先知所侍奉的那位神所吸引。于是他就辞别父母亲人去侍奉神，侍奉以利亚先知去了。
+
+在漫长的与神和以利亚先知同行的日子里，以利沙一直默默无闻，十分低调，从不出镜。他给世人的印象就是：“从前服侍以利亚的（倒水在以利亚手上的）。”(王下 3:11 ）他默默无闻地以一个仆人的身份服侍先知，不张扬，没有怨言，甚至以之为乐。就在神要接走他的师父以利亚先知的时候，众先知包括以利沙自己都知道了这个从神而来的信息。别人问起的时候，他却谦卑低调地毫不声张，并且告诉其他先知也不要声张。
+
+以利亚先知要升天之时，三次考验以利沙。让以利沙离开自己，但以利沙却绝不离开。这显明了以利沙侍奉神和神的仆人的时候是发自内心的愿意，乐意去做。他是真的爱神，渴慕神，以之为乐。若不以之为乐，他就离开以利沙了。最后，以利亚先知问他想要什么，这也是耶稣基督问第一批跟随他的门徒的问题:“你想要什么？”以利沙先知回答说:“求你把感动你的灵加倍的赐给我。”结果，以利沙正如以利亚先知说的，看到了以利亚先知那在神里永活的生命。最终，他也得到了双倍的圣灵。
+
+这些“小事”清晰地显明了以利沙的生命是真正的如此无“我”，“我”真的已经被粉碎，钉在十字架上了。“我”，真死了，耶稣真的在他里面复活了。他一心追求的是神的圣灵，是复活和永生。于是他就得到了。
+
+后来，以利沙接替师父的衣钵做了先知。他也有了一个名叫基哈西的弟子和仆人。基哈西也服侍自己的师父以利沙。
+
+有一次，亚兰国将军乃曼因着弱小的信心来求以利沙医治他的麻风病。为了彰显神的荣耀，以利沙靠着圣灵的大能，告诉乃曼去不起眼的约旦河里沐浴（受洗）七次就能得医治。乃曼带着试一试的心去了，结果真的得了医治。麻风病如同罪一样被洗净了！乃曼想要给一大笔钱财给以利沙做酬谢，但以利沙先知不要，因为他做的这一切不是为了钱财，而是为了荣耀神。
+
+然而基哈西却想要钱财，在乃曼走后，背着以利沙追上乃曼，找借口要了一大笔银子，乃曼还高兴地给了他双倍。他回到以利沙那里时，还对以利沙撒谎，结果，他一离开以利沙就得了乃曼的麻风病。
+
+同样是侍奉神，以利亚先知得到了永生，以利沙先知得到了双倍的圣灵和复活的生命，基哈西得到的却是双倍的不义之财和麻风病（罪）。这一切其实都源于那个问题:“你想要什么？”我们基督徒也要常常问自己，自己到底想要什么？我们是要真的得着耶稣，得着祂那死而复活，而且永活的生命？还是要在弟兄姊妹中间抓名抓利……
+
+求神看顾保守我们，我们一同警醒。愿我们同样的侍奉最终都有同样的得着–耶稣基督。阿门！
+
+2022年2月16日
+
+（本文仅代表作者个人观点）
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-7.jpg)
+
+*编辑 /校对*：德州牛仔
+
+*发稿：Yuki*jiang
+
+**更多资讯，更多关注**
+
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
+
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
+
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
+
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
