--- a/gnews/17.md
+++ b/gnews/17.md
@@ -1,20 +1,22 @@
 ---
-title: 美国务卿布林肯宣布关闭美驻乌克兰大使馆 并呼吁美在乌公民尽快离境
+title: Moderna总裁：破解mRNA可以玩弄整个生命王国
 ---
-`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2013317/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2013473/)
 
-作者: 首尔天池农场—祥瑞舟
+作者: 银河系农场—骄子
 
 
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/good-26.png)
-据路透社2月14日的报道，当地时间2月14日，美国国务卿布林肯宣布已下令关闭位于基辅的美国驻乌克兰大使馆，并将“暂时性地”把留在基辅的少数外交人员转移到乌克兰西部城市利沃夫。布林肯并呼吁位于乌克兰的美国公民尽快离境。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/blinken.jpeg)图片来源: 网络
-布林肯在声明中说：“我下令采取这些措施的原因只有一个，那就是我们工作人员的安全。我们强烈敦促所有留在乌克兰的美国公民立即离开乌克兰。” 他同时表示，这些决定并不会改变美国对乌克兰的承诺，美国也仍然会与俄罗斯保持沟通，为达成外交解决方案做进一步努力。美国国务院表示，本周末将在利沃夫维持一个小型领事馆来用于紧急服务。
+疫苗制造商Moderna的总裁曾说过，“如果你能够破解mRNA的规则，那么基本上整个生命王国都可以肆意被你玩弄”。随着mRNA技术应用于中共病毒疫苗真相的曝光，Moderna总裁这话听起来不免让人毛骨悚然。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/covid-19-vaccine-mrna-dna-1204201.jpeg)图片来源: 网络
+David Martin博士说，中共病毒疫苗并不是疫苗，使用“疫苗”这个词可以在公共卫生豁免下对公众形成误导。疫苗进入人体后会让人体自身细胞成为病原体制造者，结果会导致人体内的细胞互相攻击。大药商Moderna非常清楚这就是在杀人。
 
-在多国发布撤离在乌克兰公务和商务人员之后，美国国务卿关闭大使馆的行政命令，意味着俄乌紧张局势达到战争临界点的一个重大标志。
+目前Moderna拥有数百名工程师和科学家，试图用生物信息技术来对人体进行攻击，并使人体依赖该技术，甚至他们称mRNA为生命软件。
 
-新闻链接: [https://www.reuters.com/world/europe/us-moving-remaining-ukraine-embassy-staff-kyiv-lviv-blinken-2022-02-14/](https://www.reuters.com/world/europe/us-moving-remaining-ukraine-embassy-staff-kyiv-lviv-blinken-2022-02-14/)
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-34.jpg)
+另外该项邪恶计划还包括使用改良的mRNA来重新编程人类的干细胞功能，获得对干细胞的基因改造技术。这是一套完整的细胞级操作，编码、解码、调节、改变人体内的生理指令。
+
+新闻链接: [https://newstarget.com/2022-02-14-moderna-president-stephen-hoge-hack-rules-mrna-kingdom-of-life.html](https://newstarget.com/2022-02-14-moderna-president-stephen-hoge-hack-rules-mrna-kingdom-of-life.html)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-32.jpg)
 编辑/校对/发稿: 卡夫卡的甲壳虫
 
 **更多资讯，更多关注**
@@ -28,8 +30,6 @@ title: 美国务卿布林肯宣布关闭美驻乌克兰大使馆 并呼吁美在
 [**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
 [**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
-
-
 
 
 
