--- a/gnews/2.md
+++ b/gnews/2.md
@@ -1,71 +1,37 @@
 ---
-title: 新西兰财经G乐部2022年2月16日:财经新闻整理
+title: 简说历史：世纪骗局之：1981~1985（改革开放）(五)
 ---
-`Finance-GCLUB【新西兰财经G乐部】` [轉載自GNews](https://gnews.org/zh-hans/2013521/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013600/)
 
-采集整理：蚂蚁的城堡
+作者：一颗星星
 
-**提纲：**
+【接上篇：世纪骗局之：1981~1985（改革开放）(四)】
 
-1、制度上的无能的体现：中共监管持续严打哄价，铁矿石期货跌停
+**笔者观点：**
 
-2、融创收“病危”通知书：遭穆迪降级，12亿美元境外债券压顶
+提起“改革开放”，似乎国内很多人总是会觉得是一次具有划时代意义的壮举，有些人会觉得是“改革开放”让国人富起来了。殊不知，“改革开放”也是中共政权的一次迫不得已的救党之路。在“毛腊肉”的时代，中共不但把中国人折腾得死去活来，中共的政权也是命悬一线。那一时期，在中共的折腾下，中国实在是太穷了。朝鲜战争让老毛丢了儿子，“文革”后“毛夫人”（江青）又进了大狱，“毛腊肉”家天下的美梦彻底破灭了。在“文革”中苟活下来的那些中共老杂毛们清楚的知道，这样穷下去是不行的。即便他们不会在乎饿死多少中国百姓，但是继续走老路是要亡党的。
 
-3、雪松200亿涉众募资调查：假借灰色通道，裹挟一众伪国企，底层资产涉“空转”贸易
+想要赚钱就要改革。虽然“改革”了，依旧没有改掉中共独裁的本性。
 
-4、百亿量化私募今年以来亏损达到了9%左右
+经济自由化一旦开始启动，政治民主化的要求就会提上日程。犹如日后，中共加入WTO而急需要西方自由世界承认的“市场经济”，便是与中共彻头彻尾的政治独裁相矛盾的。没有政治的民主化，经济的自由也会难以维系。经济越发展，经济的改革越深化，那么其与中共政治独裁的矛盾也会越尖锐。这对于贪婪的中共独裁政权来说，是一个解不开的难题。它们一边想要赚得盆满钵满，一边还要想让它们世世代代的子孙们独裁统治着中华大地，贪婪成性的它们，只好用千万个谎言和亿万个无辜的生命去维系着它们那邪恶的独裁政权。
 
-5、高瓴清仓、桥水增持阿里巴巴“冰火两重天”，中概股投资阴霾难散
+反观这一时期的中共领导人——被称为“总设计师”的邓小平，虽然改革的“号角”吹的震天响，但是他根本是不会去搞彻底的政治改革的。他所讲过的政治改革，都是在“四项基本原则”的框架之内的。而彻底的政治改革，是必须要解决掉中共一党专政这根本性的体制问题。中国共产党是中国最大的利益集团，坚持中国共产党的领导，是保证其利益最根本的一条。亲爱的读者们，再去复习一下“四项基本原则”的内容，我们不难看出其中的任何一条都是为中共要保持一党专政而设计的。有了“四项基本原则”这个“紧箍咒”，中共再如何的宣扬、叫嚷“市场经济”、“政治改革”、“法治社会”、“民主选举”……这一切的一切，都是骗、都是扯淡。
 
-6、Bitfinex被盗BTC洗钱事件：丈夫面临审前拘留，妻子获得保释
+高举“改革开放”大旗的中共，在内部依旧斗得热火朝天。邓、陈两大阵线的人，在中央党校（意识形态阵地）和人民日报（宣传阵地）之中斗得死去活来。时至今日，控制意识形态和掌握宣传的话语权，依旧是中共欺骗中国百姓，欺骗全世界的不二法宝。篇幅所限，就不一一赘述了……
 
-**正文**
+而“改革”之初发起的“严打”运动，更是让中共政权狠狠的抽着自己的嘴巴。口口声声号称“依法治国”的中共政权，在后毛时代依旧是中共太祖“毛腊肉”那副“和尚打伞”——无法无天的德性。所谓的法律，在中共体制之下只不过是用来“摆摆样子”的一纸空文。
 
-**1、制度上的无能的体现：中共监管持续严打哄价，铁矿石期货跌停**
-![img](https://media.gettr.com/group11/origin/2022/02/16/01/bb76637c-b798-125d-7bc0-e89243095d6a/fd54bb760bb44394a8fb68d62616799c_500x0.png)
-2月15日，国内期市截至收盘，铁矿石期货主力合约跌停，跌幅达9.98%，报699元/吨。国际上，新加坡铁矿石指数期货03合约跌超12%，现报130.35美元/吨。中共市场监管总局2月15日发布消息称，针对近期铁矿石价格异常波动等情况，市场监管总局价监竞争局、国家发展改革委价格司、证监会期货部联合召开会议，详细了解铁矿石贸易企业港口库存变化及参与铁矿石期现货交易等情况，提醒告诫相关企业不得编造发布虚假价格信息，不得恶意炒作、囤积居奇、哄抬价格，号召相关国有企业主动承担社会责任，助力政府保供稳价。
+【完结】
 
-财经G评：去年缺电火力发电需要煤，动力煤价格大涨，中共马上跳出来打击动力煤价格！中共无数次发动针对各个领域的“严打运动”来转移视，中共用严打干预市场，恰好证明了中共——制度上的无能！
+* * *
 
-参考链接：[https://finance.sina.com.cn/roll/2022-02-16/doc-ikyakumy6151012.shtml](https://finance.sina.com.cn/roll/2022-02-16/doc-ikyakumy6151012.shtml)
+审核：Aries的星
 
-**2、     融创收“病危”通知书：遭穆迪降级 12亿美元境外债券压顶**
-![img](https://media.gettr.com/group34/origin/2022/02/16/01/2be9b339-a68d-fa94-4b06-8593d276a920/c55f215a5a987381ad46aa0feca95bd5_500x0.png)
-穆迪认为，穆迪表示，融创中国今年将有12亿美元境外债券到期，但该公司在未来6至12个月通过以合理成本发行债券为这些债务再融资的可能性很低。受此影响，融创在香港市场大跌了11.84%。融创中国在香港上市的股票周一前市下跌9.7%，令今年以来的累计跌幅达到16%。恒生中国内地地产指数下跌4.8%。
+校对：阿伯塔
 
-参考链接：[https://finance.sina.com.cn/stock/s/2022-02-16/doc-ikyamrna1000352.shtml](https://finance.sina.com.cn/stock/s/2022-02-16/doc-ikyamrna1000352.shtml)
+发布：花羽
 
-**3、雪松200亿涉众募资调查：假借灰色通道，裹挟一众伪国企，底层资产涉“空转”贸易**
-![img](https://media.gettr.com/group22/origin/2022/02/16/02/9ae96de0-f113-9d0c-0b16-d0b670ec3507/5c6ef076d8a6081f605dd68ee0aa0820_500x0.png)
-在雪松控股的兜底担保之下，打着“供应链金融”的旗子，以所谓的“应收账款”为底层资产，假借各类金交所、产交所、伪金交所通道，超过350只违规“理财产品”面向自然人发售，总规模超过200亿元。根据记者的调查，这350余只理财产品背后，构筑的是一个庞大的融资网络，涉及企业数量高达63家，除了或明或暗的雪松系公司，还有大量的假央企、伪国企。而作为底层资产的应收账款，系建立在涉嫌虚假的“空转”贸易行为之上。随着产品的爆雷，酿成了约8000投资人的涉众风险。
-
-财经G评：问-国企和伪国企的相同之处是什么？ 答-都是党的人！这个时候就别甩锅了！
-
-参考链接：[https://www.stcn.com/xw/sd/202202/t20220216\_4156297.html](https://www.stcn.com/xw/sd/202202/t20220216_4156297.html)
-
-**4、百亿量化私募今年以来亏损达到了9%左右**
-![img](https://media.gettr.com/group31/origin/2022/02/16/02/807fd786-b017-2f9f-6e66-4088c5dd04cb/22badcd90905021c8070334bca30d19d_500x0.png)
-今年A股市场开局满盘皆墨，在此情况下，私募基金损失惨重，相关统计数据显示，今年超九成的股票私募收益为负，不同规模股票私募今年以来均出现超过7%的平均亏损，同时有多家百亿私募旗下产品今年跌幅超过10%。大跌之下，多家知名私募产品触及预警、止损线，减免管理费，紧急跟客户沟通，也有私募发文反思。
-
-参考链接：[https://finance.sina.com.cn/money/smjj/smdt/2022-02-16/doc-ikyamrna0999514.shtml](https://finance.sina.com.cn/money/smjj/smdt/2022-02-16/doc-ikyamrna0999514.shtml)
-
-**5、高瓴清仓、桥水增持阿里巴巴“冰火两重天”，中概股投资阴霾难散**
-![img](https://media.gettr.com/group12/origin/2022/02/16/02/c8a54800-4e06-746c-487d-b9fb2059e46e/9d063b11116b23a123a156919854cfa2_500x0.png)
-路透-多家在美投资机构最新公布去年四季度美股持仓报告，其中中国互联网巨擘—阿里巴巴遭高瓴资本等多家机构减持或清仓，不过全球最大对冲基金–桥水基金反其道而行之大举增持该股近三成。业内人士指出，海外上市等系列监管“迷雾”下，中概股投资避险情绪仍在。
-
-财经G评：桥水基创始人，雷·达利奥频频讨好中共！桥水基金增持还是代持呢？大家还记得2021年8月21日七哥发文“沼泽地里的西瓜🍉真好吃！”，去谁家摘西瓜了吗😄
-
-参考链接：[https://cn.reuters.com/article/hillhouse-bridgewater-alibaba-chinese-ad-idCNKBS2KL018](https://cn.reuters.com/article/hillhouse-bridgewater-alibaba-chinese-ad-idCNKBS2KL018)
-
-**6、Bitfinex被盗BTC洗钱事件：丈夫面临审前拘留，妻子获得保释**
-![img](https://media.gettr.com/group21/origin/2022/02/16/03/98aabd9b-bb9f-b8e5-686f-9caa5f086890/b6794af4ac5cc825071d9eb2d13b4254_500x0.png)
-在著名的36亿美元比特币洗钱案中被指控的夫妻二人过了一个截然不同的情人节。一名联邦法官支持对妻子Heather Morgan缓期释放决定，而她的丈夫Ilya Lichtenstein已被送往审前拘留。该案的主要被告涉嫌在2016年对从加密货币交易所Bitfinex盗取的119,754个BTC中的94000个进行洗钱，按今天的价值估计超过51亿美元。早期调查发现，这两人与2016年的资金失窃没有关联。然而，调查发现他们利用一个复杂的账户网络积极参与洗钱。
-
-参考链接：[https://cointelegraphcn.com/news/bitfinex-money-laundering-husband-faces-pre-trial-detention-wife-gets-bail](https://cointelegraphcn.com/news/bitfinex-money-laundering-husband-faces-pre-trial-detention-wife-gets-bail)
-
-审核校对：蚂蚁的城堡（一审）、文勇（二审）
-
-上传排版：文勇
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
 
  
 
