--- a/gnews/20.md
+++ b/gnews/20.md
@@ -1,17 +1,17 @@
 ---
-title: 樱花FM&#124;东京大学副教授预测中共病毒的次生灾难：人荒将至
+title: 樱花FM&#124;日本皇族首现中共病毒感染者
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013283/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013431/)
 
 音频：东京樱花团/战友520
-![](https://lh4.googleusercontent.com/tqRGmgMYFyPcmbi_bhZLeyC0O9rgriLNVZtWi319burlplVZiWoOoQp86onJ9GMhqS3n1B3g1iqm9e4eW5nQwhfuOmFfdrIGTDIhKjR4t6YSJBpFI0Pgj3Y2XivtR49y3iX00729)
-2月9日朝日电视报道：东京大学副教授仲田泰祐研究团队发表了他们的估计数字，由于经济不安感的增加和中共病毒（新冠病毒）带来的邂逅减少，2020年和2021两年失去的婚姻数量总计大约为11万。
+![](https://lh3.googleusercontent.com/mg9RWRGgxL2gdmYnDmRGgSQqKJYgLq9LeIXSI0oMoPWC2qJkCj38RZrc_LvPDcd68BESfLaKiukGehjlil_LsFwZdJOLskEFSThEon3GuQBGUGPFG8S7UOME2tcmDPj7H5I3k4cH)
+２月９日共同通迅社消息：9日，日本皇室机构宣布，38岁的瑶子是已故宽仁亲王的二女儿，三笠宮崇仁亲王和同妃百合子的孙女，感染中共病毒（新冠病毒）入院皇宫内的皇室医院，又因发现她患有肺炎而被转到东京文京区的东京大学医院。
 
-如果没有结婚人数增加作为填补，这将导致未来几年的出生人口数下降约21万。多年来，婚姻和出生率一直在下降，如果中共病毒的影响长期存在，可能会加速这一趋势。
+瑶子公主于7日左右感觉喉咙痛，8日下午，PCR测试呈阳性。由于她在入院的皇室医院进行检查时，发现患了肺炎，被认定为为中度感染症状。
 
-笔者能想到的是，除此之外，中共病毒造成的大量死亡，也会成为人荒的到来的加速器。
+日本皇室，日常生活基本上是跟外界绝缘的。因此，瑶子公主的感染令人费解。另外，既然皇族出现了感染者，那么其他皇族成员会不会有密切接触者呢？会不会再出现感染者呢？
 
-文字版原文：[东京大学副教授预测中共病毒的次生灾难：人荒将至](https://gnews.org/zh-hans/1978653/)
+文字版原文：[日本皇族首现中共病毒感染者](https://gnews.org/zh-hans/1978642/)
 
 *编辑：东京樱花团/asket
 发布：东京樱花团/平安卿卿*
