--- a/gnews/22.md
+++ b/gnews/22.md
@@ -1,23 +1,57 @@
 ---
-title: 樱花FM&#124;五选手因服装被取消成绩 中共北京冬奥已毫无底线
+title: 中共大外宣战狼高志凯：彭帅很强壮，不可能被性侵
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013278/)
+`澳喜农场` [轉載自GNews](https://gnews.org/zh-hans/2013381/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/YNS0RWjKYffrrQJRSTS-J1SpriLUXo_vUfkGVaR4s5lGg6el-ewDjYvlIYiRlRGYKu74T-Md3_C1qk7ImaaDPHcwcLGeUEYrFY7eRV93ojxs2gcqcLRCwbDocbiWzalRf4fX_BQJ)
-周一（2月7日）的跳台滑雪混合团体项目中，有61冠纪录的夺金大热日本选手高梨沙罗，为日本队打头阵，跳出103米的好成绩。然而，她随后被判大腿的紧身衣“宽松2公分”属违规，第一跳成绩被取消。高梨沙罗因此失去获奖机会，失去这一跳成绩的日本最后也只拿下第4名。高梨沙罗当场哭成泪人。
+撰稿：一碗兰州（文远）
+![](https://assets.gnews.org/wp-content/uploads/2022/02/兰州.png)图片来自网络
+彭帅事件持续发酵，近日，全球化智库副主任、曾任邓小平翻译的高志凯接受澳大利亚电视台采访时称，彭帅很强壮，不可能遭到性侵。此番说辞引发舆论哗然。
 
-不止是她，同场共有5名来自德国、奥地利、挪威等国的顶尖女选手，都因判“服装不合格”遭取消成绩。各国媒体纷纷报导此事，怒斥“这简直是场闹剧！”
+现年60岁的高志凯曾就读于苏州大学外语系和北京外国语大学，于1983年加入中共国外交部翻译室，担任邓小平的英文翻译。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/兰州2.png)图片来自网络
 
-其中一名挪威选手奥普塞特（Silje Opseth）告诉挪威媒体，导致她被判“服装不合格”的原因，是评审在测量服装时没有遵循正常程序。她说：“他们用完全不同的方式测量服装，我们被告知要用与以往不同的方式站立。”
+澳大利亚热门新闻节目《60分钟》（60 Minutes Australia）日前对彭帅事件进行专题报道时，采访了全球化智库副主任、曾经担任邓小平英文翻译的中共国前外交官高志凯。高志凯公开质疑彭帅遭受性侵的真实性，称彭帅身体强壮，心智成熟，能够保护自己。高志凯说，如果他这种身高的人去性侵彭帅“是在幻想”，意指中共国前副总理张高丽性侵彭帅一事不实。
 
-在中共疫情肆虐世界人民的时刻，一些国家的运动员为人权和正义而战。拒绝了参加北京冬奥会。在中共经济和政治体制摇摇欲坠的时刻，中共已经没有了底线和遮羞布。明晃晃地做自己想做的事情。没有人权人性之说，相信共产党走进火葬场！
+高志凯的此番脑残洗地言论立即招来网友痛骂，澳大利亚网友说，彭帅身体再强壮也无法阻挡一个强大的专制政客的强迫性行为。另有网友说：“不是所有类型的力量和能力都是身体上的。他没有必要在身体上压倒她来做他指控的事情。对自己的生命和未来的恐惧可能是压倒性的。”
 
-文字版原文：[五选手因服装被取消成绩 中共北京冬奥已毫无底线](https://gnews.org/zh-hans/1978649/)
+“中共不把广大人民群众当人看。个人没有权利。彭帅可能是被他们软禁的。事实上，她并不是唯一被严密监视的人。她的每个家庭成员现在都在中共的监视之下”，一位网友说。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+“这就像说一个跑步运动员应该是安全的，因为他们可以跑掉”，turtlesneverlaugh写道。
+
+“自由人？在中国？如果她有家人需要保护，就不会。至于她身体太强壮，当有枪指著你的头威胁时，你就会惊讶将发生什么。只是想知道还有多少人被杀”，saltqueen99说。
+
+澳喜GNEWS推特账号发布快讯并讽刺，难道要说是彭帅强奸了张高丽吗？
+
+这不是高志凯第一次给中国共产党洗地，面对BBC对于中共在新疆实施种族灭绝政策的报道，高志凯坚称没有事实根据。事实上，美国政府已官方认定中共国在新疆对维吾尔族及其他穆斯林少数民族犯下种族清洗与反人类罪。
+
+在2021年9月20日与澳大利亚媒体ABC’s China Tonight 的联线中，高志凯表示：“装备核潜艇后，澳大利亚在未来将会变成核攻击目标（丧失其作为无核地区而免受核攻击的地位）。”该言论被主持人认为是在威胁澳大利亚。
+
+高志凯还曾在Munk Dialogue节目中，就疫情经济、中共国疫情应对、中共国疫情数据造假、中美关系等议题为中共辩护，替中共掩盖罪行，继续欺骗世界。
+
+高志凯目前拥有众多头衔，包括全球化智库（CCG）副主任，耶鲁法学博士，国际燃气联盟(IGU)/世界燃气大会（WGC）2021-2024国家组织委员会当选主席；中国能源安全研究所所长；北斗产业促进会副会长；欧美同学会常务理事；香港OBOR集团董事长；北京能源俱乐部会员；总部在纽约的亚洲协会（Asia Society）全球理事会理事；总部在伦敦的能源情报集团（EIG）国际顾问委员会委员；沙特阿美公司顾问；香港若干家上市公司董事会成员；中国企业投资协会常务理事；中国太平洋经济合作全国委员会（PECC）对外经济技术合作委员会常务理事;中央电视台英语频道评论员等。
+
+高志凯毫无道德底线，颠倒黑白，一味给共产党的残暴行径洗地，丑恶嘴脸令世人唾弃。这类共产党人渣竟然是耶鲁大学法学博士，同时在多个国际组织和机构、香港上市公司及中共国相关机构任职，足见共产党在全世界的渗透之深，布局之广，对全球造成巨大危害。
+
+值得一提的是，高志凯担任副主任的全球化智库（CCG, CENTER FOR CHINA&GLOBALIZATION）是中共大外宣的中坚力量，拥有近百人的研究团队，是联合国特别咨询商，连续四年位列全球顶级智库百强榜。CCG同时也是中联部（中共共产党对外联络部，中共的情报组织）“一带一路”智库联盟理事单位，中共国中央人才工作协调小组全国人才理论研究基地，中共国人社部中国人才研究会国际人才专业委员会所在地，中共国财政部“美国研究智库联盟”创始理事单位，拥有中共国国家授予的博士后科研工作站资质，中国公共关系协会副会长单位。
+
+中共在世界范围内安插其战狼走狗，占据政治、经济、学术、媒体等关键位置，他们强行代表中国与中国人，实际是替共产党家族卖命，其流氓言行或将招致西方对全体华人的反感与歧视，给海外华人乃至中国树立敌人，给国家和民族带来灾难。
+
+参考消息：
+
+新浪新闻：[BBC涉疆报道连线中国学者遭怒怼:你们真该好好做功课](https://news.sina.cn/gn/2021-03-04/detail-ikftpnnz1976317.d.html)
+
+搜狐网：[三次亮相，为何这个舞台的辩论和对话如此重要](https://www.sohu.com/a/401689728_828358)
+
+CCG全球化智库官网：[高志凯](http://www.ccg.org.cn/archives/55265)
+
+维基百科：[高志凯](https://zh.wikipedia.org/wiki/%E9%AB%98%E5%BF%97%E5%87%AF)
+
+法广：[中国一前外交官称：彭帅高大力壮不可能被性侵](https://www.rfi.fr/cn/%E4%B8%AD%E5%9B%BD/20220215-%E4%B8%AD%E5%9B%BD%E4%B8%80%E5%89%8D%E5%A4%96%E4%BA%A4%E5%AE%98%E7%A7%B0-%E5%BD%AD%E5%B8%85%E9%AB%98%E5%A4%A7%E5%8A%9B%E5%A3%AE%E4%B8%8D%E5%8F%AF%E8%83%BD%E8%A2%AB%E6%80%A7%E4%BE%B5)
+
+万维读者网：[剖析彭帅事件 中共外交官再出惊人言论](https://news.creaders.net/china/2022/02/14/2451603.html)
+
+发稿：MG4
+![](https://assets.gnews.org/wp-content/uploads/2022/02/澳喜图标2-1.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
