--- a/gnews/24.md
+++ b/gnews/24.md
@@ -1,25 +1,37 @@
 ---
-title: 瑞典推荐80岁以上老人注射第四剂新冠疫苗
+title: 美国务卿布林肯宣布关闭美驻乌克兰大使馆 并呼吁美在乌公民尽快离境
 ---
-`xiaobaige` [轉載自GNews](https://gnews.org/zh-hans/2013087/)
+`GTV News Talk` [轉載自GNews](https://gnews.org/zh-hans/2013317/)
 
-#### 翻译                意大利达芬奇农场          小白鸽
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Schermata-2022-02-16-alle-10.17.52.png)图片来源：eventiavversinews.it
-瑞典公共卫生局于2月14日推荐80岁以上老人打第四针新冠疫苗，包括养老院的人或在家需要照顾的人；而与此同时许多国家开始打三针，推荐打第四针的还不多。
+作者: 首尔天池农场—祥瑞舟
 
-瑞典卫生局要求尽快在接种了前一剂疫苗之后的四个月之后再接种疫苗。
 
-以色列、意大利、西班牙、丹麦已经宣布对免疫系统较弱人群开打第四针。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/good-26.png)
+据路透社2月14日的报道，当地时间2月14日，美国国务卿布林肯宣布已下令关闭位于基辅的美国驻乌克兰大使馆，并将“暂时性地”把留在基辅的少数外交人员转移到乌克兰西部城市利沃夫。布林肯并呼吁位于乌克兰的美国公民尽快离境。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/blinken.jpeg)图片来源: 网络
+布林肯在声明中说：“我下令采取这些措施的原因只有一个，那就是我们工作人员的安全。我们强烈敦促所有留在乌克兰的美国公民立即离开乌克兰。” 他同时表示，这些决定并不会改变美国对乌克兰的承诺，美国也仍然会与俄罗斯保持沟通，为达成外交解决方案做进一步努力。美国国务院表示，本周末将在利沃夫维持一个小型领事馆来用于紧急服务。
 
-瑞典已有超过85%的80岁以上的老人和55%的18岁以上的人都打了第三针。
+在多国发布撤离在乌克兰公务和商务人员之后，美国国务卿关闭大使馆的行政命令，意味着俄乌紧张局势达到战争临界点的一个重大标志。
 
-尽管奥米克戎的感染率在飙升，瑞典于2月9日解除了所有疫情限制措施。瑞典在新冠病毒刚爆发时未采取任何封城措施的做法曾引起人们的广泛关注。
+新闻链接: [https://www.reuters.com/world/europe/us-moving-remaining-ukraine-embassy-staff-kyiv-lviv-blinken-2022-02-14/](https://www.reuters.com/world/europe/us-moving-remaining-ukraine-embassy-staff-kyiv-lviv-blinken-2022-02-14/)
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-34.jpg)
+编辑/校对/发稿: 卡夫卡的甲壳虫
 
-迄今为止瑞典有16500人死于新冠病毒，其新冠死亡率好于欧洲平均水平。但远高于挪威、芬兰和丹麦。
+**更多资讯，更多关注**
 
-原文链接：[https://www.eventiavversinews.it/la-svezia-raccomanda-il-quarto-vaccino-covid-per-gli-over-80/](https://www.eventiavversinews.it/la-svezia-raccomanda-il-quarto-vaccino-covid-per-gli-over-80/)
+[**纽约香草山农场****GTV-****香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-编辑、上传：Xiao  baige
+[**纽约香草山农场****GTV-MOS TALK ****香草山访谈**](https://gtv.org/user/5e9dcdd50dbf207957d89bcd)
+
+[**纽约香草山农场****Gettr**](https://www.gettr.com/user/himalaya_mos)
+
+[**纽约香草山农场**** YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
+
+[**欢迎加入纽约香草山农场**** Discord**](https://discord.gg/ChqXAHd)
+
+
+
+
 
  
 
