--- a/gnews/26.md
+++ b/gnews/26.md
@@ -1,49 +1,23 @@
 ---
-title: 中共正在将其极权主义行为不遗余力地输送到全球
+title: 樱花FM&#124;五选手因服装被取消成绩 中共北京冬奥已毫无底线
 ---
-`喜马拉雅农场新西兰站` [轉載自GNews](https://gnews.org/zh-hans/2013064/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013278/)
 
-翻译：小小小鸟（酷翻组）
-采集：玫瑰新闻组
-校对：sherryok (水云间)
+音频：东京樱花团/战友520
+![](https://lh3.googleusercontent.com/YNS0RWjKYffrrQJRSTS-J1SpriLUXo_vUfkGVaR4s5lGg6el-ewDjYvlIYiRlRGYKu74T-Md3_C1qk7ImaaDPHcwcLGeUEYrFY7eRV93ojxs2gcqcLRCwbDocbiWzalRf4fX_BQJ)
+周一（2月7日）的跳台滑雪混合团体项目中，有61冠纪录的夺金大热日本选手高梨沙罗，为日本队打头阵，跳出103米的好成绩。然而，她随后被判大腿的紧身衣“宽松2公分”属违规，第一跳成绩被取消。高梨沙罗因此失去获奖机会，失去这一跳成绩的日本最后也只拿下第4名。高梨沙罗当场哭成泪人。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2163.png)2018年7月，在刚果科卢韦齐，中国华友钴业的子公司刚果东方矿业旗下的卡苏洛矿附近，一个年轻人将一袋钴放在一个11岁男孩的背上：罪恶的行业正在运作
+不止是她，同场共有5名来自德国、奥地利、挪威等国的顶尖女选手，都因判“服装不合格”遭取消成绩。各国媒体纷纷报导此事，怒斥“这简直是场闹剧！”
 
-美国参议员马可*·*卢比奥（R-FL）是参议院情报特别委员会副主席、国会及行政当局中国委员会高级成员和参议院外交关系委员会成员。
+其中一名挪威选手奥普塞特（Silje Opseth）告诉挪威媒体，导致她被判“服装不合格”的原因，是评审在测量服装时没有遵循正常程序。她说：“他们用完全不同的方式测量服装，我们被告知要用与以往不同的方式站立。”
 
-我们都知道中国共产党在其境内可怕的侵犯人权行为：现代版的奴隶制度、在新疆对维吾尔族穆斯林和其他民族的持续种族灭绝、对宗教和新闻自由的打击——不胜枚举。而没有被广泛报道的是，该党还成功地将其滥用职权的做法输送到了全球。
+在中共疫情肆虐世界人民的时刻，一些国家的运动员为人权和正义而战。拒绝了参加北京冬奥会。在中共经济和政治体制摇摇欲坠的时刻，中共已经没有了底线和遮羞布。明晃晃地做自己想做的事情。没有人权人性之说，相信共产党走进火葬场！
 
-中共的“一带一路”（BRI）派遣中共国公司和劳工到发展中国家从事基础设施建设。北京将“一带一路”宣传为中共国及其“伙伴”国家的“双赢”互惠。但实际上，“一带一路”的贷款诱使发展中国家陷入经济和政治依赖，这反过来又会使他们更容易受到中共的伤害。
+文字版原文：[五选手因服装被取消成绩 中共北京冬奥已毫无底线](https://gnews.org/zh-hans/1978649/)
 
-然而，根据最新的研究，这并不是“一带一路”诡异的全部。在全球大部分地区，从事“一带一路”项目的中共国公司正在大规模地滥用劳工。从“一带一路”开启的2013年到2020年间，商业与人权资源中心就收到了679起与中共投资有关的侵犯人权行为的指控。这些指控大部分来自东南亚、撒哈拉以南的非洲和拉丁美洲，但也有来自南亚和中东的投诉。
-
-最常见的指控是针对中共国的采矿业务。在厄瓜多尔和秘鲁，中国矿工任意拘留和殴打当地居民。在赞比亚的一个煤矿，为阻止抗议活动他们甚至向工人开火。中共国建筑公司也臭名昭著，以侵犯柬埔寨、老挝和斐济当地人的土地权而声名狼藉。
-
-![](https://assets.gnews.org/wp-content/uploads/2022/02/2162.jpg)中共投资正在推动柬埔寨的建设热潮，但也带来了令人头疼的问题。 （照片由Akira Kodaka提供）
-
-各行各业都发现了侵犯人权的行为。在乌干达和巴基斯坦，中共国能源公司与当地民众发生冲突，给其带来了与污染相关的健康风险。在南美和南亚沿岸，中共国渔船严重染指海洋环境，掠夺渔民生计。在整个发展中国家，中共国投资者经常会因为信息公布不充分和缺乏环境影响评估而被指责。
-
-罪恶还远不止于此。2016年，国际特赦组织发现中共国公司华友钴业正在使用40,000名被奴役的儿童——其中一些年仅7岁——在刚果民主共和国开采主要矿产。孩子们在没有人身保护的情况下“背负重担，每天在高温下工作一天仅赚1美元或2美元”，并且一直受到公司员工的殴打和勒索。尽管国际上愤愤不平，但这个罪恶的行业仍在运作。
-
-这些仅是中共恐怖式操作和颠覆性影响的几个例子。
-
-即使中共国公民在国外也不能免受虐待。通过对在不同国家“一带一路”的工作人员的采访发现，中共国公民一旦出国，护照就会被没收，并遭受加班、欠薪、恐吓等诸多问题。这些故事令人不寒而栗，揭示了其“一带一路”本质上是一个全球人口贩卖集团。
-
-各国必须意识到“一带一路”的阴暗面及其附带的所有条件。这清楚地表明，中共无论在哪里运作，都会带来剥削和完全无视人的尊严。中共知道中共国企业（其中许多是国有企业）的侵权行为，但却不愿追究这些企业的责任。此外，据报道，它正在利用其权力掩盖这些滥用行为，这意味着中共与其附属公司一样有罪。
-
-中共国企业虐待工人本身就是一种严重的犯罪行为，它对我们以规则为基础的国际秩序也构成了严重威胁。这些罪行——土地盗窃、恐吓、环境退化、暴力和奴役——不仅违反了做为一个人的尊严，也违反了主权国家的法律。换言之，北京政权方面的所作所为是公然、咄咄逼人地破坏发展中国家的独立与稳定。
-
-这些只是我们已经知道的更多的证据：北京将自己视为世界的中心，有权获得其他国家的附庸进贡和毫无怀疑的尊重。
-
-在举办2008年奥运会时，中共提出了“一个世界，一个梦想”的口号。2014年，习近平总书记宣布要“把中共国周边地区打造成为人类命运共同体”。虽然这些只是宣传路线，但它们也暗含了其政党长期目标的真实野心，即推翻现有的国际秩序并按照自己的形象来重塑新的秩序。
-
-中共国企业的人权侵犯证实了“一带一路”不是一个双赢的工程，而是一个让伙伴国臣服于中共的新殖民主义项目。北京政权“新丝绸之路”的目的是复兴中共国民族主义者对前现代世界的看法，在这个世界中，中共国处于舞台的核心，首要做的便是拉拢发展中国家并使其依赖中共。
-
-全球各国不应该让极权主义政权虐待他们的人民，欺凌和边缘化他们的政府。他们的领导人必须拒绝会损害其国家主权和公民福祉的片面“交易”。我们需要揭露中共公司的滥用职权行为，否则北京方面会巧妙地掩盖这些事实。
-
-**审核校对：Barry Jack
-上传排版：V在途中**
-
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
