--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,25 +1,29 @@
 ---
-title: 中共病毒感染后心血管疾病的风险增加
+title: 中日财经爆&#124;澳洲葡萄酒商或用NFT化解中共贸易报复
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2012513/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2012861/)
 
-撰稿：东京樱花团/立正道
+撰稿：东京樱花团/peterwong
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1554.png)[图片来源](https://kknews.cc/zh-sg/food/22xe5k9.html)
+澳洲主要葡萄酒生产商表示，中共国对澳洲进口葡萄酒课征严格关税以来，对中共国的销售已经蒸发，但其他地方的旺盛需求帮助避免了灾难，NFT或为新利润增长点。
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/中共病毒感染后心血管疾病的风险增加.png)[图片来源](https://news.yahoo.co.jp/articles/4559c508abfad26cde290f3000a83079e125519f/images/000)
+澳洲富邑葡萄酒集团(Treasury Wine Estates Limited)2月15日公布，在截至2021年12月31日的六个月内，净利润同比下降7.5%，原因是中共国对澳洲酒征收关税，以及中共病毒（新冠病毒COVID-19）疫情的冲击，对中共国的销售额，从一年前的7,800 万澳元跌至200万澳元( 140万美元)。
 
-华盛顿大学一项研究指出，感染中共病毒（新冠病毒Covid-19）后会增加患心脏和血管疾病的风险，该研究发表在美国一家医学杂志上。
+但富邑葡萄酒集团执行长福特(Tim Ford)16日表示，其它市场，特别是马来西亚、新加坡和泰国的强劲表现，在一定程度上抵消了在中共国业务的萎缩。
 
-7日，美国华盛顿大学利用2020年3月至2021年1月在一家退伍军人医院里，对感染中共病毒后存活30天以上的约15万人的数据发布了研究结果。
+澳洲和中共国的关系，从激烈的口水战蔓延到贸易关系。中共国对澳洲进口葡萄酒课征高关税。牛肉、大麦、煤炭和其他主要出口产品也成为中共国报复的目标。
 
-无论是严重还是轻微者，感染后第一年患20种心脏和血管系统疾病的风险增加。 与感染前的数据相比，心脏病发作增加了63%，中风增加了52%，心力衰竭增加了72%。调查对象主要是退伍军人的白人男性，他宣称，“一般来说，数据虽然存在缺陷，但足以敲响警钟”。
+在实施这项关税前，中共国的销售额在高峰时期占澳洲葡萄酒出口的41%，引发了人们担心贸易战可能会摧毁澳洲葡萄酒产业。中共国对澳洲葡萄酒课征高达116.2%至218.4%的高关税。世界贸易组织(W WTO)正在审理澳洲提出的申诉。
 
-信息来源：
+财务长杨恩(Matt Young)16日在财报视频会议上表示，其他市场的葡萄酒出口水平依然强劲。
 
-[コロナ感染後 心臓や血管系の疾患リスクが上昇する可能性を指摘 ワシントン大学](https://news.yahoo.co.jp/articles/4559c508abfad26cde290f3000a83079e125519f)
+富邑葡萄酒集团还引用其半年收益报告强调一些证明是有利可图的创新，例如一种非同质化代币(Non-Fungible Token, NFT)标价为13万美元的稀有葡萄酒，在12秒内销售一空。
+
+消息来源：[不必靠中國 澳洲葡萄酒商從關稅制裁中脫困](https://www.rti.org.tw/news/view/id/2124683)
 
 *编辑：东京樱花团/知了知了
-发布：东京樱花团/老黑*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
+发布：东京樱花团/平安卿卿*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
