--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,30 +1,22 @@
 ---
-title: 中日财经爆┃世茂集团欲22亿出售上海深坑酒店还债
+title: 樱花FM┃中美贸易战：数据曝北京采购承诺存巨大缺口
 ---
-`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2011907/)
+`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2012270/)
 
-撰稿：东京樱花团/喜马拉雅的微尘
-![](https://assets.gnews.org/wp-content/uploads/2022/02/图片2-13.png)[图片来源](https://www.google.com.hk/imgres?imgurl=https://i.tlaidesign.com/uploads/2019/02/1551063163140379.jpg&amp;imgrefurl=https://www.tlaidesign.com/shanghai-sheshan-shimao-shenkeng-intercontinental-architecture-design-jade-qa.html&amp;tbnid=pktmcxhEVWGMHM&amp;vet=12ahUKEwjv3eewo4P2AhXaEKYKHQxfDooQMygFegUIARCOAQ..i&amp;docid=iM0OKIU9I_whJM&amp;w=1349&amp;h=900&amp;q=%E4%B8%8A%E6%B5%B7%E4%BD%98%E5%B1%B1%E4%B8%96%E8%8C%82%E6%B4%B2%E9%99%85%E9%85%92%E5%BA%97&amp;ved=2ahUKEwjv3eewo4P2AhXaEKYKHQxfDooQMygFegUIARCOAQ)
-继以45亿元出售上海外滩茂悦大酒店之后，地产巨头世茂集团近日又因“挂牌22.5亿元出售深坑酒店”上了热搜。
+音频：东京樱花团/战友520
+![](https://lh4.googleusercontent.com/wZ5DXCRhAE5R6Sn11uIIh4BlJ-mxMpOmQQtlx7z7o3RwoFb2M17H9Dnr1nz0wl2WoASTCrlJ2BveiCwh1q1rcmswLyyqMcdut_-SP2KrPW2gC_2qL9SqRq95fjWAdrk3HneNqk7s)
+美国12月对中共国货品出口下降，远远未兑现前总统川普时期中美两国达成的“第一阶段”贸易协议中作出的两年采购承诺。美国普查局周二（2月8日）表示，美国2021年与中共国的货物贸易逆差扩大450亿美元或14.5%，达到3,553亿美元，是2018年创下4,182亿美元记录以来的最大逆差。而2020年对华贸易逆差则达到3,103亿美元，在疫情的影响下创下了10年来最低。该数据显示，中共国远远没有兑现在2017年基础上，增购价值2,000亿美元的美国农产品、制成品、能源和服务的承诺。
 
-近期网传世茂集团将出售上海佘山世茂深坑酒店的消息，并标明“现报价22.5亿对外出售”。该报价信息与此前流出的世茂集团待售资产清单信息一致，该酒店挂牌其评估值为22.5亿元，抵押融资余额为20.73亿元。
+美国前总统川普执政时，签署的第一阶段贸易协议阻止了世界上最大的两个经济体持续了将近三年的贸易战进一步升级，但保留了双方针对对方数千亿美元的产品进口实施的关税。该贸易协议于2021年底到期，中共国承诺将在两年内额外购买价值2,000亿美元的美国商品，但并未实现此目标。
 
-公开资料显示，深坑酒店的全称为上海佘山世茂洲际酒店，历时12年打造、总投资超过20亿元，2018年11月正式营业，位于上海市西南郊佘山景区的天马山深坑内，是世茂集团在废弃的采石矿坑壁打造的自然生态酒店。该酒店海拔负88米，是全球人工海拔最低的五星级酒店，还被美国国家地理频道《世界伟大工程巡礼》评为“世界十大建筑奇迹”酒店。
+彼得森国际经济研究所资深研究员鲍恩（Chad Bown）对美国普查局的数据分析称，中共国仅兑现了两年商品和服务采购目标的57%。他指出，北京对第一阶段所协议的商品、能源和服务的购买规模甚至不足以回到中共国2017年对美国采购的基线水平。受到报复性关税影响，中共国对美国商品的采购在2018和2019年减少了43%。鲍恩说：“换句话说，中共国没有购买协议中承诺的额外2000亿美元的出口。”并称，中共国对美国农产品的购买量超过了2017年的基线规模，但只达到了739亿美元，是该类产品两年增购目标的83%。
 
-财务数据显示，2018年深坑酒店收入约为3200万元，2019年实现收入约2.79亿元，2020年实现收入约2.65亿元；2021年上半年实现收入约1.34亿元。近三年累计收入超6亿元。
+向中共国出口服务曾是美国贸易的亮点之一，但由于中共病毒疫情削减了中共国赴美旅游和商务旅行，中共国学生前往美国留学的数量也减少，服务出口急剧下降，只达到目标的52%。美国官员周一早些时候还告诉路透社，他们希望中共政府采取具体行动，弥补其购买承诺的不足。若中国官员“显示出就其购买承诺达成协议严肃看待”，他们将继续目前的会谈。
 
-对于世贸集团出售历时十几年打造的豪华酒店，原因则是欠债太多了。
+文字版原文：[中美贸易战：数据曝北京采购承诺存巨大缺口](https://gnews.org/zh-hans/1979734/)
 
-根据去年上半年年报数据，截至上半年世茂集团的总负债达4636.33亿，其中1200.71亿元为长期借款，短期借款为444.43亿，而其账上的现金及现金等价物仅有747.69亿。
-
-另据瑞银报告，世茂集团在2022全年将有价值44亿美元的境内、境外债券以及境外银团贷款到期，且不包括1200亿元人民币的表外债务，世茂集团的负债压力极大。
-
-信息来源：
-
-[22.5亿出售深坑酒店？昔日巨头世茂集团最新回应](https://finance.sina.com.cn/chanjing/gsnews/2022-02-14/doc-ikyamrna0595561.shtml)
-
-*校对：东京樱花团/知了知了
-发布：东京樱花团/tdownc2p*
+*编辑：东京樱花团/asket
+发布：东京樱花团/平安卿卿*
 ![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
  
 
