--- a/gnews/6.md
+++ b/gnews/6.md
@@ -1,30 +1,28 @@
 ---
-title: 有声｜加拿大安省省长：打一针还是打十针皆不能避免感染
+title: 有声｜大陆中小银行股权拍卖遇冷 近六成流拍
 ---
-`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013482/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013568/)
 
 **By:秘翻新闻**
 
-**2022-02-16**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/9-14.png)图片来源 Frank Gunn／加通社
-大纪元02月16日消息。加拿大安大略省省长福特在日前表示，他强烈反对施加任何新的防疫限制或重新启用疫苗护照系统，政府应该还安省人以正常的生活。同时，他还强调无论打多少针疫苗，人们都有可能被感染中共病毒Covid-19。
+***2022-02-16***
+![](https://assets.gnews.org/wp-content/uploads/2022/02/7777777.jpg)
+[大纪元](https://www.epochtimes.com/gb/22/2/15/n13578120.htm)2月15日消息。在大陆互联网拍卖平台，有很多城商行、农商行等的中小银行股在拍卖，但有近六成流拍。
 
-据了解，福特在周二发表讲话时表示，公众需要恢复正常生活，继续接种疫苗没有什么价值，并指出第三剂疫苗完全不能提供避免奥米炕感染的有效保护。他说，打一针还是打十针都一样，人们仍然可能感染中共病毒。人们只需要小心，始终确保洗手并继续前进。
+据阿里拍卖网2月15日显示，中原银行5000万股挂在网上变卖，同时，还有宁波宁海农村商业银行股份有限公司4077股的股权、曲靖市商业银行股份有限公司2,843,750元股权、泉州农村商业银行股份有限公司内部员工股949,66股等几十家银行股权在拍卖。
 
-福特强调，公众需要尊重那些拒绝接种中共病毒疫苗的人。
+但在当前银行股权拍卖市场中，流拍已成为一个明显现象。据《第一财经》记者统计，自2月以来，共有92笔银行股权被拍卖，其中，流拍的占比近六成。
 
-据悉，加拿大安省此前已经宣布，将于3月1日起全面取消疫苗护照措施，成为又一个反对中共病毒疫苗暴政的城市。
+光大银行金融市场部分析师周茂华认为，银行股权拍卖出现流拍主要有三方面原因，其中，最主要的还是与银行自身经营状况、前景有关。
 
-新闻来源[**https://www.epochtimes.com/gb/22/2/15/n13579348.htm**](https://www.epochtimes.com/gb/22/2/15/n13579348.htm)
+另据《财经》杂志第632期刊发的《一年“消失”20多家银行，4000家中小行路在何方？》一文显示：“2020年以来，已经有20多家中小银行完成或正在经历合并重组。”
 
-(秘翻新闻 Noemi 编译报道)
+(秘翻新闻 二丫 编译报导)
 
-发布 : 恩典
+发布:星星
 
 * * *
 ![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
-
-
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
