--- a/gnews/7.md
+++ b/gnews/7.md
@@ -1,26 +1,51 @@
 ---
-title: 中共国2亿人口被冠以“灵活就业”之名
+title: 俄罗斯撤军遭遇北约质疑，乌克兰防务网站仍被黑
 ---
-`澳喜特战旅Gnews` [轉載自GNews](https://gnews.org/zh-hans/2013460/)
+`Shuizhuyu` [轉載自GNews](https://gnews.org/zh-hans/2013564/)
 
-撰稿：子喜太一
-![](https://assets.gnews.org/wp-content/uploads/2022/02/161-2.png)图片来自网络
-解决失业问题是世界各国政府执政的重中之重。失业人口直接影响一个国家的经济、政治的稳定，任何一届政府上台都希望自己的任期内把失业人口最大化缩减，以彰显自己的执政能力。
+信息来源： 路透社
 
-然而，在中共国，面对着2亿失业者、临时工、以及辞职人员，CCP只用一句“灵活就业”就轻轻松松把这一群体从地球上抹掉了。CCP根本不去关心这2亿没有稳定收入来源的人，将如何吃饭？如何活下去？却避重就轻地要探讨如何给这2亿人社保和医疗等权益！一个没有能力给老百姓饭吃的政府，还能给老百姓权益？这不是瞪眼胡说八道，漫天打口炮吗？
+翻译/整理： 意大利罗马达芬奇农场 Shuizhuyu
 
-指望CCP解决就业问题，那简直是痴人说梦！不灭掉CCP，中共国任何问题都解决不了，因为中共所有问题的源头都是CCP。中共国和美国贸易战几年，使得南方大批工厂因失去订单而破产，CCP向全世界放出病毒，使得几十个发达国家主动和CCP断交，大批世界一流企业从中共国撤走，上游产业链断裂，导致整个市场断血，失业潮不断，2亿“灵活就业”人口绝不是最终数字，还会持续暴增！
+- ![](https://assets.gnews.org/wp-content/uploads/2022/02/3RUWQELXG5NLZNTUWXTYVDKON4.jpg)
 
-14亿老百姓是CCP圈养的猪狗和待割的韭菜，CCP从来没有把老百姓当人看过，从来不会真的关心老百姓的死活，老百姓失业、吃不上饭、饿死，CCP眼皮都不会跳一下，只要CCP政权稳定，没人造反，CCP就持续全世界大撒币以巩固自己的执政地位！
 
-14亿老百姓需迅速觉醒，站起来灭掉CCP，否则灾难可不只是失业吃不上饭，所有人都将成为CCP的祭品，活在炼狱！
+图片来源： 路透社
 
-灭掉CCP！灭掉CCP！
+俄罗斯周三表示，更多围绕乌克兰的军队正在撤离，但北约敦促莫斯科证明它正在撤退，并表示有迹象表明更多军队正在撤离。
 
-新闻参考链接：[联合新闻网](https://udn.com/news/story/7333/6096553?from=udn-catebreaknews_ch2)
+英国与美国一起表示，尚未确信撤军是真实的，而乌克兰国防部表示，一场前所未有的网络攻击已经进入第二天。俄罗斯表示与任何袭击无关。
 
-*发稿：mgjxs*
-![](https://assets.gnews.org/wp-content/uploads/2022/02/TUBIAO-X.jpg)
+俄罗斯国防部发布了视频，称其显示坦克、步兵战车和自行火炮部队离开克里米亚半岛，莫斯科于 2014 年从乌克兰手中夺取了克里米亚半岛。
+
+北约秘书长延斯·斯托尔滕贝格（Jens Stoltenberg）表示，撤军是受欢迎的，但并没有证据证明调动部队，“俄罗斯是否撤军还有待观察……我们看到的是他们增加了部队的数量，而且更多的部队正在路上。”
+
+自去年 11 月以来，在克里米亚半岛的部署是俄罗斯军队在乌克兰北部、东部和南部大规模集结的一部分，这促使伦敦和华盛顿最近几天警告说，俄罗斯的入侵似乎迫在眉睫。
+
+俄罗斯周二宣布一些部队在完成演习后开始返回基地时，嘲笑这些警告是歇斯底里的战争宣传。周三，克里姆林宫表示，北约说没有撤军的证据是错误的，普京强调他希望谈判。
+
+军事分析人士说，俄罗斯远东地区本周在白俄罗斯参加大型演习的部队是否会返回数千英里外的基地，这将是重大回调的一个关键指标。
+
+美国总统乔·拜登周二表示，仍有超过 15 万俄罗斯军队集结在乌克兰边境附近。华盛顿尚未证实有任何撤军。冲突地区仍然非常危险。
+
+英国国防部长也表示， 我们没有看到任何在撤军证据， 我们观察到的结果和克里姆林宫的言论相反。
+
+在乌克兰人举起国旗奏国歌的团结场面的同时， 乌克兰也报告了黑客攻击。 乌克拉国防部表示， 黑客仍在轰炸其网站，并已成功发现程序代码中的漏洞。虽然基辅没有说出事件幕后黑手的名字，但一份声明暗示它正在将矛头指向俄罗斯。
+
+俄罗斯联邦安全局没有立即回复路透社的置评请求。
+
+拜登周二在白宫的电视讲话中说：“如果俄罗斯通过对我们公司或关键基础设施的破坏性网络攻击等不对称手段攻击美国或我们的盟国，我们准备做出回应。”
+
+俄罗斯一直否认计划入侵乌克兰，但一直在敦促西方提供一系列安全保证，包括承诺其邻国乌克兰永远不会加入北约。
+
+美国及其盟国对此予以否认，但表示愿意谈论军备控制和建立信任措施。
+
+普京周二在会见德国总理奥拉夫·舒尔茨后表示，西方无视俄罗斯的主要要求，但莫斯科准备继续就安全问题进行对话。
+
+🔗 [俄罗斯撤军遭遇北约质疑，乌克兰防务网站仍被黑](https://www.reuters.com/world/europe/russian-pullout-meets-uk-scepticism-ukraine-defence-website-still-hacked-2022-02-16/)
+
+编辑发布： Shuizhuyu
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
