--- a/gnews/8.md
+++ b/gnews/8.md
@@ -1,25 +1,28 @@
 ---
-title: 樱花FM&#124;法国记者专访彭帅 其安全仍令人担忧
+title: 有声｜中共图以“港区国安法”灭声 歌手阮民安遭港警带走
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013432/)
+`秘密翻译组-即时新闻播报组` [轉載自GNews](https://gnews.org/zh-hans/2013556/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/xk0l8iBqLdMCPmMZPsHR_3aHxiFU_jc243-J12AAYB2PM-3AOc_bBp1vc5XfH7E3SYtjMa-MCmZrPFT-dKhvvKo_-VCjMFd6ffW6WYiy_0SJi-2kv_SEojAlpPLQ6JpfHhYpFsFu)
-在法国体育日报《团队报》发表与彭帅的独家专访隔天，其中一名参与访问的记者文图亚克 (Marc Ventouillac)周一 (2月8日)向美联社表示，他不确定彭帅是否可以自由地说和做她想做的事。他说：“这次采访并不能证明彭帅没有问题。”
+**By:秘翻新闻**
 
-文图亚克也说，中国的意图对他来说是清楚的。他认为，在举办北京冬奥会之际让彭帅接受西方媒体采访，显示中共官员希望平息争议，避免彭帅事件的争议影响到冬奥赛事。
+**2022-02-16**
+![](https://assets.gnews.org/wp-content/uploads/2022/02/11-17.png)图片来源 香港歌手阮民安資料照大纪元
+据《大纪元》2月16日报道，15日，香港歌手阮民安(英文名Tommy)遭港警带走。警方声称他涉嫌违反“港区国安法”，包括“做出 煽动意图的行为和洗黑钱罪”。
 
-他说：“这是中共国奥委会宣传的一部分。他们可以透过彭帅与一家欧洲大报的采访来证明彭帅没有任何问题。”彭帅在采访刊登的隔天与国际奥委会主席巴赫 (Thomas Bach) 一同出席北京冬奥自由式大跳台决赛，观看美国出生的中共国选手谷爱玲 (Eileen Gu) 夺金。
+据报道，15日下午，香港国安处李桂华在记者会上指阮民安于去年11月曾在线上演唱会上唱含有“光复香港 时代革命”口号的歌曲，对案件裁决不满时咒骂法官，对“因工殉职”或受伤的警察进行嘲笑及幸灾乐祸， 并在香港的第5波疫情爆发期间，与政府接种疫苗的措施“大唱反调”，多次发表关于拒绝打针的帖文。
 
-文图亚克表示：“我认为，对于中国奥委会、中国共产党和中国的许多人来说，努力证明没有外界所谓的彭帅事件是很重要的。彭帅看起来很健康。”
+41岁的阮民安曾是香港组合E-kids成员，自2019年香港爆发“反送中” 运动以来，他多次批评港警对港人采用暴力手段，并批评港府沦为中共的帮凶。
 
-他提到，法国《团队报》原本只得到半小时的访问时间，但最后他们却得到将近两倍的访问时间，且能问的问题比原先多出8至10个。除了文图亚克之外，国际女子网球协会 (WTA) 主席西蒙（Steve Simon）周一 (2月7日) 也发布声明，表示该访问并未消除国际女子网球协会对彭帅安危的疑虑。他在声明中表示：“无论是在采访中或出席冬奥会，看到彭帅现身总是令人高兴的。然而近期的采访并没有减轻我们对她11月2日发的帖子的担忧。”。
+他近日为一位来自单身家庭的小妹妹众筹， 受助的小妹妹涉所谓的“暴动案件”，现正保释等候判刑，而对方的母亲因癌症需要庞大的医药费。他一直都在努力支援对方，因能力有限，于是发起“蝴蝶酥”义卖活动，来帮助对方。
 
-文字版原文：[法国记者专访彭帅 其安全仍令人担忧](https://gnews.org/zh-hans/1978542/)
+新闻来源 [**https://www.epochtimes.com/b5/22/2/15/n13579182.htm**](https://www.epochtimes.com/b5/22/2/15/n13579182.htm)
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+(秘翻新闻 采集 / 撰稿 Milojai)
+
+发布 : 恩典
+
+* * *
+![](https://assets.gnews.org/wp-content/uploads/2022/02/IMAGE-2021-12-13-113746.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
