--- a/gnews/9.md
+++ b/gnews/9.md
@@ -1,21 +1,48 @@
 ---
-title: 樱花FM&#124;日本皇族首现中共病毒感染者
+title: 简说历史：世纪骗局之：1981~1985（改革开放）(四)
 ---
-`樱花FM` [轉載自GNews](https://gnews.org/zh-hans/2013431/)
+`西班牙巴塞罗那喜悦农场` [轉載自GNews](https://gnews.org/zh-hans/2013554/)
 
-音频：东京樱花团/战友520
-![](https://lh3.googleusercontent.com/mg9RWRGgxL2gdmYnDmRGgSQqKJYgLq9LeIXSI0oMoPWC2qJkCj38RZrc_LvPDcd68BESfLaKiukGehjlil_LsFwZdJOLskEFSThEon3GuQBGUGPFG8S7UOME2tcmDPj7H5I3k4cH)
-２月９日共同通迅社消息：9日，日本皇室机构宣布，38岁的瑶子是已故宽仁亲王的二女儿，三笠宮崇仁亲王和同妃百合子的孙女，感染中共病毒（新冠病毒）入院皇宫内的皇室医院，又因发现她患有肺炎而被转到东京文京区的东京大学医院。
+编辑：一颗星星
 
-瑶子公主于7日左右感觉喉咙痛，8日下午，PCR测试呈阳性。由于她在入院的皇室医院进行检查时，发现患了肺炎，被认定为为中度感染症状。
+【接上篇：世纪骗局之：1981~1985（改革开放）(三)】
 
-日本皇室，日常生活基本上是跟外界绝缘的。因此，瑶子公主的感染令人费解。另外，既然皇族出现了感染者，那么其他皇族成员会不会有密切接触者呢？会不会再出现感染者呢？
+**“严打”运动——中共的“依法治国”？**
 
-文字版原文：[日本皇族首现中共病毒感染者](https://gnews.org/zh-hans/1978642/)
+1983年8月25日，中共中央发出《关于严厉打击刑事犯罪的决定》。
 
-*编辑：东京樱花团/asket
-发布：东京樱花团/平安卿卿*
-![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
+这一场由中共高层发动的“严厉打击刑事犯罪的活动”，从1983年8月开始，一直延续1986年10月，加上收尾工作，历时3年零五个月。其影响一直延续至今，它有一个广为人知的简称——“严打”。
+
+关于严打的起因，坊间有诸多的传闻。有的说，是缘于河北省唐山市的“菜刀队”；也有人说，是缘于内蒙古自治区呼伦贝尔盟喜桂图旗（今牙克石市）的“六一六”案件；还有人说，是缘于杨得志将军（对越自卫反击战的云南方面军总指挥）的女婿在郑州与人发生冲突，被某当地官二代带人群殴致死，小平同志的爱将痛失爱婿，“矮司令”得知后摔杯震怒，随即决定在全国实施“严打”……
+
+当然这类坊间的传闻有许多，真正的原因到底是什么？笔者也不得而知。然而就当时的发展大环境而言，文革结束之后的大量知青返城，待业、失业者众多。中共执政的前三十年把中国的老百姓折腾得死去活来，加之改革开放之际，追求新生活方式、赶时髦、思想开放的年轻人越来越多……而中共最怕的便是老百姓思想上的开化。刚从“文革”苟且偷生出来的这些中共的遗老遗少们，是决计不会让老百姓在思想上有所变化的，以斗争和运动起家为本质的中共政权，自然是对中国的百姓们“下得去狠手”的。正如，在1983年“严打”动员会上，新上任的公安部部长刘复之称，严打“是继1950年至1952年镇压反革命运动之后，坚持人民民主专政的又一具有历史意义的里程碑”。以杀人著称的“镇反运动”为标杆，并要建立新的“里程碑”。中共政权嗜血运动本质尽显，公审大会、游街示众，立即执行死刑的犯人比比皆是……
+
+又一场血雨腥风的运动席卷中国，在中共以“维持社会治安，保护人民生命财产安全”的借口下，在邓小平“可抓可不抓的要抓，可杀可不杀的要杀”的语录下，中华大地上又留下了无数个冤魂。而受害最严重的，正是那些追求新生活方式，思想逐渐开放的年轻人们，因为跳交际舞，因为自由发生性关系，因为调情打闹而被抓、被判、被枪毙……
+
+坊间流传的冤案错案数不胜数，诸如：有一个青年，因和人打赌当街拦住姑娘亲嘴，被毙了；郑州有一对恋人，被女方家人强行拆散，男的不甘心，女方家长说服女儿告他强奸，被毙了；一男青年酒後在路边撒泡尿，被判流氓罪，送新疆劳改了；20岁的北京人，因抢帽子、砸玻璃、打架，以流氓罪被判死刑；一男青年为其女友拍了一些穿着较为暴露的照片，男青年被判处死刑，女青年被判了有期徒刑；一个工人，因为偷看了两次女厕所被抓，被毙了；一人抢了半平板车黄瓜，结果被毙了……
+
+可以考证的也不在少数，其中最著名的案件之一便是西安的“马燕秦案”。马燕秦，离异单身，好交际、喜欢跳舞，经常在家中举办“家庭舞会”。前前后后有几百人参加过其“家庭舞会”，有些男人还和她有过亲密的肉体接触（性关系）。1983年严打开始，警方以“流氓罪”将马燕秦收监，而且陆陆续续抓审了300多人。由于案件牵扯人数太多，审理一时难以完成，一直到1984年才结案。虽然躲过了“严打”最高峰，但是还是枪毙了以马燕秦为首的三个人，另外有三人死缓，两人无期徒刑，有期徒刑则多得不值得一提了。根据陕西省志的审判志记载，马燕秦被认定“长期有业不就，将其家作为主要据点，纠集流氓分子多次举办流氓舞会，并经常勾引男女青年，出入其他流氓舞场，教唆、诱发多种形式的流氓犯罪。”
+
+“愁啊愁，愁就白了头……”在80年代广为流行的“监狱歌曲”正是迟志强的代表作。迟志强，当时的大明星，主演过不少电影，名气很大。在南京拍摄电影的过程中认识了一位大姐，并发生了性关系。之后通过大姐结识了不少年轻人。他们经常在一起聚会、跳舞，尤其是他们还喜欢传唱邓丽君的《甜蜜蜜》。之后被邻居举报“乱搞男女关系、跳光屁股舞”等。随后被媒体曝光，引起广泛关注，最后被南京市中级人民法院以“流氓罪”判处有期徒刑四年……
+
+“严打”开始后，为配合中共“从重、从快”判决处死的目的，“人大”和“两高”（最高法院和最高检察院）通知“新规”，完全无视已经生效实施的刑法和刑诉法。如死刑上诉期由十日缩短为三日；将死刑审判权授权给基层法院等……再加上中共高层不在法律框架下的“严打指示”，下面的执法如脱缰的野马，完全不受任何约束，草菅人命、滥杀无辜。
+
+根据中共的官方数据，83年的“严打”运动，全国“查获各种犯罪团伙”19.7万个、成员87.6万人；共逮捕177.2万人，判刑174.7万人，劳动教养32.1万人。其中，第一阶段逮捕102.7万人，判死刑的2.4万人。
+
+众所周知，中共所能公布的数据向来都是假的。网传中共内部文件记录着这场耗时三年多的“严打”运动共有96万人被杀。
+
+几百万人被判刑，近百万人被杀……一场在“改革开放”中的“严打”运动之后，千千万万个家庭就这样被毁掉了……真实的数字到底是多少？相信在不久的将来，中共政权崩塌之后，所有的真相终会大白于天下。
+
+【接下篇：世纪骗局之：1981~1985（改革开放）(五)】
+
+* * *
+
+审核：Aries的星
+校对：阿伯塔
+发布：花羽
+
+![](https://assets.gnews.org/wp-content/uploads/2022/02/GNEWS_CH.-1-3-2.jpeg)
+
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
